--- a/results/1990.md
+++ b/results/1990.md
@@ -42,8 +42,11 @@ FLU3-CONNAUGHT LABORATORIES | 59
 PPV-MERCK & CO. INC. | 51
 FLUX-PFIZER\WYETH | 46
 PPV-PFIZER\WYETH | 44
+OPV-UNKNOWN MANUFACTURER | 43
 FLU3-PARKE-DAVIS | 29
+DTP-UNKNOWN MANUFACTURER | 28
 TD-PFIZER\WYETH | 22
+FLUX-UNKNOWN MANUFACTURER | 20
 DT-LEDERLE LABORATORIES | 17
 MEA-MERCK & CO. INC. | 16
 DTP-MASS. PUB HLTH BIOL LAB | 16
@@ -51,8 +54,11 @@ TD-SCLAVO | 14
 TYP-PFIZER\WYETH | 12
 TTOX-PFIZER\WYETH | 12
 TD-CONNAUGHT LABORATORIES | 12
+MMR-UNKNOWN MANUFACTURER | 11
+HIBV-UNKNOWN MANUFACTURER | 11
 DTP-MICHIGAN DEPT PUB HLTH | 10
 HIBV-MERCK & CO. INC. | 8
+TD-UNKNOWN MANUFACTURER | 7
 RAB-PASTEUR MERIEUX INST. | 6
 MER-MERCK & CO. INC. | 6
 DT-CONNAUGHT LABORATORIES | 6
@@ -60,7 +66,11 @@ DT-PFIZER\WYETH | 5
 TTOX-SCLAVO | 5
 FLU3-LEDERLE LABORATORIES | 5
 DT-SCLAVO | 4
+RAB-UNKNOWN MANUFACTURER | 3
+HEP-UNKNOWN MANUFACTURER | 3
+TYP-UNKNOWN MANUFACTURER | 3
 YF-CONNAUGHT LABORATORIES | 2
+PPV-UNKNOWN MANUFACTURER | 2
 TTOX-LEDERLE LABORATORIES | 2
 HBPV-PFIZER\WYETH | 2
 CHOL-PFIZER\WYETH | 2
@@ -69,10 +79,14 @@ CHOL-LEDERLE LABORATORIES | 2
 TD-MASS. PUB HLTH BIOL LAB | 2
 IPV-CONNAUGHT LTD. | 2
 MEN-CONNAUGHT LABORATORIES | 2
+DT-UNKNOWN MANUFACTURER | 2
 RAB-MICHIGAN DEPT PUB HLTH | 1
+YF-UNKNOWN MANUFACTURER | 1
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 1
+TTOX-UNKNOWN MANUFACTURER | 1
 MU-MERCK & CO. INC. | 1
 SMALL-PFIZER\WYETH | 1
+UNK-UNKNOWN MANUFACTURER | 1
 TTOX-CONNAUGHT LABORATORIES | 1
 DT-MASS. PUB HLTH BIOL LAB | 1
 DT-MICHIGAN DEPT PUB HLTH | 1
@@ -100,8 +114,10 @@ DTP-LEDERLE LABORATORIES | 40
 DTP-CONNAUGHT LABORATORIES | 10
 HIBV-CONNAUGHT LABORATORIES | 7
 MMR-MERCK & CO. INC. | 4
+OPV-UNKNOWN MANUFACTURER | 3
 FLU3-CONNAUGHT LABORATORIES | 3
 HBPV-PFIZER\WYETH | 2
+DTP-UNKNOWN MANUFACTURER | 2
 DTP-MASS. PUB HLTH BIOL LAB | 2
 FLU3-PARKE-DAVIS | 2
 FLUX-PFIZER\WYETH | 2
@@ -114,6 +130,7 @@ DTP-MICHIGAN DEPT PUB HLTH | 1
 HEP-MERCK & CO. INC. | 1
 TD-LEDERLE LABORATORIES | 1
 FLU3-LEDERLE LABORATORIES | 1
+HIBV-UNKNOWN MANUFACTURER | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
@@ -159,38 +176,52 @@ FLU3-CONNAUGHT LABORATORIES | 185
 FLUX-PFIZER\WYETH | 155
 PPV-MERCK & CO. INC. | 137
 PPV-PFIZER\WYETH | 122
+OPV-UNKNOWN MANUFACTURER | 113
 FLU3-PARKE-DAVIS | 78
+DTP-UNKNOWN MANUFACTURER | 72
 MEA-MERCK & CO. INC. | 68
+FLUX-UNKNOWN MANUFACTURER | 57
 TD-PFIZER\WYETH | 55
 TYP-PFIZER\WYETH | 47
 TD-SCLAVO | 46
 TD-CONNAUGHT LABORATORIES | 41
 DT-LEDERLE LABORATORIES | 38
+MMR-UNKNOWN MANUFACTURER | 35
 TTOX-PFIZER\WYETH | 28
+HIBV-UNKNOWN MANUFACTURER | 28
 MER-MERCK & CO. INC. | 28
 DTP-MICHIGAN DEPT PUB HLTH | 27
 DTP-MASS. PUB HLTH BIOL LAB | 26
 RAB-PASTEUR MERIEUX INST. | 25
+TD-UNKNOWN MANUFACTURER | 23
 HIBV-MERCK & CO. INC. | 22
 DT-CONNAUGHT LABORATORIES | 18
 FLU3-LEDERLE LABORATORIES | 17
 DT-PFIZER\WYETH | 15
 TTOX-SCLAVO | 11
+PPV-UNKNOWN MANUFACTURER | 10
+TYP-UNKNOWN MANUFACTURER | 10
 DT-SCLAVO | 8
 TD-MASS. PUB HLTH BIOL LAB | 8
 IPV-CONNAUGHT LTD. | 7
 HBPV-PFIZER\WYETH | 6
 MEN-CONNAUGHT LABORATORIES | 6
 RAB-MICHIGAN DEPT PUB HLTH | 5
+YF-UNKNOWN MANUFACTURER | 5
 CHOL-PFIZER\WYETH | 5
+HEP-UNKNOWN MANUFACTURER | 5
+DT-UNKNOWN MANUFACTURER | 5
 TTOX-LEDERLE LABORATORIES | 4
 HIBV-LEDERLE PRAXSIS | 4
 TTOX-CONNAUGHT LABORATORIES | 4
+RAB-UNKNOWN MANUFACTURER | 3
 MU-MERCK & CO. INC. | 3
 CHOL-LEDERLE LABORATORIES | 3
 DT-MICHIGAN DEPT PUB HLTH | 3
 YF-CONNAUGHT LABORATORIES | 2
+TTOX-UNKNOWN MANUFACTURER | 2
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 1
 SMALL-PFIZER\WYETH | 1
+UNK-UNKNOWN MANUFACTURER | 1
 DT-MASS. PUB HLTH BIOL LAB | 1
 ---
