--- a/results/1991.md
+++ b/results/1991.md
@@ -45,6 +45,8 @@ HIBV-MERCK & CO. INC. | 123
 PPV-MERCK & CO. INC. | 115
 TD-PFIZER\WYETH | 114
 DTP-MICHIGAN DEPT PUB HLTH | 108
+OPV-UNKNOWN MANUFACTURER | 102
+DTP-UNKNOWN MANUFACTURER | 91
 PPV-PFIZER\WYETH | 89
 FLU3-PARKE-DAVIS | 85
 RUB-MERCK & CO. INC. | 82
@@ -55,30 +57,46 @@ MEA-MERCK & CO. INC. | 51
 RAB-PASTEUR MERIEUX INST. | 47
 TD-SCLAVO | 42
 DT-CONNAUGHT LABORATORIES | 39
+HIBV-UNKNOWN MANUFACTURER | 31
 IPV-CONNAUGHT LTD. | 28
 DT-SCLAVO | 27
+MMR-UNKNOWN MANUFACTURER | 27
 MER-MERCK & CO. INC. | 24
 DT-LEDERLE LABORATORIES | 23
 TYP-BERNA BIOTECH, LTD. | 22
 FLU3-LEDERLE LABORATORIES | 22
 TTOX-PFIZER\WYETH | 20
 DT-PFIZER\WYETH | 20
+FLUX-UNKNOWN MANUFACTURER | 15
 TTOX-LEDERLE LABORATORIES | 13
 TTOX-MASS. PUB HLTH BIOL LAB | 13
+UNK-UNKNOWN MANUFACTURER | 10
 MU-MERCK & CO. INC. | 9
+TD-UNKNOWN MANUFACTURER | 9
 TD-MASS. PUB HLTH BIOL LAB | 8
 YF-CONNAUGHT LABORATORIES | 7
 TTOX-CONNAUGHT LABORATORIES | 7
 CHOL-PFIZER\WYETH | 7
 TD-MICHIGAN DEPT PUB HLTH | 6
+TTOX-UNKNOWN MANUFACTURER | 6
 TTOX-SCLAVO | 5
 DT-MICHIGAN DEPT PUB HLTH | 5
+DT-UNKNOWN MANUFACTURER | 4
+YF-UNKNOWN MANUFACTURER | 4
 PLAGUE-MILES LABORATORIES | 4
 MEN-CONNAUGHT LABORATORIES | 2
+MEN-UNKNOWN MANUFACTURER | 2
+TYP-UNKNOWN MANUFACTURER | 2
 HBPV-PFIZER\WYETH | 2
 MUR-MERCK & CO. INC. | 2
+HEP-UNKNOWN MANUFACTURER | 2
 IPV-PASTEUR MERIEUX INST. | 2
+RUB-UNKNOWN MANUFACTURER | 1
 RAB-MICHIGAN DEPT PUB HLTH | 1
+IPV-UNKNOWN MANUFACTURER | 1
+CHOL-UNKNOWN MANUFACTURER | 1
+PPV-UNKNOWN MANUFACTURER | 1
+BCG-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -108,11 +126,13 @@ FLU3-CONNAUGHT LABORATORIES | 6
 HIBV-MERCK & CO. INC. | 5
 HIBV-CONNAUGHT LABORATORIES | 3
 HEP-MERCK & CO. INC. | 3
+OPV-UNKNOWN MANUFACTURER | 2
 DTP-MICHIGAN DEPT PUB HLTH | 2
 MEA-MERCK & CO. INC. | 1
 DTP-MASS. PUB HLTH BIOL LAB | 1
 DT-SCLAVO | 1
 HBPV-PFIZER\WYETH | 1
+DTP-UNKNOWN MANUFACTURER | 1
 HEP-SMITHKLINE BEECHAM | 1
 PPV-MERCK & CO. INC. | 1
 DT-CONNAUGHT LABORATORIES | 1
@@ -167,6 +187,8 @@ PPV-PFIZER\WYETH | 329
 RUB-MERCK & CO. INC. | 308
 TYP-PFIZER\WYETH | 302
 HIBV-MERCK & CO. INC. | 295
+DTP-UNKNOWN MANUFACTURER | 290
+OPV-UNKNOWN MANUFACTURER | 281
 PPV-MERCK & CO. INC. | 265
 TD-LEDERLE LABORATORIES | 242
 MEA-MERCK & CO. INC. | 194
@@ -175,27 +197,43 @@ DTP-MASS. PUB HLTH BIOL LAB | 145
 TD-SCLAVO | 138
 DT-CONNAUGHT LABORATORIES | 102
 MER-MERCK & CO. INC. | 100
+HIBV-UNKNOWN MANUFACTURER | 99
 DT-SCLAVO | 85
 IPV-CONNAUGHT LTD. | 79
+MMR-UNKNOWN MANUFACTURER | 78
 DT-PFIZER\WYETH | 70
 FLU3-LEDERLE LABORATORIES | 63
 DT-LEDERLE LABORATORIES | 59
 TYP-BERNA BIOTECH, LTD. | 55
 TTOX-PFIZER\WYETH | 53
+FLUX-UNKNOWN MANUFACTURER | 42
 TTOX-MASS. PUB HLTH BIOL LAB | 41
 TTOX-LEDERLE LABORATORIES | 34
 CHOL-PFIZER\WYETH | 29
 YF-CONNAUGHT LABORATORIES | 25
+TD-UNKNOWN MANUFACTURER | 25
 TD-MICHIGAN DEPT PUB HLTH | 23
 TTOX-CONNAUGHT LABORATORIES | 22
+YF-UNKNOWN MANUFACTURER | 22
 MU-MERCK & CO. INC. | 21
+UNK-UNKNOWN MANUFACTURER | 20
+TTOX-UNKNOWN MANUFACTURER | 19
 TD-MASS. PUB HLTH BIOL LAB | 17
 TTOX-SCLAVO | 14
+DT-UNKNOWN MANUFACTURER | 13
 DT-MICHIGAN DEPT PUB HLTH | 13
+MEN-UNKNOWN MANUFACTURER | 11
+TYP-UNKNOWN MANUFACTURER | 11
 PLAGUE-MILES LABORATORIES | 11
 IPV-PASTEUR MERIEUX INST. | 10
 RAB-MICHIGAN DEPT PUB HLTH | 8
 HBPV-PFIZER\WYETH | 6
+BCG-UNKNOWN MANUFACTURER | 6
+HEP-UNKNOWN MANUFACTURER | 5
+CHOL-UNKNOWN MANUFACTURER | 5
+PPV-UNKNOWN MANUFACTURER | 4
 MEN-CONNAUGHT LABORATORIES | 3
 MUR-MERCK & CO. INC. | 3
+IPV-UNKNOWN MANUFACTURER | 2
+RUB-UNKNOWN MANUFACTURER | 1
 ---
