--- a/results/1992.md
+++ b/results/1992.md
@@ -49,7 +49,9 @@ PPV-PFIZER\WYETH | 124
 HIBV-MERCK & CO. INC. | 117
 DTP-MICHIGAN DEPT PUB HLTH | 116
 MEA-MERCK & CO. INC. | 97
+DTP-UNKNOWN MANUFACTURER | 92
 PPV-MERCK & CO. INC. | 88
+OPV-UNKNOWN MANUFACTURER | 88
 RAB-PASTEUR MERIEUX INST. | 84
 TYP-PFIZER\WYETH | 82
 TD-PFIZER\WYETH | 79
@@ -58,35 +60,54 @@ TD-LEDERLE LABORATORIES | 75
 RUB-MERCK & CO. INC. | 68
 DTAP-PFIZER\WYETH | 66
 DTP-MASS. PUB HLTH BIOL LAB | 63
+HIBV-UNKNOWN MANUFACTURER | 61
 FLU3-LEDERLE LABORATORIES | 51
 DT-CONNAUGHT LABORATORIES | 51
+HEP-UNKNOWN MANUFACTURER | 47
 TYP-BERNA BIOTECH, LTD. | 40
+MMR-UNKNOWN MANUFACTURER | 38
 DT-LEDERLE LABORATORIES | 36
 DT-PFIZER\WYETH | 35
 HIBV-CONNAUGHT LABORATORIES | 33
 IPV-PASTEUR MERIEUX INST. | 27
 YF-CONNAUGHT LABORATORIES | 25
 DT-SCLAVO | 25
+FLUX-UNKNOWN MANUFACTURER | 24
 IPV-CONNAUGHT LTD. | 24
 TTOX-PFIZER\WYETH | 20
 TTOX-CONNAUGHT LABORATORIES | 19
 MER-MERCK & CO. INC. | 18
 CHOL-PFIZER\WYETH | 16
+DT-UNKNOWN MANUFACTURER | 15
 TTOX-SCLAVO | 13
+TTOX-UNKNOWN MANUFACTURER | 10
+TD-UNKNOWN MANUFACTURER | 10
 DT-MICHIGAN DEPT PUB HLTH | 10
 TTOX-LEDERLE LABORATORIES | 10
 TD-MASS. PUB HLTH BIOL LAB | 10
 TD-MICHIGAN DEPT PUB HLTH | 9
+UNK-UNKNOWN MANUFACTURER | 9
 MEN-CONNAUGHT LABORATORIES | 8
 MU-MERCK & CO. INC. | 6
+TYP-UNKNOWN MANUFACTURER | 6
 PLAGUE-MILES LABORATORIES | 4
 RAB-MICHIGAN DEPT PUB HLTH | 4
+RUB-UNKNOWN MANUFACTURER | 3
+IPV-UNKNOWN MANUFACTURER | 3
+PPV-UNKNOWN MANUFACTURER | 3
+MEN-UNKNOWN MANUFACTURER | 2
 MUR-MERCK & CO. INC. | 2
 MM-MERCK & CO. INC. | 1
+CHOL-UNKNOWN MANUFACTURER | 1
 MEN-CONNAUGHT LTD. | 1
+PLAGUE-UNKNOWN MANUFACTURER | 1
+BCG-UNKNOWN MANUFACTURER | 1
 ADEN-PFIZER\WYETH | 1
+YF-UNKNOWN MANUFACTURER | 1
 SMALL-PFIZER\WYETH | 1
 CHOL-LEDERLE LABORATORIES | 1
+HBPV-UNKNOWN MANUFACTURER | 1
+RAB-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -117,8 +138,11 @@ FLU3-PARKE-DAVIS | 12
 MMR-MERCK & CO. INC. | 11
 HEP-MERCK & CO. INC. | 11
 HEP-SMITHKLINE BEECHAM | 7
+OPV-UNKNOWN MANUFACTURER | 7
+DTP-UNKNOWN MANUFACTURER | 7
 HIBV-MERCK & CO. INC. | 6
 FLU3-CONNAUGHT LABORATORIES | 6
+HIBV-UNKNOWN MANUFACTURER | 4
 FLU3-LEDERLE LABORATORIES | 4
 DTP-MICHIGAN DEPT PUB HLTH | 3
 PPV-MERCK & CO. INC. | 2
@@ -126,6 +150,9 @@ PLAGUE-MILES LABORATORIES | 2
 YF-CONNAUGHT LABORATORIES | 2
 PPV-PFIZER\WYETH | 2
 TYP-PFIZER\WYETH | 2
+UNK-UNKNOWN MANUFACTURER | 1
+MMR-UNKNOWN MANUFACTURER | 1
+DT-UNKNOWN MANUFACTURER | 1
 IPV-CONNAUGHT LTD. | 1
 DTP-MASS. PUB HLTH BIOL LAB | 1
 ---
@@ -181,7 +208,9 @@ DTP-MICHIGAN DEPT PUB HLTH | 371
 RAB-PASTEUR MERIEUX INST. | 332
 TD-SCLAVO | 325
 HIBV-MERCK & CO. INC. | 318
+DTP-UNKNOWN MANUFACTURER | 309
 MEA-MERCK & CO. INC. | 300
+OPV-UNKNOWN MANUFACTURER | 295
 TYP-PFIZER\WYETH | 282
 TD-PFIZER\WYETH | 281
 PPV-MERCK & CO. INC. | 268
@@ -189,33 +218,52 @@ TD-LEDERLE LABORATORIES | 259
 RUB-MERCK & CO. INC. | 254
 DTAP-PFIZER\WYETH | 191
 DTP-MASS. PUB HLTH BIOL LAB | 181
+HIBV-UNKNOWN MANUFACTURER | 172
 DT-CONNAUGHT LABORATORIES | 168
 FLU3-LEDERLE LABORATORIES | 162
+MMR-UNKNOWN MANUFACTURER | 135
 TYP-BERNA BIOTECH, LTD. | 123
 DT-LEDERLE LABORATORIES | 117
 HIBV-CONNAUGHT LABORATORIES | 117
+FLUX-UNKNOWN MANUFACTURER | 105
 YF-CONNAUGHT LABORATORIES | 102
 DT-PFIZER\WYETH | 94
 IPV-PASTEUR MERIEUX INST. | 83
 IPV-CONNAUGHT LTD. | 82
 DT-SCLAVO | 80
+HEP-UNKNOWN MANUFACTURER | 77
 MER-MERCK & CO. INC. | 72
 TTOX-PFIZER\WYETH | 70
 TTOX-CONNAUGHT LABORATORIES | 62
+DT-UNKNOWN MANUFACTURER | 57
 CHOL-PFIZER\WYETH | 54
 TTOX-SCLAVO | 47
 TD-MASS. PUB HLTH BIOL LAB | 46
+TD-UNKNOWN MANUFACTURER | 43
 TD-MICHIGAN DEPT PUB HLTH | 36
 DT-MICHIGAN DEPT PUB HLTH | 35
 MEN-CONNAUGHT LABORATORIES | 33
+TTOX-UNKNOWN MANUFACTURER | 30
 MU-MERCK & CO. INC. | 28
 TTOX-LEDERLE LABORATORIES | 27
+TYP-UNKNOWN MANUFACTURER | 23
+UNK-UNKNOWN MANUFACTURER | 20
+RUB-UNKNOWN MANUFACTURER | 19
 RAB-MICHIGAN DEPT PUB HLTH | 18
+PPV-UNKNOWN MANUFACTURER | 16
 PLAGUE-MILES LABORATORIES | 15
+IPV-UNKNOWN MANUFACTURER | 14
 MEN-CONNAUGHT LTD. | 8
 SMALL-PFIZER\WYETH | 8
+BCG-UNKNOWN MANUFACTURER | 7
 MUR-MERCK & CO. INC. | 6
+HBPV-UNKNOWN MANUFACTURER | 6
 ADEN-PFIZER\WYETH | 5
+MEN-UNKNOWN MANUFACTURER | 4
 CHOL-LEDERLE LABORATORIES | 4
+CHOL-UNKNOWN MANUFACTURER | 3
+PLAGUE-UNKNOWN MANUFACTURER | 3
+YF-UNKNOWN MANUFACTURER | 2
 MM-MERCK & CO. INC. | 1
+RAB-UNKNOWN MANUFACTURER | 1
 ---
