--- a/results/1993.md
+++ b/results/1993.md
@@ -50,43 +50,64 @@ DTP-MICHIGAN DEPT PUB HLTH | 142
 FLU3-PARKE-DAVIS | 122
 DTAP-CONNAUGHT LABORATORIES | 109
 TD-PFIZER\WYETH | 107
+DTP-UNKNOWN MANUFACTURER | 106
 HIBV-MERCK & CO. INC. | 91
 DTAP-PFIZER\WYETH | 73
 DT-LEDERLE LABORATORIES | 72
+OPV-UNKNOWN MANUFACTURER | 71
 YF-CONNAUGHT LABORATORIES | 65
 HIBV-CONNAUGHT LABORATORIES | 61
+FLUX-UNKNOWN MANUFACTURER | 60
 PPV-MERCK & CO. INC. | 54
 DTP-MASS. PUB HLTH BIOL LAB | 54
 RUB-MERCK & CO. INC. | 54
+HIBV-UNKNOWN MANUFACTURER | 51
 DT-CONNAUGHT LABORATORIES | 47
 MEA-MERCK & CO. INC. | 47
 TYP-PFIZER\WYETH | 45
 TYP-BERNA BIOTECH, LTD. | 44
+MMR-UNKNOWN MANUFACTURER | 41
 TTOX-PFIZER\WYETH | 38
 IPV-PASTEUR MERIEUX INST. | 37
+HEP-UNKNOWN MANUFACTURER | 31
 FLU3-LEDERLE LABORATORIES | 29
 IPV-CONNAUGHT LTD. | 28
 DT-PFIZER\WYETH | 25
+DT-UNKNOWN MANUFACTURER | 19
 MEN-CONNAUGHT LABORATORIES | 19
 TD-MICHIGAN DEPT PUB HLTH | 17
 FLU3-PFIZER\WYETH | 14
+TD-UNKNOWN MANUFACTURER | 13
 TD-MASS. PUB HLTH BIOL LAB | 12
 TTOX-LEDERLE LABORATORIES | 12
 JEV-CONNAUGHT LABORATORIES | 12
+PPV-UNKNOWN MANUFACTURER | 11
+TTOX-UNKNOWN MANUFACTURER | 11
 MER-MERCK & CO. INC. | 10
 DT-SCLAVO | 9
 TTOX-CONNAUGHT LABORATORIES | 9
+UNK-UNKNOWN MANUFACTURER | 7
 TD-SCLAVO | 6
+TYP-UNKNOWN MANUFACTURER | 6
 TTOX-SCLAVO | 6
+CHOL-UNKNOWN MANUFACTURER | 5
 CHOL-PFIZER\WYETH | 5
 TTOX-BERNA BIOTECH, LTD. | 5
 PLAGUE-MILES LABORATORIES | 4
+IPV-UNKNOWN MANUFACTURER | 4
+RUB-UNKNOWN MANUFACTURER | 4
+MEN-UNKNOWN MANUFACTURER | 4
 ADEN-PFIZER\WYETH | 4
+RAB-UNKNOWN MANUFACTURER | 3
 DT-MICHIGAN DEPT PUB HLTH | 3
 ANTH-EMERGENT BIOSOLUTIONS | 2
 HIBV-LEDERLE PRAXSIS | 2
+HBPV-UNKNOWN MANUFACTURER | 1
+ADEN-UNKNOWN MANUFACTURER | 1
 TTOX-MASS. PUB HLTH BIOL LAB | 1
+YF-UNKNOWN MANUFACTURER | 1
 ANTH-MICHIGAN DEPT PUB HLTH | 1
+ANTH-UNKNOWN MANUFACTURER | 1
 RAB-MICHIGAN DEPT PUB HLTH | 1
 TYP-CONNAUGHT LABORATORIES | 1
 MEN-CONNAUGHT LTD. | 1
@@ -120,9 +141,13 @@ HEP-SMITHKLINE BEECHAM | 25
 FLUX-PFIZER\WYETH | 15
 DTPHIB-PFIZER\WYETH | 13
 MMR-MERCK & CO. INC. | 9
+DTP-UNKNOWN MANUFACTURER | 8
 FLU3-CONNAUGHT LABORATORIES | 7
+HEP-UNKNOWN MANUFACTURER | 5
 FLU3-PARKE-DAVIS | 5
 DTP-MICHIGAN DEPT PUB HLTH | 4
+OPV-UNKNOWN MANUFACTURER | 4
+HIBV-UNKNOWN MANUFACTURER | 4
 HIBV-MERCK & CO. INC. | 3
 DTP-MASS. PUB HLTH BIOL LAB | 2
 IPV-PASTEUR MERIEUX INST. | 2
@@ -132,6 +157,7 @@ IPV-CONNAUGHT LTD. | 1
 PPV-PFIZER\WYETH | 1
 DTAP-CONNAUGHT LABORATORIES | 1
 HIBV-CONNAUGHT LABORATORIES | 1
+PPV-UNKNOWN MANUFACTURER | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
@@ -183,47 +209,68 @@ TD-CONNAUGHT LABORATORIES | 589
 DTPHIB-PFIZER\WYETH | 523
 DTP-MICHIGAN DEPT PUB HLTH | 502
 FLU3-PARKE-DAVIS | 459
+DTP-UNKNOWN MANUFACTURER | 395
 DTAP-CONNAUGHT LABORATORIES | 387
 TD-PFIZER\WYETH | 383
 HIBV-MERCK & CO. INC. | 318
+OPV-UNKNOWN MANUFACTURER | 273
 DT-LEDERLE LABORATORIES | 243
+FLUX-UNKNOWN MANUFACTURER | 243
 PPV-MERCK & CO. INC. | 236
 DTAP-PFIZER\WYETH | 222
 HIBV-CONNAUGHT LABORATORIES | 201
 DT-CONNAUGHT LABORATORIES | 178
 TYP-PFIZER\WYETH | 173
+HIBV-UNKNOWN MANUFACTURER | 170
 YF-CONNAUGHT LABORATORIES | 165
 RUB-MERCK & CO. INC. | 165
 MEA-MERCK & CO. INC. | 158
+MMR-UNKNOWN MANUFACTURER | 150
 TYP-BERNA BIOTECH, LTD. | 143
 TTOX-PFIZER\WYETH | 136
 DTP-MASS. PUB HLTH BIOL LAB | 132
 IPV-PASTEUR MERIEUX INST. | 123
+HEP-UNKNOWN MANUFACTURER | 106
 IPV-CONNAUGHT LTD. | 101
 DT-PFIZER\WYETH | 79
 TD-MICHIGAN DEPT PUB HLTH | 74
 FLU3-LEDERLE LABORATORIES | 73
 MEN-CONNAUGHT LABORATORIES | 70
 FLU3-PFIZER\WYETH | 66
+DT-UNKNOWN MANUFACTURER | 58
+TD-UNKNOWN MANUFACTURER | 50
 MER-MERCK & CO. INC. | 48
 TTOX-LEDERLE LABORATORIES | 45
 TD-MASS. PUB HLTH BIOL LAB | 43
+TTOX-UNKNOWN MANUFACTURER | 39
+PPV-UNKNOWN MANUFACTURER | 38
 JEV-CONNAUGHT LABORATORIES | 34
 DT-SCLAVO | 31
 TTOX-CONNAUGHT LABORATORIES | 31
+TYP-UNKNOWN MANUFACTURER | 30
 CHOL-PFIZER\WYETH | 23
+CHOL-UNKNOWN MANUFACTURER | 22
 TTOX-SCLAVO | 22
 PLAGUE-MILES LABORATORIES | 21
 ADEN-PFIZER\WYETH | 20
+MEN-UNKNOWN MANUFACTURER | 19
+RUB-UNKNOWN MANUFACTURER | 18
 TD-SCLAVO | 17
 TTOX-BERNA BIOTECH, LTD. | 15
 HIBV-LEDERLE PRAXSIS | 15
+UNK-UNKNOWN MANUFACTURER | 14
+IPV-UNKNOWN MANUFACTURER | 12
 DT-MICHIGAN DEPT PUB HLTH | 11
 ANTH-EMERGENT BIOSOLUTIONS | 9
+RAB-UNKNOWN MANUFACTURER | 8
 RAB-MICHIGAN DEPT PUB HLTH | 7
+ADEN-UNKNOWN MANUFACTURER | 5
 ANTH-MICHIGAN DEPT PUB HLTH | 5
+ANTH-UNKNOWN MANUFACTURER | 5
 TYP-CONNAUGHT LABORATORIES | 5
+HBPV-UNKNOWN MANUFACTURER | 2
 TTOX-MASS. PUB HLTH BIOL LAB | 2
+YF-UNKNOWN MANUFACTURER | 2
 MEN-CONNAUGHT LTD. | 1
 HBPV-PFIZER\WYETH | 1
 ---
