--- a/results/1995.md
+++ b/results/1995.md
@@ -55,23 +55,34 @@ PPV-PFIZER\WYETH | 260
 PPV-MERCK & CO. INC. | 254
 HIBV-MERCK & CO. INC. | 202
 TD-LEDERLE LABORATORIES | 183
+FLUX-UNKNOWN MANUFACTURER | 153
 DTP-LEDERLE LABORATORIES | 149
 RAB-PASTEUR MERIEUX INST. | 148
 TD-PFIZER\WYETH | 128
 DTP-MICHIGAN DEPT PUB HLTH | 124
+OPV-UNKNOWN MANUFACTURER | 119
+DTP-UNKNOWN MANUFACTURER | 116
 DTAP-PFIZER\WYETH | 91
+HEP-UNKNOWN MANUFACTURER | 87
 FLU3-PARKE-DAVIS | 85
+MMR-UNKNOWN MANUFACTURER | 84
+HIBV-UNKNOWN MANUFACTURER | 78
 TYP-PFIZER\WYETH | 77
 DTP-MASS. PUB HLTH BIOL LAB | 68
 HEPA-SMITHKLINE BEECHAM | 68
 DT-CONNAUGHT LABORATORIES | 67
+TD-UNKNOWN MANUFACTURER | 48
 RUB-MERCK & CO. INC. | 44
+TTOX-UNKNOWN MANUFACTURER | 38
 YF-CONNAUGHT LABORATORIES | 37
 TTOX-CONNAUGHT LABORATORIES | 37
 DT-LEDERLE LABORATORIES | 37
 TTOX-PFIZER\WYETH | 34
 IPV-CONNAUGHT LTD. | 33
+DT-UNKNOWN MANUFACTURER | 32
+PPV-UNKNOWN MANUFACTURER | 27
 TTOX-LEDERLE LABORATORIES | 27
+UNK-UNKNOWN MANUFACTURER | 24
 IPV-PASTEUR MERIEUX INST. | 24
 MEA-MERCK & CO. INC. | 23
 FLU3-MEDEVA PHARMA, LTD. | 21
@@ -81,19 +92,33 @@ TYP-BERNA BIOTECH, LTD. | 18
 MEN-CONNAUGHT LABORATORIES | 17
 DT-PFIZER\WYETH | 16
 HBPV-PFIZER\WYETH | 16
+TYP-UNKNOWN MANUFACTURER | 15
+RUB-UNKNOWN MANUFACTURER | 14
 TD-MICHIGAN DEPT PUB HLTH | 12
 MER-MERCK & CO. INC. | 12
 TD-MASS. PUB HLTH BIOL LAB | 11
+DTAP-UNKNOWN MANUFACTURER | 8
 TTOX-BERNA BIOTECH, LTD. | 7
+DTPHIB-UNKNOWN MANUFACTURER | 6
 CHOL-PFIZER\WYETH | 5
+RAB-UNKNOWN MANUFACTURER | 5
 RAB-CONNAUGHT LTD. | 4
 MU-MERCK & CO. INC. | 4
+YF-UNKNOWN MANUFACTURER | 3
 DT-MICHIGAN DEPT PUB HLTH | 3
+CHOL-UNKNOWN MANUFACTURER | 3
+IPV-UNKNOWN MANUFACTURER | 3
 RAB-MICHIGAN DEPT PUB HLTH | 2
 DT-MASS. PUB HLTH BIOL LAB | 2
 PLAGUE-GREER LABORATORIES, INC. | 2
 MM-MERCK & CO. INC. | 2
+SMALL-UNKNOWN MANUFACTURER | 1
+MER-UNKNOWN MANUFACTURER | 1
 MUR-MERCK & CO. INC. | 1
+PER-UNKNOWN MANUFACTURER | 1
+JEVX-UNKNOWN MANUFACTURER | 1
+MEN-UNKNOWN MANUFACTURER | 1
+VARCEL-UNKNOWN MANUFACTURER | 1
 FLU3-LEDERLE LABORATORIES | 1
 ---
 # Total Deaths
@@ -134,15 +159,22 @@ HIBV-MERCK & CO. INC. | 5
 PPV-MERCK & CO. INC. | 3
 PPV-PFIZER\WYETH | 3
 FLU3-PARKE-DAVIS | 2
+HEP-UNKNOWN MANUFACTURER | 2
 DTP-MICHIGAN DEPT PUB HLTH | 2
 DTP-MASS. PUB HLTH BIOL LAB | 2
+OPV-UNKNOWN MANUFACTURER | 2
 FLU3-MEDEVA PHARMA, LTD. | 2
 HBPV-PFIZER\WYETH | 1
 JEV-CONNAUGHT LABORATORIES | 1
+HIBV-UNKNOWN MANUFACTURER | 1
 VARCEL-MERCK & CO. INC. | 1
 MEA-MERCK & CO. INC. | 1
+TD-UNKNOWN MANUFACTURER | 1
+TYP-UNKNOWN MANUFACTURER | 1
+YF-UNKNOWN MANUFACTURER | 1
 IPV-PASTEUR MERIEUX INST. | 1
 DT-CONNAUGHT LABORATORIES | 1
+DTP-UNKNOWN MANUFACTURER | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
@@ -201,44 +233,69 @@ PPV-MERCK & CO. INC. | 993
 PPV-PFIZER\WYETH | 937
 TD-LEDERLE LABORATORIES | 698
 HIBV-MERCK & CO. INC. | 666
+FLUX-UNKNOWN MANUFACTURER | 573
 RAB-PASTEUR MERIEUX INST. | 483
 DTP-LEDERLE LABORATORIES | 463
+OPV-UNKNOWN MANUFACTURER | 446
+DTP-UNKNOWN MANUFACTURER | 435
 TD-PFIZER\WYETH | 435
 DTP-MICHIGAN DEPT PUB HLTH | 404
 FLU3-PARKE-DAVIS | 318
+HEP-UNKNOWN MANUFACTURER | 315
+MMR-UNKNOWN MANUFACTURER | 309
 TYP-PFIZER\WYETH | 307
 DTAP-PFIZER\WYETH | 304
+HIBV-UNKNOWN MANUFACTURER | 272
 DT-CONNAUGHT LABORATORIES | 252
 HEPA-SMITHKLINE BEECHAM | 249
+TD-UNKNOWN MANUFACTURER | 210
 RUB-MERCK & CO. INC. | 200
 DTP-MASS. PUB HLTH BIOL LAB | 189
 YF-CONNAUGHT LABORATORIES | 151
 DT-LEDERLE LABORATORIES | 144
 TTOX-CONNAUGHT LABORATORIES | 143
 TTOX-PFIZER\WYETH | 133
+TTOX-UNKNOWN MANUFACTURER | 132
+PPV-UNKNOWN MANUFACTURER | 113
+DT-UNKNOWN MANUFACTURER | 102
 TTOX-LEDERLE LABORATORIES | 95
 IPV-CONNAUGHT LTD. | 94
 FLU3-MEDEVA PHARMA, LTD. | 80
 FLUX-PFIZER\WYETH | 77
 IPV-PASTEUR MERIEUX INST. | 76
 MEN-CONNAUGHT LABORATORIES | 73
+RUB-UNKNOWN MANUFACTURER | 73
+UNK-UNKNOWN MANUFACTURER | 68
 JEV-CONNAUGHT LABORATORIES | 65
 TYP-BERNA BIOTECH, LTD. | 65
 MEA-MERCK & CO. INC. | 62
 TD-MICHIGAN DEPT PUB HLTH | 59
 DT-PFIZER\WYETH | 56
 HBPV-PFIZER\WYETH | 53
+TYP-UNKNOWN MANUFACTURER | 51
 MER-MERCK & CO. INC. | 49
 TD-MASS. PUB HLTH BIOL LAB | 35
+DTAP-UNKNOWN MANUFACTURER | 31
+RAB-UNKNOWN MANUFACTURER | 29
+DTPHIB-UNKNOWN MANUFACTURER | 23
 TTOX-BERNA BIOTECH, LTD. | 20
 CHOL-PFIZER\WYETH | 20
 RAB-CONNAUGHT LTD. | 18
 MU-MERCK & CO. INC. | 14
 PLAGUE-GREER LABORATORIES, INC. | 12
+IPV-UNKNOWN MANUFACTURER | 12
 DT-MICHIGAN DEPT PUB HLTH | 11
+YF-UNKNOWN MANUFACTURER | 8
+MEN-UNKNOWN MANUFACTURER | 8
 DT-MASS. PUB HLTH BIOL LAB | 7
+CHOL-UNKNOWN MANUFACTURER | 7
 MM-MERCK & CO. INC. | 7
 RAB-MICHIGAN DEPT PUB HLTH | 4
+MER-UNKNOWN MANUFACTURER | 4
+PER-UNKNOWN MANUFACTURER | 4
+JEVX-UNKNOWN MANUFACTURER | 3
+SMALL-UNKNOWN MANUFACTURER | 2
 FLU3-LEDERLE LABORATORIES | 2
 MUR-MERCK & CO. INC. | 1
+VARCEL-UNKNOWN MANUFACTURER | 1
 ---
