--- a/results/1996.md
+++ b/results/1996.md
@@ -53,45 +53,67 @@ PPV-PFIZER\WYETH | 228
 TD-LEDERLE LABORATORIES | 224
 PPV-MERCK & CO. INC. | 191
 DTAP-PFIZER\WYETH | 157
+FLUX-UNKNOWN MANUFACTURER | 149
 DTP-LEDERLE LABORATORIES | 132
 TD-PFIZER\WYETH | 121
 TYP-PFIZER\WYETH | 100
+HEP-UNKNOWN MANUFACTURER | 89
+MMR-UNKNOWN MANUFACTURER | 88
+OPV-UNKNOWN MANUFACTURER | 86
 DTP-MASS. PUB HLTH BIOL LAB | 84
+DTP-UNKNOWN MANUFACTURER | 78
 DT-CONNAUGHT LABORATORIES | 72
 DTP-MICHIGAN DEPT PUB HLTH | 70
+TD-UNKNOWN MANUFACTURER | 65
 FLU3-MEDEVA PHARMA, LTD. | 64
+HIBV-UNKNOWN MANUFACTURER | 54
 RUB-MERCK & CO. INC. | 52
 YF-CONNAUGHT LABORATORIES | 52
 IPV-CONNAUGHT LTD. | 50
 TTOX-PFIZER\WYETH | 47
 RAB-PASTEUR MERIEUX INST. | 46
 RAB-MICHIGAN DEPT PUB HLTH | 45
+TTOX-UNKNOWN MANUFACTURER | 44
 TTOX-CONNAUGHT LABORATORIES | 35
+UNK-UNKNOWN MANUFACTURER | 33
 DT-LEDERLE LABORATORIES | 32
 HIBV-MERCK & CO. INC. | 31
 IPV-PASTEUR MERIEUX INST. | 29
+PPV-UNKNOWN MANUFACTURER | 23
+DTAP-UNKNOWN MANUFACTURER | 22
 MEA-MERCK & CO. INC. | 21
+DTPHIB-UNKNOWN MANUFACTURER | 21
+TYP-UNKNOWN MANUFACTURER | 20
 DT-PFIZER\WYETH | 20
 TD-MICHIGAN DEPT PUB HLTH | 17
 TYP-BERNA BIOTECH, LTD. | 17
 JEV-CONNAUGHT LABORATORIES | 16
 TD-MASS. PUB HLTH BIOL LAB | 15
+DT-UNKNOWN MANUFACTURER | 15
 MEN-CONNAUGHT LABORATORIES | 12
 FLUX-PFIZER\WYETH | 9
+YF-UNKNOWN MANUFACTURER | 8
 TTOX-LEDERLE LABORATORIES | 8
+RAB-UNKNOWN MANUFACTURER | 8
 TYP-CONNAUGHT LABORATORIES | 7
+IPV-UNKNOWN MANUFACTURER | 6
 DT-MICHIGAN DEPT PUB HLTH | 6
 MER-MERCK & CO. INC. | 5
+HEPA-UNKNOWN MANUFACTURER | 5
+MEN-UNKNOWN MANUFACTURER | 3
 TTOX-BERNA BIOTECH, LTD. | 3
+RUB-UNKNOWN MANUFACTURER | 3
 CHOL-PFIZER\WYETH | 2
 HBPV-PFIZER\WYETH | 1
 PLAGUE-GREER LABORATORIES, INC. | 1
 HIBV-LEDERLE PRAXSIS | 1
 DT-MASS. PUB HLTH BIOL LAB | 1
+MUR-UNKNOWN MANUFACTURER | 1
 MU-MERCK & CO. INC. | 1
 HEPA-MERCK & CO. INC. | 1
 FLU3-SANOFI PASTEUR | 1
 RAB-CONNAUGHT LTD. | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -130,12 +152,16 @@ DTP-MASS. PUB HLTH BIOL LAB | 3
 VARCEL-MERCK & CO. INC. | 3
 PPV-MERCK & CO. INC. | 3
 HIBV-MERCK & CO. INC. | 2
+FLUX-UNKNOWN MANUFACTURER | 2
+DTAP-UNKNOWN MANUFACTURER | 2
 FLU3-MEDEVA PHARMA, LTD. | 1
 TD-MASS. PUB HLTH BIOL LAB | 1
 HEPA-SMITHKLINE BEECHAM | 1
+MMR-UNKNOWN MANUFACTURER | 1
 IPV-CONNAUGHT LTD. | 1
 MEA-MERCK & CO. INC. | 1
 TD-CONNAUGHT LABORATORIES | 1
+OPV-UNKNOWN MANUFACTURER | 1
 DTAP-CONNAUGHT LABORATORIES | 1
 PPV-PFIZER\WYETH | 1
 ---
@@ -193,44 +219,66 @@ FLU3-PARKE-DAVIS | 816
 HEPA-SMITHKLINE BEECHAM | 798
 PPV-PFIZER\WYETH | 781
 PPV-MERCK & CO. INC. | 744
+FLUX-UNKNOWN MANUFACTURER | 604
 DTAP-PFIZER\WYETH | 511
 TD-PFIZER\WYETH | 431
+MMR-UNKNOWN MANUFACTURER | 383
 DTP-LEDERLE LABORATORIES | 380
 TYP-PFIZER\WYETH | 359
+OPV-UNKNOWN MANUFACTURER | 303
+HEP-UNKNOWN MANUFACTURER | 293
+DTP-UNKNOWN MANUFACTURER | 290
 DTP-MICHIGAN DEPT PUB HLTH | 274
 FLU3-MEDEVA PHARMA, LTD. | 272
+TD-UNKNOWN MANUFACTURER | 248
 DT-CONNAUGHT LABORATORIES | 244
 DTP-MASS. PUB HLTH BIOL LAB | 242
+HIBV-UNKNOWN MANUFACTURER | 214
 YF-CONNAUGHT LABORATORIES | 206
 RUB-MERCK & CO. INC. | 188
+TTOX-UNKNOWN MANUFACTURER | 187
 TTOX-PFIZER\WYETH | 172
 IPV-CONNAUGHT LTD. | 170
 RAB-PASTEUR MERIEUX INST. | 160
 TTOX-CONNAUGHT LABORATORIES | 134
+UNK-UNKNOWN MANUFACTURER | 132
 DT-LEDERLE LABORATORIES | 113
 IPV-PASTEUR MERIEUX INST. | 105
 HIBV-MERCK & CO. INC. | 104
+PPV-UNKNOWN MANUFACTURER | 93
 TD-MICHIGAN DEPT PUB HLTH | 87
 MEA-MERCK & CO. INC. | 85
 TYP-BERNA BIOTECH, LTD. | 85
 RAB-MICHIGAN DEPT PUB HLTH | 76
 DT-PFIZER\WYETH | 75
+DTAP-UNKNOWN MANUFACTURER | 72
+TYP-UNKNOWN MANUFACTURER | 66
+DTPHIB-UNKNOWN MANUFACTURER | 64
 JEV-CONNAUGHT LABORATORIES | 61
+DT-UNKNOWN MANUFACTURER | 56
 TD-MASS. PUB HLTH BIOL LAB | 54
 MEN-CONNAUGHT LABORATORIES | 47
 FLUX-PFIZER\WYETH | 45
 TTOX-LEDERLE LABORATORIES | 36
+YF-UNKNOWN MANUFACTURER | 30
+RAB-UNKNOWN MANUFACTURER | 30
 TYP-CONNAUGHT LABORATORIES | 28
 DT-MICHIGAN DEPT PUB HLTH | 20
+HEPA-UNKNOWN MANUFACTURER | 20
+IPV-UNKNOWN MANUFACTURER | 18
 MER-MERCK & CO. INC. | 18
 TTOX-BERNA BIOTECH, LTD. | 11
+MEN-UNKNOWN MANUFACTURER | 10
 PLAGUE-GREER LABORATORIES, INC. | 8
 HIBV-LEDERLE PRAXSIS | 8
 RAB-CONNAUGHT LTD. | 8
 CHOL-PFIZER\WYETH | 5
+RUB-UNKNOWN MANUFACTURER | 5
 HBPV-PFIZER\WYETH | 4
 HEPA-MERCK & CO. INC. | 4
 FLU3-SANOFI PASTEUR | 3
 DT-MASS. PUB HLTH BIOL LAB | 2
+MUR-UNKNOWN MANUFACTURER | 1
 MU-MERCK & CO. INC. | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 ---
