--- a/results/1997.md
+++ b/results/1997.md
@@ -56,15 +56,25 @@ DTAP-PFIZER\WYETH | 186
 HEPA-SMITHKLINE BEECHAM | 185
 IPV-CONNAUGHT LTD. | 180
 RAB-PASTEUR MERIEUX INST. | 155
+FLUX-UNKNOWN MANUFACTURER | 149
 FLU3-MEDEVA PHARMA, LTD. | 142
 TD-LEDERLE LABORATORIES | 137
 IPV-PASTEUR MERIEUX INST. | 120
 TD-PFIZER\WYETH | 120
+HEP-UNKNOWN MANUFACTURER | 108
+OPV-UNKNOWN MANUFACTURER | 98
+DTP-UNKNOWN MANUFACTURER | 84
+MMR-UNKNOWN MANUFACTURER | 82
 DT-CONNAUGHT LABORATORIES | 80
 DTP-LEDERLE LABORATORIES | 74
+HIBV-UNKNOWN MANUFACTURER | 62
 TYP-PFIZER\WYETH | 57
+TD-UNKNOWN MANUFACTURER | 53
 RUB-MERCK & CO. INC. | 43
+PPV-UNKNOWN MANUFACTURER | 39
 TTOX-CONNAUGHT LABORATORIES | 35
+DTAP-UNKNOWN MANUFACTURER | 35
+TTOX-UNKNOWN MANUFACTURER | 32
 MEN-CONNAUGHT LABORATORIES | 32
 YF-CONNAUGHT LABORATORIES | 31
 HBHEPB-MERCK & CO. INC. | 30
@@ -72,16 +82,21 @@ TTOX-LEDERLE LABORATORIES | 28
 TYP-BERNA BIOTECH, LTD. | 27
 HEPA-MERCK & CO. INC. | 27
 HIBV-MERCK & CO. INC. | 26
+DT-UNKNOWN MANUFACTURER | 26
 DTAP-SMITHKLINE BEECHAM | 26
+IPV-UNKNOWN MANUFACTURER | 25
 MEA-MERCK & CO. INC. | 25
 JEV-CONNAUGHT LABORATORIES | 25
 TTOX-PFIZER\WYETH | 23
+DTPHIB-UNKNOWN MANUFACTURER | 19
 RAB-MICHIGAN DEPT PUB HLTH | 19
 DT-LEDERLE LABORATORIES | 19
 DT-PFIZER\WYETH | 17
+TYP-UNKNOWN MANUFACTURER | 17
 DTP-MASS. PUB HLTH BIOL LAB | 16
 TD-MASS. PUB HLTH BIOL LAB | 16
 TYP-CONNAUGHT LABORATORIES | 15
+UNK-UNKNOWN MANUFACTURER | 10
 DTP-MICHIGAN DEPT PUB HLTH | 10
 TD-MICHIGAN DEPT PUB HLTH | 7
 MER-MERCK & CO. INC. | 7
@@ -90,13 +105,20 @@ DT-MASS. PUB HLTH BIOL LAB | 4
 DT-MICHIGAN DEPT PUB HLTH | 4
 BCG-ORGANON-TEKNIKA | 3
 CHOL-PFIZER\WYETH | 3
+YF-UNKNOWN MANUFACTURER | 3
+RAB-UNKNOWN MANUFACTURER | 3
+HEPA-UNKNOWN MANUFACTURER | 3
+MEN-UNKNOWN MANUFACTURER | 2
 PLAGUE-GREER LABORATORIES, INC. | 2
+CHOL-UNKNOWN MANUFACTURER | 2
 FLUX-PFIZER\WYETH | 2
 TTOX-BERNA BIOTECH, LTD. | 1
 RAB-CONNAUGHT LTD. | 1
 DT-CONNAUGHT LTD. | 1
+VARCEL-UNKNOWN MANUFACTURER | 1
 MM-MERCK & CO. INC. | 1
 TTOX-MASS. PUB HLTH BIOL LAB | 1
+JEVX-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -134,17 +156,25 @@ IPV-CONNAUGHT LTD. | 10
 FLU3-CONNAUGHT LABORATORIES | 8
 MMR-MERCK & CO. INC. | 8
 FLU3-MEDEVA PHARMA, LTD. | 5
+HEP-UNKNOWN MANUFACTURER | 5
+HIBV-UNKNOWN MANUFACTURER | 5
+FLUX-UNKNOWN MANUFACTURER | 4
 DTAP-PFIZER\WYETH | 4
 VARCEL-MERCK & CO. INC. | 4
 FLU3-PARKE-DAVIS | 3
+OPV-UNKNOWN MANUFACTURER | 3
+IPV-UNKNOWN MANUFACTURER | 3
 FLU3-PFIZER\WYETH | 3
 PPV-MERCK & CO. INC. | 2
 DTP-LEDERLE LABORATORIES | 2
 PPV-PFIZER\WYETH | 2
 HBHEPB-MERCK & CO. INC. | 2
+DTP-UNKNOWN MANUFACTURER | 2
+DTAP-UNKNOWN MANUFACTURER | 2
 MEA-MERCK & CO. INC. | 1
 HIBV-MERCK & CO. INC. | 1
 PLAGUE-GREER LABORATORIES, INC. | 1
+DT-UNKNOWN MANUFACTURER | 1
 TTOX-LEDERLE LABORATORIES | 1
 DTAP-SMITHKLINE BEECHAM | 1
 ---
@@ -202,6 +232,7 @@ DTP-CONNAUGHT LABORATORIES | 1417
 PPV-PFIZER\WYETH | 1062
 FLU3-PARKE-DAVIS | 980
 PPV-MERCK & CO. INC. | 973
+FLUX-UNKNOWN MANUFACTURER | 661
 HEPA-SMITHKLINE BEECHAM | 655
 IPV-CONNAUGHT LTD. | 584
 FLU3-MEDEVA PHARMA, LTD. | 563
@@ -209,19 +240,30 @@ DTAP-PFIZER\WYETH | 541
 TD-LEDERLE LABORATORIES | 496
 TD-PFIZER\WYETH | 467
 RAB-PASTEUR MERIEUX INST. | 460
+HEP-UNKNOWN MANUFACTURER | 417
+OPV-UNKNOWN MANUFACTURER | 361
 IPV-PASTEUR MERIEUX INST. | 346
+DTP-UNKNOWN MANUFACTURER | 317
+MMR-UNKNOWN MANUFACTURER | 295
 DTP-LEDERLE LABORATORIES | 262
 DT-CONNAUGHT LABORATORIES | 256
+TD-UNKNOWN MANUFACTURER | 232
+HIBV-UNKNOWN MANUFACTURER | 230
 TYP-PFIZER\WYETH | 226
+PPV-UNKNOWN MANUFACTURER | 153
+TTOX-UNKNOWN MANUFACTURER | 147
 RUB-MERCK & CO. INC. | 143
 TTOX-CONNAUGHT LABORATORIES | 128
 MEN-CONNAUGHT LABORATORIES | 119
+DT-UNKNOWN MANUFACTURER | 110
+DTAP-UNKNOWN MANUFACTURER | 109
 YF-CONNAUGHT LABORATORIES | 103
 TYP-BERNA BIOTECH, LTD. | 100
 HIBV-MERCK & CO. INC. | 95
 HEPA-MERCK & CO. INC. | 89
 JEV-CONNAUGHT LABORATORIES | 89
 TTOX-LEDERLE LABORATORIES | 86
+IPV-UNKNOWN MANUFACTURER | 78
 HBHEPB-MERCK & CO. INC. | 78
 MEA-MERCK & CO. INC. | 75
 TTOX-PFIZER\WYETH | 75
@@ -230,8 +272,11 @@ DT-LEDERLE LABORATORIES | 65
 DT-PFIZER\WYETH | 63
 RAB-MICHIGAN DEPT PUB HLTH | 61
 TD-MASS. PUB HLTH BIOL LAB | 60
+DTPHIB-UNKNOWN MANUFACTURER | 59
 DTP-MASS. PUB HLTH BIOL LAB | 52
+TYP-UNKNOWN MANUFACTURER | 51
 DTP-MICHIGAN DEPT PUB HLTH | 46
+UNK-UNKNOWN MANUFACTURER | 42
 TYP-CONNAUGHT LABORATORIES | 39
 TD-MICHIGAN DEPT PUB HLTH | 34
 MER-MERCK & CO. INC. | 22
@@ -239,12 +284,19 @@ DT-MICHIGAN DEPT PUB HLTH | 20
 CHOL-PFIZER\WYETH | 18
 MU-MERCK & CO. INC. | 17
 PLAGUE-GREER LABORATORIES, INC. | 15
+YF-UNKNOWN MANUFACTURER | 13
 DT-MASS. PUB HLTH BIOL LAB | 13
 BCG-ORGANON-TEKNIKA | 12
 TTOX-BERNA BIOTECH, LTD. | 8
+RAB-UNKNOWN MANUFACTURER | 7
+MEN-UNKNOWN MANUFACTURER | 6
+CHOL-UNKNOWN MANUFACTURER | 6
+HEPA-UNKNOWN MANUFACTURER | 6
 RAB-CONNAUGHT LTD. | 4
 DT-CONNAUGHT LTD. | 4
+VARCEL-UNKNOWN MANUFACTURER | 4
 FLUX-PFIZER\WYETH | 4
 TTOX-MASS. PUB HLTH BIOL LAB | 4
 MM-MERCK & CO. INC. | 2
+JEVX-UNKNOWN MANUFACTURER | 1
 ---
