--- a/results/1998.md
+++ b/results/1998.md
@@ -56,18 +56,28 @@ PPV-PFIZER\WYETH | 289
 DTPHIB-PFIZER\WYETH | 269
 DTAP-SMITHKLINE BEECHAM | 235
 HIBV-MERCK & CO. INC. | 220
+FLUX-UNKNOWN MANUFACTURER | 213
 TD-LEDERLE LABORATORIES | 210
 FLU3-MEDEVA PHARMA, LTD. | 183
 HEPA-SMITHKLINE BEECHAM | 137
 DTP-CONNAUGHT LABORATORIES | 136
+HEP-UNKNOWN MANUFACTURER | 132
 HBHEPB-MERCK & CO. INC. | 128
 TD-PFIZER\WYETH | 115
 FLU3-PARKDALE PHARMACEUTICALS | 104
+OPV-UNKNOWN MANUFACTURER | 90
+MMR-UNKNOWN MANUFACTURER | 89
 HEPA-MERCK & CO. INC. | 83
+DTP-UNKNOWN MANUFACTURER | 81
 MEN-CONNAUGHT LABORATORIES | 75
+HIBV-UNKNOWN MANUFACTURER | 72
 RAB-PASTEUR MERIEUX INST. | 70
 IPV-PASTEUR MERIEUX INST. | 65
+DTAP-UNKNOWN MANUFACTURER | 63
+TD-UNKNOWN MANUFACTURER | 63
+PPV-UNKNOWN MANUFACTURER | 61
 ANTH-MICHIGAN DEPT PUB HLTH | 56
+TTOX-UNKNOWN MANUFACTURER | 48
 YF-CONNAUGHT LABORATORIES | 45
 RUB-MERCK & CO. INC. | 45
 TYP-PFIZER\WYETH | 42
@@ -75,34 +85,50 @@ TYP-BERNA BIOTECH, LTD. | 41
 DTP-LEDERLE LABORATORIES | 40
 DT-CONNAUGHT LABORATORIES | 29
 MEA-MERCK & CO. INC. | 29
+IPV-UNKNOWN MANUFACTURER | 25
 JEV-CONNAUGHT LABORATORIES | 25
 TTOX-LEDERLE LABORATORIES | 23
 RV-PFIZER\WYETH | 22
+UNK-UNKNOWN MANUFACTURER | 21
 TTOX-CONNAUGHT LABORATORIES | 20
 TTOX-PFIZER\WYETH | 18
 TYP-CONNAUGHT LABORATORIES | 17
+MEN-UNKNOWN MANUFACTURER | 13
+DT-UNKNOWN MANUFACTURER | 13
+HEPA-UNKNOWN MANUFACTURER | 11
 TD-MASS. PUB HLTH BIOL LAB | 11
 DT-LEDERLE LABORATORIES | 10
 RAB-MICHIGAN DEPT PUB HLTH | 9
 DT-PFIZER\WYETH | 8
+TYP-UNKNOWN MANUFACTURER | 6
 MER-MERCK & CO. INC. | 6
 CHOL-PFIZER\WYETH | 6
+DTPHIB-UNKNOWN MANUFACTURER | 6
 DT-CONNAUGHT LTD. | 5
 MU-MERCK & CO. INC. | 5
+ANTH-UNKNOWN MANUFACTURER | 5
+RAB-UNKNOWN MANUFACTURER | 4
 MEN-CONNAUGHT LTD. | 4
+YF-UNKNOWN MANUFACTURER | 3
 FLU3-PARKE-DAVIS | 3
 DTP-MICHIGAN DEPT PUB HLTH | 3
 DTP-MASS. PUB HLTH BIOL LAB | 2
 DT-MASS. PUB HLTH BIOL LAB | 2
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
+CHOL-UNKNOWN MANUFACTURER | 1
 IPV-SANOFI PASTEUR | 1
+PLAGUE-UNKNOWN MANUFACTURER | 1
 PLAGUE-GREER LABORATORIES, INC. | 1
+TBE-UNKNOWN MANUFACTURER | 1
 HIBV-SANOFI PASTEUR | 1
 FLU3-SANOFI PASTEUR | 1
+MU-UNKNOWN MANUFACTURER | 1
 BCG-ORGANON-TEKNIKA | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
+DTPPHIB-UNKNOWN MANUFACTURER | 1
 RAB-CONNAUGHT LTD. | 1
+RUB-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -138,19 +164,26 @@ VARCEL-MERCK & CO. INC. | 10
 DTAP-SMITHKLINE BEECHAM | 10
 MMR-MERCK & CO. INC. | 8
 FLU3-CONNAUGHT LABORATORIES | 8
+DTP-UNKNOWN MANUFACTURER | 8
 HIBV-MERCK & CO. INC. | 7
 HBHEPB-MERCK & CO. INC. | 7
 DTPHIB-PFIZER\WYETH | 6
+HIBV-UNKNOWN MANUFACTURER | 5
+OPV-UNKNOWN MANUFACTURER | 5
 FLU3-MEDEVA PHARMA, LTD. | 4
 PPV-PFIZER\WYETH | 4
 IPV-PASTEUR MERIEUX INST. | 4
+HEP-UNKNOWN MANUFACTURER | 4
 FLU3-PFIZER\WYETH | 3
+FLUX-UNKNOWN MANUFACTURER | 3
 DTP-CONNAUGHT LABORATORIES | 3
 TD-CONNAUGHT LABORATORIES | 2
 YF-CONNAUGHT LABORATORIES | 2
 FLU3-PARKDALE PHARMACEUTICALS | 2
 FLU3-PARKE-DAVIS | 1
 TD-MASS. PUB HLTH BIOL LAB | 1
+MMR-UNKNOWN MANUFACTURER | 1
+HEPA-UNKNOWN MANUFACTURER | 1
 PPV-MERCK & CO. INC. | 1
 ---
 # Total Symptoms
@@ -208,21 +241,31 @@ IPV-CONNAUGHT LTD. | 1495
 DTAP-PFIZER\WYETH | 1456
 HIBV-CONNAUGHT LABORATORIES | 1128
 PPV-PFIZER\WYETH | 1111
+FLUX-UNKNOWN MANUFACTURER | 903
 FLU3-MEDEVA PHARMA, LTD. | 803
 DTPHIB-PFIZER\WYETH | 781
 DTAP-SMITHKLINE BEECHAM | 771
 TD-LEDERLE LABORATORIES | 733
 HIBV-MERCK & CO. INC. | 636
 DTP-CONNAUGHT LABORATORIES | 505
+HEP-UNKNOWN MANUFACTURER | 488
 HEPA-SMITHKLINE BEECHAM | 487
 TD-PFIZER\WYETH | 389
 HBHEPB-MERCK & CO. INC. | 388
 FLU3-PARKDALE PHARMACEUTICALS | 371
+OPV-UNKNOWN MANUFACTURER | 346
+MMR-UNKNOWN MANUFACTURER | 335
+DTP-UNKNOWN MANUFACTURER | 321
+HIBV-UNKNOWN MANUFACTURER | 292
 HEPA-MERCK & CO. INC. | 266
+PPV-UNKNOWN MANUFACTURER | 253
 ANTH-MICHIGAN DEPT PUB HLTH | 236
 MEN-CONNAUGHT LABORATORIES | 235
+TD-UNKNOWN MANUFACTURER | 221
 RAB-PASTEUR MERIEUX INST. | 218
+TTOX-UNKNOWN MANUFACTURER | 205
 YF-CONNAUGHT LABORATORIES | 186
+DTAP-UNKNOWN MANUFACTURER | 178
 IPV-PASTEUR MERIEUX INST. | 167
 RUB-MERCK & CO. INC. | 154
 TYP-BERNA BIOTECH, LTD. | 138
@@ -231,15 +274,24 @@ DTP-LEDERLE LABORATORIES | 126
 DT-CONNAUGHT LABORATORIES | 96
 MEA-MERCK & CO. INC. | 96
 JEV-CONNAUGHT LABORATORIES | 83
+UNK-UNKNOWN MANUFACTURER | 81
 TTOX-PFIZER\WYETH | 75
 TTOX-CONNAUGHT LABORATORIES | 74
 TTOX-LEDERLE LABORATORIES | 72
 RV-PFIZER\WYETH | 71
+IPV-UNKNOWN MANUFACTURER | 58
+DT-UNKNOWN MANUFACTURER | 47
 TD-MASS. PUB HLTH BIOL LAB | 43
+MEN-UNKNOWN MANUFACTURER | 42
 TYP-CONNAUGHT LABORATORIES | 42
 RAB-MICHIGAN DEPT PUB HLTH | 40
+HEPA-UNKNOWN MANUFACTURER | 36
 DT-PFIZER\WYETH | 32
+ANTH-UNKNOWN MANUFACTURER | 30
 DT-LEDERLE LABORATORIES | 29
+DTPHIB-UNKNOWN MANUFACTURER | 23
+TYP-UNKNOWN MANUFACTURER | 22
+RAB-UNKNOWN MANUFACTURER | 22
 MER-MERCK & CO. INC. | 17
 CHOL-PFIZER\WYETH | 16
 FLU3-PARKE-DAVIS | 15
@@ -248,14 +300,21 @@ DTP-MASS. PUB HLTH BIOL LAB | 13
 MEN-CONNAUGHT LTD. | 12
 DTP-MICHIGAN DEPT PUB HLTH | 11
 DT-CONNAUGHT LTD. | 10
+YF-UNKNOWN MANUFACTURER | 8
 FLU3-SANOFI PASTEUR | 8
 DT-MASS. PUB HLTH BIOL LAB | 7
+CHOL-UNKNOWN MANUFACTURER | 5
 HIBV-SANOFI PASTEUR | 5
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 5
 RAB-CONNAUGHT LTD. | 4
+PLAGUE-UNKNOWN MANUFACTURER | 3
 PLAGUE-GREER LABORATORIES, INC. | 3
 BCG-ORGANON-TEKNIKA | 3
+TBE-UNKNOWN MANUFACTURER | 2
+MU-UNKNOWN MANUFACTURER | 2
 ANTH-EMERGENT BIOSOLUTIONS | 2
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 2
+DTPPHIB-UNKNOWN MANUFACTURER | 2
 IPV-SANOFI PASTEUR | 1
+RUB-UNKNOWN MANUFACTURER | 1
 ---
