--- a/results/1999.md
+++ b/results/1999.md
@@ -63,56 +63,86 @@ HIBV-MERCK & CO. INC. | 392
 LYME-SMITHKLINE BEECHAM | 379
 PPV-PFIZER\WYETH | 343
 HBHEPB-MERCK & CO. INC. | 291
+FLUX-UNKNOWN MANUFACTURER | 240
 FLU3-PARKDALE PHARMACEUTICALS | 230
 HEPA-SMITHKLINE BEECHAM | 202
 TD-LEDERLE LABORATORIES | 176
+HEP-UNKNOWN MANUFACTURER | 161
 TD-PFIZER\WYETH | 152
 FLU3-MEDEVA PHARMA, LTD. | 128
+MMR-UNKNOWN MANUFACTURER | 122
+OPV-UNKNOWN MANUFACTURER | 116
 DTPHIB-PFIZER\WYETH | 116
+DTP-UNKNOWN MANUFACTURER | 113
+HIBV-UNKNOWN MANUFACTURER | 102
 HEPA-MERCK & CO. INC. | 92
 RAB-PASTEUR MERIEUX INST. | 92
+TD-UNKNOWN MANUFACTURER | 85
 IPV-PASTEUR MERIEUX INST. | 77
 DTP-CONNAUGHT LABORATORIES | 76
+DTAP-UNKNOWN MANUFACTURER | 74
+PPV-UNKNOWN MANUFACTURER | 73
+UNK-UNKNOWN MANUFACTURER | 64
 YF-CONNAUGHT LABORATORIES | 58
+IPV-UNKNOWN MANUFACTURER | 52
+ANTH-UNKNOWN MANUFACTURER | 46
 TYP-CONNAUGHT LABORATORIES | 44
 MEN-CONNAUGHT LABORATORIES | 42
 TYP-BERNA BIOTECH, LTD. | 38
+TTOX-UNKNOWN MANUFACTURER | 38
 DTP-LEDERLE LABORATORIES | 35
 TTOX-CONNAUGHT LABORATORIES | 34
 TTOX-PFIZER\WYETH | 31
+HEPA-UNKNOWN MANUFACTURER | 28
 DT-CONNAUGHT LABORATORIES | 27
 TTOX-LEDERLE LABORATORIES | 26
 TYP-PFIZER\WYETH | 25
 MEA-MERCK & CO. INC. | 25
 RUB-MERCK & CO. INC. | 21
 JEV-CONNAUGHT LABORATORIES | 21
+TYP-UNKNOWN MANUFACTURER | 21
 DTAP-NORTH AMERICAN VACCINES | 21
+DT-UNKNOWN MANUFACTURER | 14
 DT-LEDERLE LABORATORIES | 13
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 13
 ANTH-EMERGENT BIOSOLUTIONS | 13
 TD-MASS. PUB HLTH BIOL LAB | 10
 DT-PFIZER\WYETH | 9
 HBPV-PFIZER\WYETH | 7
+YF-UNKNOWN MANUFACTURER | 7
 MEN-CONNAUGHT LTD. | 6
+MEN-UNKNOWN MANUFACTURER | 6
 RAB-CONNAUGHT LTD. | 5
+RAB-UNKNOWN MANUFACTURER | 5
 CHOL-PFIZER\WYETH | 4
 HIBV-SANOFI PASTEUR | 4
 DT-CONNAUGHT LTD. | 4
+DTPHIB-UNKNOWN MANUFACTURER | 3
+SMALL-UNKNOWN MANUFACTURER | 3
+DTAPH-UNKNOWN MANUFACTURER | 3
 HIBV-LEDERLE PRAXSIS | 2
 IPV-PASTEUR MERIEUX CONNAUGHT | 2
+RUB-UNKNOWN MANUFACTURER | 2
 TTOX-BERNA BIOTECH, LTD. | 2
 MU-MERCK & CO. INC. | 2
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 2
 DTAP-SANOFI PASTEUR | 2
+CHOL-UNKNOWN MANUFACTURER | 2
 FLU3-SANOFI PASTEUR | 2
 DTPIPV-SANOFI PASTEUR | 1
+MEA-UNKNOWN MANUFACTURER | 1
 DTP-MASS. PUB HLTH BIOL LAB | 1
+DTPPHIB-UNKNOWN MANUFACTURER | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 RAB-MICHIGAN DEPT PUB HLTH | 1
+MER-UNKNOWN MANUFACTURER | 1
 IPV-SANOFI PASTEUR | 1
 FLU3-PARKE-DAVIS | 1
+BCG-UNKNOWN MANUFACTURER | 1
 DT-MASS. PUB HLTH BIOL LAB | 1
 JEV-SANOFI PASTEUR | 1
+PLAGUE-UNKNOWN MANUFACTURER | 1
 IPV-PFIZER\WYETH | 1
 ---
 # Total Deaths
@@ -160,14 +190,22 @@ PPV-PFIZER\WYETH | 6
 FLU3-PFIZER\WYETH | 5
 DTPHIB-PFIZER\WYETH | 4
 PPV-MERCK & CO. INC. | 3
+IPV-UNKNOWN MANUFACTURER | 3
 YF-CONNAUGHT LABORATORIES | 2
 LYME-SMITHKLINE BEECHAM | 2
 DTP-CONNAUGHT LABORATORIES | 2
+HEP-UNKNOWN MANUFACTURER | 2
+DTP-UNKNOWN MANUFACTURER | 2
 IPV-PASTEUR MERIEUX INST. | 1
+FLUX-UNKNOWN MANUFACTURER | 1
 DTP-LEDERLE LABORATORIES | 1
 DT-CONNAUGHT LABORATORIES | 1
 MEA-MERCK & CO. INC. | 1
 JEV-CONNAUGHT LABORATORIES | 1
+TYP-UNKNOWN MANUFACTURER | 1
+DTAP-UNKNOWN MANUFACTURER | 1
+PPV-UNKNOWN MANUFACTURER | 1
+HIBV-UNKNOWN MANUFACTURER | 1
 TYP-BERNA BIOTECH, LTD. | 1
 ---
 # Total Symptoms
@@ -234,23 +272,37 @@ FLU3-PFIZER\WYETH | 1461
 LYME-SMITHKLINE BEECHAM | 1453
 PPV-PFIZER\WYETH | 1337
 HIBV-MERCK & CO. INC. | 1199
+FLUX-UNKNOWN MANUFACTURER | 1000
 FLU3-PARKDALE PHARMACEUTICALS | 927
 HBHEPB-MERCK & CO. INC. | 875
 HEPA-SMITHKLINE BEECHAM | 771
+HEP-UNKNOWN MANUFACTURER | 683
 TD-LEDERLE LABORATORIES | 646
 TD-PFIZER\WYETH | 638
 FLU3-MEDEVA PHARMA, LTD. | 500
+MMR-UNKNOWN MANUFACTURER | 449
 DTPHIB-PFIZER\WYETH | 413
+DTP-UNKNOWN MANUFACTURER | 405
+OPV-UNKNOWN MANUFACTURER | 402
+TD-UNKNOWN MANUFACTURER | 351
+PPV-UNKNOWN MANUFACTURER | 340
+HIBV-UNKNOWN MANUFACTURER | 339
 HEPA-MERCK & CO. INC. | 334
 RAB-PASTEUR MERIEUX INST. | 295
 IPV-PASTEUR MERIEUX INST. | 236
 DTP-CONNAUGHT LABORATORIES | 230
+DTAP-UNKNOWN MANUFACTURER | 229
 YF-CONNAUGHT LABORATORIES | 223
+UNK-UNKNOWN MANUFACTURER | 219
+ANTH-UNKNOWN MANUFACTURER | 185
+IPV-UNKNOWN MANUFACTURER | 171
+TTOX-UNKNOWN MANUFACTURER | 162
 TYP-CONNAUGHT LABORATORIES | 134
 DTP-LEDERLE LABORATORIES | 133
 TTOX-CONNAUGHT LABORATORIES | 131
 MEN-CONNAUGHT LABORATORIES | 129
 TYP-BERNA BIOTECH, LTD. | 122
+HEPA-UNKNOWN MANUFACTURER | 112
 DT-CONNAUGHT LABORATORIES | 109
 TTOX-PFIZER\WYETH | 103
 TTOX-LEDERLE LABORATORIES | 99
@@ -259,31 +311,47 @@ RUB-MERCK & CO. INC. | 92
 TYP-PFIZER\WYETH | 85
 DTAP-NORTH AMERICAN VACCINES | 67
 JEV-CONNAUGHT LABORATORIES | 62
+TYP-UNKNOWN MANUFACTURER | 56
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 56
+MEN-UNKNOWN MANUFACTURER | 49
+DT-UNKNOWN MANUFACTURER | 45
 ANTH-EMERGENT BIOSOLUTIONS | 42
 DT-LEDERLE LABORATORIES | 41
 TD-MASS. PUB HLTH BIOL LAB | 35
 MEN-CONNAUGHT LTD. | 32
+YF-UNKNOWN MANUFACTURER | 27
 DT-PFIZER\WYETH | 26
 RAB-CONNAUGHT LTD. | 22
+RAB-UNKNOWN MANUFACTURER | 20
 HBPV-PFIZER\WYETH | 19
+MER-UNKNOWN MANUFACTURER | 19
 DT-CONNAUGHT LTD. | 16
 DTPIPV-SANOFI PASTEUR | 13
 HIBV-SANOFI PASTEUR | 13
 CHOL-PFIZER\WYETH | 11
+CHOL-UNKNOWN MANUFACTURER | 11
 HIBV-LEDERLE PRAXSIS | 9
+SMALL-UNKNOWN MANUFACTURER | 8
 DTP-MASS. PUB HLTH BIOL LAB | 8
 RAB-MICHIGAN DEPT PUB HLTH | 8
 IPV-PASTEUR MERIEUX CONNAUGHT | 7
+DTPHIB-UNKNOWN MANUFACTURER | 7
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 7
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 7
 TTOX-BERNA BIOTECH, LTD. | 6
 IPV-SANOFI PASTEUR | 6
 MU-MERCK & CO. INC. | 5
 DTAP-SANOFI PASTEUR | 5
+DTAPH-UNKNOWN MANUFACTURER | 5
 FLU3-SANOFI PASTEUR | 5
+DTPPHIB-UNKNOWN MANUFACTURER | 4
+BCG-UNKNOWN MANUFACTURER | 4
 JEV-SANOFI PASTEUR | 3
 IPV-PFIZER\WYETH | 3
+RUB-UNKNOWN MANUFACTURER | 2
+MEA-UNKNOWN MANUFACTURER | 2
+HBPV-UNKNOWN MANUFACTURER | 2
 FLU3-PARKE-DAVIS | 2
+PLAGUE-UNKNOWN MANUFACTURER | 2
 DT-MASS. PUB HLTH BIOL LAB | 1
 ---
