--- a/results/2000.md
+++ b/results/2000.md
@@ -74,30 +74,44 @@ TD-PFIZER\WYETH | 220
 FLU3-MEDEVA PHARMA, LTD. | 190
 HEPA-MERCK & CO. INC. | 182
 RV-PFIZER\WYETH | 146
+FLUX-UNKNOWN MANUFACTURER | 138
+HEP-UNKNOWN MANUFACTURER | 127
 FLU3-PARKDALE PHARMACEUTICALS | 117
 RAB-PASTEUR MERIEUX INST. | 109
+UNK-UNKNOWN MANUFACTURER | 109
 TYP-CONNAUGHT LABORATORIES | 100
+IPV-UNKNOWN MANUFACTURER | 89
+HIBV-UNKNOWN MANUFACTURER | 79
 YF-CONNAUGHT LABORATORIES | 78
+DTP-UNKNOWN MANUFACTURER | 74
 MEN-CONNAUGHT LABORATORIES | 71
 TYP-PFIZER\WYETH | 65
+DTAP-UNKNOWN MANUFACTURER | 62
 RUB-MERCK & CO. INC. | 60
 DT-CONNAUGHT LABORATORIES | 58
+TD-UNKNOWN MANUFACTURER | 55
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 52
 DTPHIB-PFIZER\WYETH | 48
 IPV-SANOFI PASTEUR | 39
 ANTH-EMERGENT BIOSOLUTIONS | 36
+HEPA-UNKNOWN MANUFACTURER | 35
 DTAP-NORTH AMERICAN VACCINES | 34
 TTOX-PFIZER\WYETH | 32
+PPV-UNKNOWN MANUFACTURER | 32
 FLU3-SANOFI PASTEUR | 31
 TTOX-LEDERLE LABORATORIES | 30
+TTOX-UNKNOWN MANUFACTURER | 29
 TTOX-CONNAUGHT LABORATORIES | 27
 DTP-CONNAUGHT LABORATORIES | 27
+OPV-UNKNOWN MANUFACTURER | 27
 JEV-CONNAUGHT LABORATORIES | 26
 DTP-LEDERLE LABORATORIES | 24
 DT-LEDERLE LABORATORIES | 23
 HBPV-PFIZER\WYETH | 19
+TYP-UNKNOWN MANUFACTURER | 19
 DT-CONNAUGHT LTD. | 17
 DTAP-SANOFI PASTEUR | 15
+MMR-UNKNOWN MANUFACTURER | 15
 RAB-CONNAUGHT LTD. | 14
 MEN-CONNAUGHT LTD. | 14
 TD-MASS. PUB HLTH BIOL LAB | 14
@@ -105,21 +119,31 @@ HEPA-GLAXOSMITHKLINE BIOLOGICALS | 14
 HIBV-SANOFI PASTEUR | 13
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 13
 MEA-MERCK & CO. INC. | 11
+MEN-UNKNOWN MANUFACTURER | 11
+DT-UNKNOWN MANUFACTURER | 10
 DTP-PFIZER\WYETH | 9
 CHOL-PFIZER\WYETH | 8
 DT-PFIZER\WYETH | 8
 TYP-BERNA BIOTECH, LTD. | 8
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 7
+ANTH-UNKNOWN MANUFACTURER | 6
+DTAPH-UNKNOWN MANUFACTURER | 5
 MU-MERCK & CO. INC. | 5
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 5
+HBHEPB-UNKNOWN MANUFACTURER | 5
 MER-MERCK & CO. INC. | 5
 YF-SANOFI PASTEUR | 5
 FLUX-PFIZER\WYETH | 5
 DTAPH-SANOFI PASTEUR | 4
+RAB-UNKNOWN MANUFACTURER | 4
+YF-UNKNOWN MANUFACTURER | 4
+DTPHIB-UNKNOWN MANUFACTURER | 4
 MEN-SANOFI PASTEUR | 4
 TD-SANOFI PASTEUR | 4
 IPV-PFIZER\WYETH | 3
+DTOX-UNKNOWN MANUFACTURER | 3
 TD-MICHIGAN DEPT PUB HLTH | 3
+JEVX-UNKNOWN MANUFACTURER | 3
 TYP-SANOFI PASTEUR | 3
 DTP-SANOFI PASTEUR | 3
 FLU3-EVANS VACCINES | 3
@@ -128,14 +152,20 @@ IPV-PASTEUR MERIEUX CONNAUGHT | 2
 FLU3-PARKE-DAVIS | 2
 DT-MASS. PUB HLTH BIOL LAB | 2
 RUB-BURROUGHS WELLCOME | 2
+DTPIHI-UNKNOWN MANUFACTURER | 1
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 1
+RUB-UNKNOWN MANUFACTURER | 1
+MER-UNKNOWN MANUFACTURER | 1
 JEV-SANOFI PASTEUR | 1
 MM-MERCK & CO. INC. | 1
 DT-GLAXOSMITHKLINE BIOLOGICALS | 1
+PER-UNKNOWN MANUFACTURER | 1
 UNK-MERCK & CO. INC. | 1
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
+CHOL-UNKNOWN MANUFACTURER | 1
 TTOX-MEDEVA PHARMA, LTD. | 1
 ADEN-PFIZER\WYETH | 1
+VARCEL-UNKNOWN MANUFACTURER | 1
 SMALL-PFIZER\WYETH | 1
 HIBV-LEDERLE PRAXSIS | 1
 RAB-MICHIGAN DEPT PUB HLTH | 1
@@ -185,28 +215,39 @@ PNC-PFIZER\WYETH | 18
 HEP-MERCK & CO. INC. | 16
 MMR-MERCK & CO. INC. | 9
 FLU3-AVENTIS PASTEUR | 7
+HIBV-UNKNOWN MANUFACTURER | 5
 OPV-PFIZER\WYETH | 5
 FLU3-PFIZER\WYETH | 5
+DTAP-UNKNOWN MANUFACTURER | 3
 HIBV-MERCK & CO. INC. | 3
 PPV-MERCK & CO. INC. | 3
+OPV-UNKNOWN MANUFACTURER | 3
 VARCEL-MERCK & CO. INC. | 3
 DTAP-NORTH AMERICAN VACCINES | 3
 ANTH-MICHIGAN DEPT PUB HLTH | 3
+HEP-UNKNOWN MANUFACTURER | 2
+MEN-UNKNOWN MANUFACTURER | 2
 FLU3-CONNAUGHT LABORATORIES | 2
 PPV-PFIZER\WYETH | 2
+UNK-UNKNOWN MANUFACTURER | 2
 HEPA-SMITHKLINE BEECHAM | 2
 FLU3-MEDEVA PHARMA, LTD. | 2
 FLU3-PARKDALE PHARMACEUTICALS | 1
+IPV-UNKNOWN MANUFACTURER | 1
 DTPHIB-PFIZER\WYETH | 1
 FLU3-SANOFI PASTEUR | 1
 DTP-LEDERLE LABORATORIES | 1
+DTP-UNKNOWN MANUFACTURER | 1
 LYME-SMITHKLINE BEECHAM | 1
 MEA-MERCK & CO. INC. | 1
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+FLUX-UNKNOWN MANUFACTURER | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
 RV-PFIZER\WYETH | 1
 FLU3-EVANS VACCINES | 1
 TD-CONNAUGHT LABORATORIES | 1
+PPV-UNKNOWN MANUFACTURER | 1
+TTOX-UNKNOWN MANUFACTURER | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
@@ -283,19 +324,30 @@ OPV-PFIZER\WYETH | 737
 FLU3-MEDEVA PHARMA, LTD. | 676
 HIBV-MERCK & CO. INC. | 665
 HEPA-MERCK & CO. INC. | 541
+FLUX-UNKNOWN MANUFACTURER | 521
+HEP-UNKNOWN MANUFACTURER | 484
 FLU3-PARKDALE PHARMACEUTICALS | 400
 RAB-PASTEUR MERIEUX INST. | 395
 RV-PFIZER\WYETH | 373
 TYP-CONNAUGHT LABORATORIES | 354
+UNK-UNKNOWN MANUFACTURER | 350
+HIBV-UNKNOWN MANUFACTURER | 287
+IPV-UNKNOWN MANUFACTURER | 283
 MEN-CONNAUGHT LABORATORIES | 253
 YF-CONNAUGHT LABORATORIES | 244
+DTP-UNKNOWN MANUFACTURER | 223
+DTAP-UNKNOWN MANUFACTURER | 214
+TD-UNKNOWN MANUFACTURER | 195
 DTPHIB-PFIZER\WYETH | 192
 TYP-PFIZER\WYETH | 182
 DT-CONNAUGHT LABORATORIES | 181
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 177
 IPV-SANOFI PASTEUR | 161
 RUB-MERCK & CO. INC. | 159
+HEPA-UNKNOWN MANUFACTURER | 147
+OPV-UNKNOWN MANUFACTURER | 121
 TTOX-PFIZER\WYETH | 120
+PPV-UNKNOWN MANUFACTURER | 114
 ANTH-EMERGENT BIOSOLUTIONS | 110
 TTOX-CONNAUGHT LABORATORIES | 109
 FLU3-SANOFI PASTEUR | 94
@@ -303,6 +355,8 @@ DTAP-NORTH AMERICAN VACCINES | 91
 TTOX-LEDERLE LABORATORIES | 86
 DTP-LEDERLE LABORATORIES | 85
 DT-LEDERLE LABORATORIES | 85
+TTOX-UNKNOWN MANUFACTURER | 84
+TYP-UNKNOWN MANUFACTURER | 74
 DTP-CONNAUGHT LABORATORIES | 73
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 71
 HBPV-PFIZER\WYETH | 65
@@ -313,22 +367,33 @@ MEN-CONNAUGHT LTD. | 52
 HIBV-SANOFI PASTEUR | 52
 RAB-CONNAUGHT LTD. | 49
 DTAP-SANOFI PASTEUR | 48
+MMR-UNKNOWN MANUFACTURER | 46
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 43
+MEN-UNKNOWN MANUFACTURER | 39
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 38
+DT-UNKNOWN MANUFACTURER | 33
 MEA-MERCK & CO. INC. | 28
+ANTH-UNKNOWN MANUFACTURER | 24
 CHOL-PFIZER\WYETH | 24
 MER-MERCK & CO. INC. | 23
 DTP-PFIZER\WYETH | 22
 MU-MERCK & CO. INC. | 19
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 18
 DT-PFIZER\WYETH | 18
+DTAPH-UNKNOWN MANUFACTURER | 17
+HBHEPB-UNKNOWN MANUFACTURER | 17
 TYP-BERNA BIOTECH, LTD. | 17
+RAB-UNKNOWN MANUFACTURER | 15
+DTPHIB-UNKNOWN MANUFACTURER | 14
 FLUX-PFIZER\WYETH | 14
 DTPHIB-SANOFI PASTEUR | 14
 DTAPH-SANOFI PASTEUR | 13
 FLU3-EVANS VACCINES | 13
 MEN-SANOFI PASTEUR | 12
+DTPIHI-UNKNOWN MANUFACTURER | 10
+YF-UNKNOWN MANUFACTURER | 10
 IPV-PFIZER\WYETH | 9
+DTOX-UNKNOWN MANUFACTURER | 9
 TYP-SANOFI PASTEUR | 9
 DTP-SANOFI PASTEUR | 9
 TD-SANOFI PASTEUR | 9
@@ -337,11 +402,14 @@ IPV-PASTEUR MERIEUX CONNAUGHT | 8
 FLU3-PARKE-DAVIS | 8
 RAB-MICHIGAN DEPT PUB HLTH | 8
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 7
+JEVX-UNKNOWN MANUFACTURER | 7
 ADEN-PFIZER\WYETH | 7
 TD-MICHIGAN DEPT PUB HLTH | 6
 DT-GLAXOSMITHKLINE BIOLOGICALS | 6
 RUB-BURROUGHS WELLCOME | 6
 HEP-SANOFI PASTEUR | 5
+RUB-UNKNOWN MANUFACTURER | 5
+CHOL-UNKNOWN MANUFACTURER | 5
 TTOX-MEDEVA PHARMA, LTD. | 5
 SMALL-PFIZER\WYETH | 5
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 4
@@ -349,6 +417,9 @@ DT-MASS. PUB HLTH BIOL LAB | 3
 JEV-SANOFI PASTEUR | 3
 MM-MERCK & CO. INC. | 3
 RAB-SANOFI PASTEUR | 3
+MER-UNKNOWN MANUFACTURER | 2
+PER-UNKNOWN MANUFACTURER | 2
+VARCEL-UNKNOWN MANUFACTURER | 2
 UNK-MERCK & CO. INC. | 1
 HIBV-LEDERLE PRAXSIS | 1
 ---
