--- a/results/2001.md
+++ b/results/2001.md
@@ -73,30 +73,43 @@ FLU3-AVENTIS PASTEUR | 295
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 295
 HEPA-MERCK & CO. INC. | 273
 HIBV-MERCK & CO. INC. | 247
+FLUX-UNKNOWN MANUFACTURER | 172
+IPV-UNKNOWN MANUFACTURER | 129
+HEP-UNKNOWN MANUFACTURER | 117
 TD-LEDERLE LABORATORIES | 117
 FLU3-EVANS VACCINES | 108
 DTAP-SANOFI PASTEUR | 105
 TYP-CONNAUGHT LABORATORIES | 103
 OPV-PFIZER\WYETH | 91
 ANTH-EMERGENT BIOSOLUTIONS | 90
+DTAP-UNKNOWN MANUFACTURER | 89
 YF-CONNAUGHT LABORATORIES | 89
+DTP-UNKNOWN MANUFACTURER | 77
+HIBV-UNKNOWN MANUFACTURER | 76
 FLU3-MEDEVA PHARMA, LTD. | 70
 DT-CONNAUGHT LABORATORIES | 67
 MEN-CONNAUGHT LABORATORIES | 64
+UNK-UNKNOWN MANUFACTURER | 62
 IPV-PASTEUR MERIEUX INST. | 62
 HBPV-PFIZER\WYETH | 60
+MMR-UNKNOWN MANUFACTURER | 59
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 52
 TTOX-LEDERLE LABORATORIES | 50
 TD-PFIZER\WYETH | 41
 MEN-CONNAUGHT LTD. | 41
+PPV-UNKNOWN MANUFACTURER | 40
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 38
 RUB-MERCK & CO. INC. | 37
+HEPA-UNKNOWN MANUFACTURER | 35
 TTOX-CONNAUGHT LABORATORIES | 32
 RAB-PASTEUR MERIEUX INST. | 32
 DTPHIB-PFIZER\WYETH | 31
+TD-UNKNOWN MANUFACTURER | 31
 TYP-PFIZER\WYETH | 30
+OPV-UNKNOWN MANUFACTURER | 27
 ANTH-MICHIGAN DEPT PUB HLTH | 24
 SMALL-PFIZER\WYETH | 23
+TTOX-UNKNOWN MANUFACTURER | 22
 DTP-CONNAUGHT LABORATORIES | 21
 DT-LEDERLE LABORATORIES | 21
 TD-MASS. PUB HLTH BIOL LAB | 20
@@ -109,39 +122,54 @@ DT-CONNAUGHT LTD. | 17
 HIBV-SANOFI PASTEUR | 17
 FLU3-CONNAUGHT LABORATORIES | 15
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 15
+DT-UNKNOWN MANUFACTURER | 10
+TYP-UNKNOWN MANUFACTURER | 9
 TD-SANOFI PASTEUR | 9
+DTAPH-UNKNOWN MANUFACTURER | 8
 DTPIPV-SANOFI PASTEUR | 8
 TD-MICHIGAN DEPT PUB HLTH | 7
+DTOX-UNKNOWN MANUFACTURER | 7
 UNK-MERCK & CO. INC. | 7
+MEN-UNKNOWN MANUFACTURER | 6
 MER-MERCK & CO. INC. | 6
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 6
 UNK-CONNAUGHT LABORATORIES | 5
 DT-MASS. PUB HLTH BIOL LAB | 5
+VARCEL-UNKNOWN MANUFACTURER | 5
+HBHEPB-UNKNOWN MANUFACTURER | 5
 DTAPH-SANOFI PASTEUR | 5
 TD-GLAXOSMITHKLINE BIOLOGICALS | 5
 DTAP-NORTH AMERICAN VACCINES | 4
 MU-MERCK & CO. INC. | 4
 TTOX-PFIZER\WYETH | 3
+ANTH-UNKNOWN MANUFACTURER | 3
 RAB-MICHIGAN DEPT PUB HLTH | 3
 CHOL-PFIZER\WYETH | 3
 FLUX-PFIZER\WYETH | 3
 DT-PFIZER\WYETH | 3
 MUR-MERCK & CO. INC. | 3
 MEN-SANOFI PASTEUR | 3
+JEVX-UNKNOWN MANUFACTURER | 3
 TYP-SANOFI PASTEUR | 3
 TYP-BERNA BIOTECH, LTD. | 3
+YF-UNKNOWN MANUFACTURER | 2
 IPV-PFIZER\WYETH | 2
 BCG-ORGANON-TEKNIKA | 2
+RUB-UNKNOWN MANUFACTURER | 2
 JEV-SANOFI PASTEUR | 2
 TTOX-SANOFI PASTEUR | 2
+MER-UNKNOWN MANUFACTURER | 2
 ADEN-PFIZER\WYETH | 2
 DTP-MASS. PUB HLTH BIOL LAB | 2
 MM-MERCK & CO. INC. | 2
 TTOX-MASS. PUB HLTH BIOL LAB | 1
 DTP-PFIZER\WYETH | 1
 HIBV-LEDERLE PRAXSIS | 1
+RAB-UNKNOWN MANUFACTURER | 1
 DT-SANOFI PASTEUR | 1
 HEP-SANOFI PASTEUR | 1
+DPP-UNKNOWN MANUFACTURER | 1
+MEA-UNKNOWN MANUFACTURER | 1
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
 RUB-BURROUGHS WELLCOME | 1
 DTAP-BAXTER HEALTHCARE CORP. | 1
@@ -150,7 +178,9 @@ UNK-MASS. PUB HLTH BIOL LAB | 1
 YF-SANOFI PASTEUR | 1
 DT-MICHIGAN DEPT PUB HLTH | 1
 DT-SCLAVO | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 DTP-SANOFI PASTEUR | 1
+DTPHIB-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -195,23 +225,31 @@ FLU3-PFIZER\WYETH | 7
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 7
 PPV-MERCK & CO. INC. | 7
 FLU3-SANOFI PASTEUR | 6
+FLUX-UNKNOWN MANUFACTURER | 5
 DTAP-PFIZER\WYETH | 5
 FLU3-EVANS VACCINES | 5
 FLU3-MEDEVA PHARMA, LTD. | 4
+IPV-UNKNOWN MANUFACTURER | 4
 DTAP-SANOFI PASTEUR | 4
 FLU3-AVENTIS PASTEUR | 3
+HIBV-UNKNOWN MANUFACTURER | 3
 HIBV-MERCK & CO. INC. | 3
 HEPA-SMITHKLINE BEECHAM | 2
 DTP-LEDERLE LABORATORIES | 2
 ANTH-EMERGENT BIOSOLUTIONS | 2
 OPV-PFIZER\WYETH | 2
+DTAP-UNKNOWN MANUFACTURER | 2
+HEP-UNKNOWN MANUFACTURER | 2
 DTAP-NORTH AMERICAN VACCINES | 1
 FLU3-CONNAUGHT LABORATORIES | 1
 DT-CONNAUGHT LABORATORIES | 1
 MEN-CONNAUGHT LABORATORIES | 1
+PPV-UNKNOWN MANUFACTURER | 1
 HIBV-SANOFI PASTEUR | 1
+MMR-UNKNOWN MANUFACTURER | 1
 MEN-CONNAUGHT LTD. | 1
 LYME-SMITHKLINE BEECHAM | 1
+UNK-UNKNOWN MANUFACTURER | 1
 HBPV-PFIZER\WYETH | 1
 ---
 # Total Symptoms
@@ -289,26 +327,38 @@ FLU3-AVENTIS PASTEUR | 957
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 881
 HEPA-MERCK & CO. INC. | 861
 HIBV-MERCK & CO. INC. | 697
+FLUX-UNKNOWN MANUFACTURER | 666
+HEP-UNKNOWN MANUFACTURER | 526
+IPV-UNKNOWN MANUFACTURER | 461
 ANTH-EMERGENT BIOSOLUTIONS | 407
 OPV-PFIZER\WYETH | 393
 TD-LEDERLE LABORATORIES | 387
 FLU3-EVANS VACCINES | 371
 TYP-CONNAUGHT LABORATORIES | 347
 DTAP-SANOFI PASTEUR | 345
+DTP-UNKNOWN MANUFACTURER | 336
 YF-CONNAUGHT LABORATORIES | 321
 FLU3-MEDEVA PHARMA, LTD. | 311
+DTAP-UNKNOWN MANUFACTURER | 292
+HIBV-UNKNOWN MANUFACTURER | 267
+MMR-UNKNOWN MANUFACTURER | 237
 MEN-CONNAUGHT LABORATORIES | 218
 DT-CONNAUGHT LABORATORIES | 200
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 191
+UNK-UNKNOWN MANUFACTURER | 187
 TD-PFIZER\WYETH | 170
 IPV-PASTEUR MERIEUX INST. | 165
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 165
 HBPV-PFIZER\WYETH | 159
 TTOX-CONNAUGHT LABORATORIES | 146
 DTPHIB-PFIZER\WYETH | 144
+PPV-UNKNOWN MANUFACTURER | 141
 TTOX-LEDERLE LABORATORIES | 133
+HEPA-UNKNOWN MANUFACTURER | 131
+TD-UNKNOWN MANUFACTURER | 130
 MEN-CONNAUGHT LTD. | 130
 ANTH-MICHIGAN DEPT PUB HLTH | 128
+OPV-UNKNOWN MANUFACTURER | 118
 RAB-PASTEUR MERIEUX INST. | 109
 RUB-MERCK & CO. INC. | 99
 JEV-CONNAUGHT LABORATORIES | 88
@@ -318,6 +368,7 @@ TYP-PFIZER\WYETH | 85
 HIBV-SANOFI PASTEUR | 85
 TD-MASS. PUB HLTH BIOL LAB | 84
 DTP-LEDERLE LABORATORIES | 75
+TTOX-UNKNOWN MANUFACTURER | 72
 DT-LEDERLE LABORATORIES | 66
 DT-CONNAUGHT LTD. | 62
 DTP-CONNAUGHT LABORATORIES | 62
@@ -325,20 +376,33 @@ MEA-MERCK & CO. INC. | 60
 FLU3-CONNAUGHT LABORATORIES | 58
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 53
 RV-PFIZER\WYETH | 53
+DT-UNKNOWN MANUFACTURER | 47
+MEN-UNKNOWN MANUFACTURER | 40
+TYP-UNKNOWN MANUFACTURER | 36
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 36
 TD-MICHIGAN DEPT PUB HLTH | 33
+DTAPH-UNKNOWN MANUFACTURER | 30
 TYP-SANOFI PASTEUR | 29
 TD-SANOFI PASTEUR | 29
 UNK-CONNAUGHT LABORATORIES | 24
+DTOX-UNKNOWN MANUFACTURER | 23
 DTPIPV-SANOFI PASTEUR | 23
 MER-MERCK & CO. INC. | 22
 DTAPH-SANOFI PASTEUR | 22
+MEA-UNKNOWN MANUFACTURER | 21
+HBHEPB-UNKNOWN MANUFACTURER | 21
 TD-GLAXOSMITHKLINE BIOLOGICALS | 21
 UNK-MERCK & CO. INC. | 17
+DTPHIB-UNKNOWN MANUFACTURER | 16
+VARCEL-UNKNOWN MANUFACTURER | 15
 DT-MASS. PUB HLTH BIOL LAB | 14
+DPP-UNKNOWN MANUFACTURER | 13
+ANTH-UNKNOWN MANUFACTURER | 12
 MUR-MERCK & CO. INC. | 12
+JEVX-UNKNOWN MANUFACTURER | 12
 RAB-MICHIGAN DEPT PUB HLTH | 11
 DT-PFIZER\WYETH | 11
+RUB-UNKNOWN MANUFACTURER | 11
 IPV-PFIZER\WYETH | 10
 MEN-SANOFI PASTEUR | 10
 MU-MERCK & CO. INC. | 9
@@ -352,9 +416,12 @@ DT-SANOFI PASTEUR | 7
 BCG-ORGANON-TEKNIKA | 7
 DTP-MASS. PUB HLTH BIOL LAB | 7
 DTAP-NORTH AMERICAN VACCINES | 6
+YF-UNKNOWN MANUFACTURER | 5
 JEV-SANOFI PASTEUR | 5
 TYP-BERNA BIOTECH, LTD. | 5
 TTOX-SANOFI PASTEUR | 5
+MER-UNKNOWN MANUFACTURER | 4
+RAB-UNKNOWN MANUFACTURER | 3
 RUB-BURROUGHS WELLCOME | 3
 TTOX-MASS. PUB HLTH BIOL LAB | 2
 DTP-PFIZER\WYETH | 2
@@ -363,6 +430,7 @@ HIBV-GLAXOSMITHKLINE BIOLOGICALS | 2
 DTAP-BAXTER HEALTHCARE CORP. | 2
 YF-SANOFI PASTEUR | 2
 DT-MICHIGAN DEPT PUB HLTH | 2
+HBPV-UNKNOWN MANUFACTURER | 2
 DTP-SANOFI PASTEUR | 2
 HIBV-LEDERLE PRAXSIS | 1
 UNK-MASS. PUB HLTH BIOL LAB | 1
