--- a/results/2002.md
+++ b/results/2002.md
@@ -65,11 +65,16 @@ DTAP-GLAXOSMITHKLINE BIOLOGICALS | 481
 HIBV-PFIZER\WYETH | 414
 FLU3-PFIZER\WYETH | 400
 HEPA-SMITHKLINE BEECHAM | 301
+FLUX-UNKNOWN MANUFACTURER | 275
 HIBV-MERCK & CO. INC. | 266
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 253
 FLU3-EVANS VACCINES | 240
 HEPA-MERCK & CO. INC. | 239
 ANTH-EMERGENT BIOSOLUTIONS | 205
+DTAP-UNKNOWN MANUFACTURER | 194
+UNK-UNKNOWN MANUFACTURER | 163
+IPV-UNKNOWN MANUFACTURER | 161
+HEP-UNKNOWN MANUFACTURER | 159
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 153
 MEN-SANOFI PASTEUR | 130
 IPV-CONNAUGHT LTD. | 122
@@ -77,54 +82,74 @@ YF-SANOFI PASTEUR | 122
 DTAP-PFIZER\WYETH | 121
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 103
 OPV-PFIZER\WYETH | 99
+HIBV-UNKNOWN MANUFACTURER | 92
+DTP-UNKNOWN MANUFACTURER | 90
 PPV-PFIZER\WYETH | 87
 LYME-SMITHKLINE BEECHAM | 85
 TYP-SANOFI PASTEUR | 85
+PPV-UNKNOWN MANUFACTURER | 83
 TTOX-SANOFI PASTEUR | 73
 DTAP-CONNAUGHT LABORATORIES | 70
 HIBV-CONNAUGHT LABORATORIES | 70
 DTAPH-SANOFI PASTEUR | 68
 RAB-SANOFI PASTEUR | 60
+TD-UNKNOWN MANUFACTURER | 52
 HBPV-PFIZER\WYETH | 51
+MMR-UNKNOWN MANUFACTURER | 50
+HEPA-UNKNOWN MANUFACTURER | 47
 DTPHIB-PFIZER\WYETH | 42
 SMALL-PFIZER\WYETH | 42
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 37
 TD-MASS. PUB HLTH BIOL LAB | 37
+VARCEL-UNKNOWN MANUFACTURER | 37
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 35
 DT-SANOFI PASTEUR | 35
 RUB-MERCK & CO. INC. | 34
+TTOX-UNKNOWN MANUFACTURER | 31
 TD-CONNAUGHT LABORATORIES | 29
+TYP-UNKNOWN MANUFACTURER | 25
 TYP-BERNA BIOTECH, LTD. | 24
 DTP-LEDERLE LABORATORIES | 23
+OPV-UNKNOWN MANUFACTURER | 22
 HEPAB-SMITHKLINE BEECHAM | 22
 MEA-MERCK & CO. INC. | 21
 JEV-SANOFI PASTEUR | 20
 TTOX-LEDERLE LABORATORIES | 18
 RV-PFIZER\WYETH | 14
+RAB-UNKNOWN MANUFACTURER | 13
 DTP-SANOFI PASTEUR | 13
 ANTH-MICHIGAN DEPT PUB HLTH | 12
 FLU3-MEDEVA PHARMA, LTD. | 12
 YF-CONNAUGHT LABORATORIES | 10
 TYP-CONNAUGHT LABORATORIES | 9
 DTP-CONNAUGHT LABORATORIES | 9
+DT-UNKNOWN MANUFACTURER | 9
+MEN-UNKNOWN MANUFACTURER | 9
 TD-LEDERLE LABORATORIES | 9
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 9
 DT-LEDERLE LABORATORIES | 8
 MU-MERCK & CO. INC. | 8
 TTOX-CONNAUGHT LABORATORIES | 6
+YF-UNKNOWN MANUFACTURER | 6
 FLU3-AVENTIS PASTEUR | 5
+DTAPH-UNKNOWN MANUFACTURER | 5
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 5
 MM-MERCK & CO. INC. | 4
+SMALL-UNKNOWN MANUFACTURER | 4
 TTOX-MASS. PUB HLTH BIOL LAB | 4
 RAB-CONNAUGHT LTD. | 4
 MEN-CONNAUGHT LABORATORIES | 4
 FLU3-CONNAUGHT LABORATORIES | 4
+ANTH-UNKNOWN MANUFACTURER | 4
 IPV-PFIZER\WYETH | 4
 DTPHIB-SANOFI PASTEUR | 4
 DT-GLAXOSMITHKLINE BIOLOGICALS | 4
 MER-MERCK & CO. INC. | 3
+DTPHIB-UNKNOWN MANUFACTURER | 3
+RUB-UNKNOWN MANUFACTURER | 2
 RAB-PASTEUR MERIEUX INST. | 2
 TD-PFIZER\WYETH | 2
+DTPPHIB-UNKNOWN MANUFACTURER | 2
 TTOX-PFIZER\WYETH | 2
 JEV-CONNAUGHT LABORATORIES | 2
 DT-MASS. PUB HLTH BIOL LAB | 2
@@ -140,6 +165,8 @@ MEN-CONNAUGHT LTD. | 1
 HIBV-LEDERLE PRAXSIS | 1
 RAB-EMERGENT BIOSOLUTIONS | 1
 DTP-MASS. PUB HLTH BIOL LAB | 1
+DTOX-UNKNOWN MANUFACTURER | 1
+HBHEPB-UNKNOWN MANUFACTURER | 1
 UNK-MERCK & CO. INC. | 1
 DT-CONNAUGHT LABORATORIES | 1
 DTAP-BAXTER HEALTHCARE CORP. | 1
@@ -147,11 +174,14 @@ DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 1
 DTPIPV-SANOFI PASTEUR | 1
 TTOX-MEDEVA PHARMA, LTD. | 1
 TD-MICHIGAN DEPT PUB HLTH | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 TTOX-MICHIGAN DEPT PUB HLTH | 1
 CHOL-LEDERLE LABORATORIES | 1
+CHOL-UNKNOWN MANUFACTURER | 1
 TD-GLAXOSMITHKLINE BIOLOGICALS | 1
 TYP-PFIZER\WYETH | 1
 IPV-PASTEUR MERIEUX CONNAUGHT | 1
+DPP-UNKNOWN MANUFACTURER | 1
 DT-BSI | 1
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 1
 RV5-MERCK & CO. INC. | 1
@@ -198,15 +228,21 @@ MMR-MERCK & CO. INC. | 10
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 9
 FLU3-SANOFI PASTEUR | 6
 HEP-MERCK & CO. INC. | 6
+FLUX-UNKNOWN MANUFACTURER | 6
 HIBV-MERCK & CO. INC. | 5
+UNK-UNKNOWN MANUFACTURER | 5
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 5
 OPV-PFIZER\WYETH | 5
+HEP-UNKNOWN MANUFACTURER | 4
 IPV-CONNAUGHT LTD. | 4
+DTAP-UNKNOWN MANUFACTURER | 4
+IPV-UNKNOWN MANUFACTURER | 4
 PPV-MERCK & CO. INC. | 4
 FLU3-MEDEVA PHARMA, LTD. | 3
 FLU3-PFIZER\WYETH | 3
 DTAP-CONNAUGHT LABORATORIES | 3
 VARCEL-MERCK & CO. INC. | 3
+PPV-UNKNOWN MANUFACTURER | 3
 HIBV-CONNAUGHT LABORATORIES | 2
 DTAP-PFIZER\WYETH | 2
 TD-SANOFI PASTEUR | 2
@@ -215,6 +251,11 @@ HBPV-PFIZER\WYETH | 1
 DTAPH-SANOFI PASTEUR | 1
 LYME-SMITHKLINE BEECHAM | 1
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1
+OPV-UNKNOWN MANUFACTURER | 1
+TTOX-UNKNOWN MANUFACTURER | 1
+DTP-UNKNOWN MANUFACTURER | 1
+HIBV-UNKNOWN MANUFACTURER | 1
+MEN-UNKNOWN MANUFACTURER | 1
 MEN-SANOFI PASTEUR | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
 RV-PFIZER\WYETH | 1
@@ -286,6 +327,7 @@ HIBV-SANOFI PASTEUR | 2051
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1455
 HIBV-PFIZER\WYETH | 1356
 FLU3-PFIZER\WYETH | 1307
+FLUX-UNKNOWN MANUFACTURER | 1001
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 970
 HEPA-SMITHKLINE BEECHAM | 931
 FLU3-EVANS VACCINES | 883
@@ -293,13 +335,20 @@ ANTH-EMERGENT BIOSOLUTIONS | 830
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 766
 HIBV-MERCK & CO. INC. | 759
 HEPA-MERCK & CO. INC. | 640
+DTAP-UNKNOWN MANUFACTURER | 624
+IPV-UNKNOWN MANUFACTURER | 532
+HEP-UNKNOWN MANUFACTURER | 513
 LYME-SMITHKLINE BEECHAM | 484
+UNK-UNKNOWN MANUFACTURER | 473
 MEN-SANOFI PASTEUR | 430
 YF-SANOFI PASTEUR | 425
 DTAP-PFIZER\WYETH | 413
 IPV-CONNAUGHT LTD. | 367
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 363
 OPV-PFIZER\WYETH | 352
+PPV-UNKNOWN MANUFACTURER | 337
+DTP-UNKNOWN MANUFACTURER | 320
+HIBV-UNKNOWN MANUFACTURER | 295
 PPV-PFIZER\WYETH | 288
 TYP-SANOFI PASTEUR | 281
 TTOX-SANOFI PASTEUR | 261
@@ -307,17 +356,24 @@ DTAP-CONNAUGHT LABORATORIES | 252
 RAB-SANOFI PASTEUR | 225
 HIBV-CONNAUGHT LABORATORIES | 213
 DTAPH-SANOFI PASTEUR | 175
+TD-UNKNOWN MANUFACTURER | 172
+HEPA-UNKNOWN MANUFACTURER | 168
 DTPHIB-PFIZER\WYETH | 153
 TD-MASS. PUB HLTH BIOL LAB | 146
+MMR-UNKNOWN MANUFACTURER | 144
 SMALL-PFIZER\WYETH | 141
 HBPV-PFIZER\WYETH | 135
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 131
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 124
+TTOX-UNKNOWN MANUFACTURER | 114
 DT-SANOFI PASTEUR | 106
 RUB-MERCK & CO. INC. | 101
 DTP-LEDERLE LABORATORIES | 93
 MEA-MERCK & CO. INC. | 92
+TYP-UNKNOWN MANUFACTURER | 91
 TD-CONNAUGHT LABORATORIES | 79
+VARCEL-UNKNOWN MANUFACTURER | 79
+OPV-UNKNOWN MANUFACTURER | 73
 TYP-BERNA BIOTECH, LTD. | 71
 HEPAB-SMITHKLINE BEECHAM | 66
 DTP-CONNAUGHT LABORATORIES | 58
@@ -326,18 +382,27 @@ RV-PFIZER\WYETH | 43
 TD-LEDERLE LABORATORIES | 42
 TTOX-LEDERLE LABORATORIES | 41
 DTP-SANOFI PASTEUR | 36
+RAB-UNKNOWN MANUFACTURER | 35
 ANTH-MICHIGAN DEPT PUB HLTH | 30
 FLU3-MEDEVA PHARMA, LTD. | 30
+DT-UNKNOWN MANUFACTURER | 30
 YF-CONNAUGHT LABORATORIES | 29
+MEN-UNKNOWN MANUFACTURER | 27
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 27
 RAB-CONNAUGHT LTD. | 25
+YF-UNKNOWN MANUFACTURER | 25
 TYP-CONNAUGHT LABORATORIES | 23
+ANTH-UNKNOWN MANUFACTURER | 23
 DT-LEDERLE LABORATORIES | 22
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 21
 MU-MERCK & CO. INC. | 18
+SMALL-UNKNOWN MANUFACTURER | 17
 TTOX-CONNAUGHT LABORATORIES | 17
 FLU3-CONNAUGHT LABORATORIES | 17
+DTPPHIB-UNKNOWN MANUFACTURER | 16
+DTAPH-UNKNOWN MANUFACTURER | 15
 FLU3-AVENTIS PASTEUR | 13
+DTPHIB-UNKNOWN MANUFACTURER | 13
 DTPHIB-SANOFI PASTEUR | 13
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 13
 MEN-CONNAUGHT LABORATORIES | 12
@@ -349,10 +414,12 @@ DT-GLAXOSMITHKLINE BIOLOGICALS | 10
 TYP-PFIZER\WYETH | 10
 TD-PFIZER\WYETH | 9
 DT-EMERGENT BIOSOLUTIONS | 9
+CHOL-UNKNOWN MANUFACTURER | 9
 MM-MERCK & CO. INC. | 8
 RAB-PASTEUR MERIEUX INST. | 8
 JEV-CONNAUGHT LABORATORIES | 8
 BCG-SANOFI PASTEUR | 8
+RUB-UNKNOWN MANUFACTURER | 7
 TTOX-SCLAVO | 7
 DTP-PFIZER\WYETH | 7
 MEN-CONNAUGHT LTD. | 5
@@ -365,6 +432,7 @@ IPV-PASTEUR MERIEUX CONNAUGHT | 5
 RV5-MERCK & CO. INC. | 5
 UNK-MERCK & CO. INC. | 4
 TTOX-EMERGENT BIOSOLUTIONS | 4
+HBPV-UNKNOWN MANUFACTURER | 4
 DT-BSI | 4
 HIBV-LEDERLE PRAXSIS | 3
 RAB-EMERGENT BIOSOLUTIONS | 3
@@ -372,7 +440,10 @@ DTPIPV-SANOFI PASTEUR | 3
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 3
 CHOL-LEDERLE LABORATORIES | 3
 TD-GLAXOSMITHKLINE BIOLOGICALS | 3
+DPP-UNKNOWN MANUFACTURER | 3
 DTP-MASS. PUB HLTH BIOL LAB | 2
+DTOX-UNKNOWN MANUFACTURER | 2
+HBHEPB-UNKNOWN MANUFACTURER | 2
 DTAP-BAXTER HEALTHCARE CORP. | 2
 TTOX-MEDEVA PHARMA, LTD. | 2
 TTOX-MICHIGAN DEPT PUB HLTH | 2
