--- a/results/2003.md
+++ b/results/2003.md
@@ -68,66 +68,92 @@ HBHEPB-MERCK & CO. INC. | 683
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 606
 HEP-MERCK & CO. INC. | 601
 FLU3-EVANS VACCINES | 573
+FLUX-UNKNOWN MANUFACTURER | 376
 HEPA-MERCK & CO. INC. | 364
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 333
 HIBV-MERCK & CO. INC. | 297
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 232
 HEP-SMITHKLINE BEECHAM | 204
+HEP-UNKNOWN MANUFACTURER | 171
+DTAP-UNKNOWN MANUFACTURER | 168
 TTOX-SANOFI PASTEUR | 165
 MEN-SANOFI PASTEUR | 151
 RAB-SANOFI PASTEUR | 150
 TYP-SANOFI PASTEUR | 137
+IPV-UNKNOWN MANUFACTURER | 131
+UNK-UNKNOWN MANUFACTURER | 126
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 124
 FLU3-PFIZER\WYETH | 119
+MMR-UNKNOWN MANUFACTURER | 115
+HIBV-UNKNOWN MANUFACTURER | 114
 YF-SANOFI PASTEUR | 105
 HIBV-PFIZER\WYETH | 104
 HEPA-SMITHKLINE BEECHAM | 93
+PPV-UNKNOWN MANUFACTURER | 82
 DTAPH-SANOFI PASTEUR | 77
+HEPA-UNKNOWN MANUFACTURER | 74
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 71
 DT-SANOFI PASTEUR | 69
 TD-MASS. PUB HLTH BIOL LAB | 67
+VARCEL-UNKNOWN MANUFACTURER | 65
 ANTH-MICHIGAN DEPT PUB HLTH | 64
+TD-UNKNOWN MANUFACTURER | 64
 IPV-CONNAUGHT LTD. | 55
 DTAP-CONNAUGHT LABORATORIES | 54
 DTAP-PFIZER\WYETH | 52
+TYP-UNKNOWN MANUFACTURER | 51
 OPV-PFIZER\WYETH | 50
+TTOX-UNKNOWN MANUFACTURER | 43
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 36
+BCG-UNKNOWN MANUFACTURER | 34
 FLUN3-MEDIMMUNE VACCINES, INC. | 34
+DTP-UNKNOWN MANUFACTURER | 31
 PPV-PFIZER\WYETH | 31
+MEN-UNKNOWN MANUFACTURER | 31
 JEV-SANOFI PASTEUR | 30
 TYP-BERNA BIOTECH, LTD. | 29
 IPV-PFIZER\WYETH | 27
 RUB-MERCK & CO. INC. | 25
 IPV-PASTEUR MERIEUX CONNAUGHT | 22
 DT-BSI | 20
+OPV-UNKNOWN MANUFACTURER | 20
 HBPV-PFIZER\WYETH | 20
 DTP-SANOFI PASTEUR | 19
 HIBV-CONNAUGHT LABORATORIES | 18
 LYME-SMITHKLINE BEECHAM | 17
+YF-UNKNOWN MANUFACTURER | 17
 DTPHIB-SANOFI PASTEUR | 16
 MEA-MERCK & CO. INC. | 16
 DTPHIB-PFIZER\WYETH | 10
+DPP-UNKNOWN MANUFACTURER | 10
 DT-MASS. PUB HLTH BIOL LAB | 9
 HEPAB-SMITHKLINE BEECHAM | 9
 DT-GLAXOSMITHKLINE BIOLOGICALS | 9
 MER-MERCK & CO. INC. | 9
+DTAPH-UNKNOWN MANUFACTURER | 8
 DTP-LEDERLE LABORATORIES | 7
 MM-MERCK & CO. INC. | 7
+DT-UNKNOWN MANUFACTURER | 7
+RAB-UNKNOWN MANUFACTURER | 6
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 5
 MU-MERCK & CO. INC. | 5
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 5
+DTPHIB-UNKNOWN MANUFACTURER | 4
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 4
+RUB-UNKNOWN MANUFACTURER | 4
 TD-GLAXOSMITHKLINE BIOLOGICALS | 4
 TD-CONNAUGHT LABORATORIES | 3
 TTOX-MASS. PUB HLTH BIOL LAB | 3
 TYP-CONNAUGHT LABORATORIES | 3
 YF-CONNAUGHT LABORATORIES | 3
+MEA-UNKNOWN MANUFACTURER | 3
 6VAX-F-SANOFI PASTEUR | 3
 BCG-ORGANON-TEKNIKA | 3
 TD-PFIZER\WYETH | 2
 DTP-CONNAUGHT LABORATORIES | 2
 DTPIPV-SANOFI PASTEUR | 2
 TYP-PFIZER\WYETH | 2
+SMALL-UNKNOWN MANUFACTURER | 2
 HEP-SANOFI PASTEUR | 2
 TTOX-EMERGENT BIOSOLUTIONS | 2
 TTOX-LEDERLE LABORATORIES | 1
@@ -135,10 +161,14 @@ TD-MICHIGAN DEPT PUB HLTH | 1
 DT-LEDERLE LABORATORIES | 1
 CHOL-PFIZER\WYETH | 1
 TTOX-PFIZER\WYETH | 1
+ANTH-UNKNOWN MANUFACTURER | 1
 TD-AVENTIS PASTEUR | 1
 TTOX-BERNA BIOTECH, LTD. | 1
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 1
 MEN-CONNAUGHT LABORATORIES | 1
+DTPPHIB-UNKNOWN MANUFACTURER | 1
+MU-UNKNOWN MANUFACTURER | 1
+DTPIHI-UNKNOWN MANUFACTURER | 1
 DT-CONNAUGHT LABORATORIES | 1
 TD-LEDERLE LABORATORIES | 1
 RUB-SANOFI PASTEUR | 1
@@ -195,6 +225,7 @@ HEP-GLAXOSMITHKLINE BIOLOGICALS | 16
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 13
 FLU3-EVANS VACCINES | 12
 HEP-MERCK & CO. INC. | 12
+HEP-UNKNOWN MANUFACTURER | 11
 PPV-MERCK & CO. INC. | 10
 SMALL-PFIZER\WYETH | 9
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 9
@@ -202,14 +233,20 @@ HEP-SMITHKLINE BEECHAM | 8
 ANTH-EMERGENT BIOSOLUTIONS | 8
 OPV-PFIZER\WYETH | 7
 MMR-MERCK & CO. INC. | 6
+DTAP-UNKNOWN MANUFACTURER | 5
+HIBV-UNKNOWN MANUFACTURER | 5
 TD-SANOFI PASTEUR | 5
 HIBV-MERCK & CO. INC. | 5
 VARCEL-MERCK & CO. INC. | 5
+IPV-UNKNOWN MANUFACTURER | 4
 HIBV-PFIZER\WYETH | 4
 MEN-SANOFI PASTEUR | 3
+HEPA-UNKNOWN MANUFACTURER | 3
+UNK-UNKNOWN MANUFACTURER | 3
 IPV-CONNAUGHT LTD. | 2
 TYP-SANOFI PASTEUR | 2
 YF-SANOFI PASTEUR | 2
+FLUX-UNKNOWN MANUFACTURER | 2
 DTP-SANOFI PASTEUR | 2
 DTAP-CONNAUGHT LABORATORIES | 2
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
@@ -219,6 +256,7 @@ HBPV-PFIZER\WYETH | 1
 RAB-SANOFI PASTEUR | 1
 HIBV-CONNAUGHT LABORATORIES | 1
 RV-PFIZER\WYETH | 1
+MMR-UNKNOWN MANUFACTURER | 1
 FLU3-PFIZER\WYETH | 1
 ---
 # Total Symptoms
@@ -291,37 +329,55 @@ HEP-MERCK & CO. INC. | 1924
 DTAP-SMITHKLINE BEECHAM | 1889
 HBHEPB-MERCK & CO. INC. | 1881
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 1844
+FLUX-UNKNOWN MANUFACTURER | 1490
 HEPA-MERCK & CO. INC. | 1063
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 955
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 749
 HIBV-MERCK & CO. INC. | 747
 HEP-SMITHKLINE BEECHAM | 723
+HEP-UNKNOWN MANUFACTURER | 665
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 630
 MEN-SANOFI PASTEUR | 584
 TTOX-SANOFI PASTEUR | 578
+DTAP-UNKNOWN MANUFACTURER | 520
 RAB-SANOFI PASTEUR | 476
 FLU3-PFIZER\WYETH | 445
+IPV-UNKNOWN MANUFACTURER | 420
 TYP-SANOFI PASTEUR | 414
+HIBV-UNKNOWN MANUFACTURER | 371
 YF-SANOFI PASTEUR | 364
+UNK-UNKNOWN MANUFACTURER | 356
+MMR-UNKNOWN MANUFACTURER | 346
+PPV-UNKNOWN MANUFACTURER | 328
 HEPA-SMITHKLINE BEECHAM | 317
 HIBV-PFIZER\WYETH | 312
+HEPA-UNKNOWN MANUFACTURER | 271
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 253
+TD-UNKNOWN MANUFACTURER | 245
 ANTH-MICHIGAN DEPT PUB HLTH | 243
 TD-MASS. PUB HLTH BIOL LAB | 229
 DT-SANOFI PASTEUR | 210
 DTAPH-SANOFI PASTEUR | 187
+VARCEL-UNKNOWN MANUFACTURER | 187
+TTOX-UNKNOWN MANUFACTURER | 181
 DTAP-PFIZER\WYETH | 178
+TYP-UNKNOWN MANUFACTURER | 175
 IPV-CONNAUGHT LTD. | 161
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 156
 OPV-PFIZER\WYETH | 153
 DTAP-CONNAUGHT LABORATORIES | 144
 TYP-BERNA BIOTECH, LTD. | 120
 FLUN3-MEDIMMUNE VACCINES, INC. | 119
+MEN-UNKNOWN MANUFACTURER | 115
+DTP-UNKNOWN MANUFACTURER | 113
 PPV-PFIZER\WYETH | 98
 DT-BSI | 82
+BCG-UNKNOWN MANUFACTURER | 77
+OPV-UNKNOWN MANUFACTURER | 76
 IPV-PASTEUR MERIEUX CONNAUGHT | 75
 LYME-SMITHKLINE BEECHAM | 73
 HIBV-CONNAUGHT LABORATORIES | 73
+YF-UNKNOWN MANUFACTURER | 70
 JEV-SANOFI PASTEUR | 69
 IPV-PFIZER\WYETH | 68
 DTP-SANOFI PASTEUR | 62
@@ -332,10 +388,16 @@ RUB-MERCK & CO. INC. | 50
 DT-GLAXOSMITHKLINE BIOLOGICALS | 38
 DTPHIB-PFIZER\WYETH | 35
 DT-MASS. PUB HLTH BIOL LAB | 31
+DTAPH-UNKNOWN MANUFACTURER | 30
 HEPAB-SMITHKLINE BEECHAM | 29
 DTP-LEDERLE LABORATORIES | 28
+DPP-UNKNOWN MANUFACTURER | 28
+RAB-UNKNOWN MANUFACTURER | 28
+DT-UNKNOWN MANUFACTURER | 26
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 22
 MER-MERCK & CO. INC. | 22
+MU-UNKNOWN MANUFACTURER | 20
+DTPHIB-UNKNOWN MANUFACTURER | 17
 MM-MERCK & CO. INC. | 16
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 14
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 14
@@ -348,20 +410,26 @@ TD-CONNAUGHT LABORATORIES | 10
 RUB-SANOFI PASTEUR | 9
 TTOX-MASS. PUB HLTH BIOL LAB | 8
 YF-CONNAUGHT LABORATORIES | 8
+RUB-UNKNOWN MANUFACTURER | 7
 TTOX-BERNA BIOTECH, LTD. | 6
 TYP-CONNAUGHT LABORATORIES | 6
 TYP-PFIZER\WYETH | 6
+DTPIHI-UNKNOWN MANUFACTURER | 6
 HEP-SANOFI PASTEUR | 6
 DTPIPV-BERNA BIOTECH, LTD. | 6
 TD-PFIZER\WYETH | 5
 CHOL-PFIZER\WYETH | 5
+MEA-UNKNOWN MANUFACTURER | 5
 6VAX-F-SANOFI PASTEUR | 5
 TTOX-EMERGENT BIOSOLUTIONS | 5
+DTPPHIB-UNKNOWN MANUFACTURER | 4
 TTOX-PFIZER\WYETH | 3
 TD-AVENTIS PASTEUR | 3
+SMALL-UNKNOWN MANUFACTURER | 3
 RAB-PASTEUR MERIEUX INST. | 3
 TTOX-LEDERLE LABORATORIES | 2
 TD-MICHIGAN DEPT PUB HLTH | 2
+ANTH-UNKNOWN MANUFACTURER | 2
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 2
 DT-CONNAUGHT LABORATORIES | 2
 BCG-SANOFI PASTEUR | 2
