--- a/results/2004.md
+++ b/results/2004.md
@@ -69,18 +69,31 @@ SMALL-PFIZER\WYETH | 440
 DTAP-SMITHKLINE BEECHAM | 380
 FLUN3-MEDIMMUNE VACCINES, INC. | 337
 HEPA-MERCK & CO. INC. | 328
+FLUX-UNKNOWN MANUFACTURER | 257
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 247
+DTAP-UNKNOWN MANUFACTURER | 217
+IPV-UNKNOWN MANUFACTURER | 209
 TD-SANOFI PASTEUR | 204
+MMR-UNKNOWN MANUFACTURER | 169
+HEP-UNKNOWN MANUFACTURER | 164
 TYP-SANOFI PASTEUR | 154
+HIBV-UNKNOWN MANUFACTURER | 151
+UNK-UNKNOWN MANUFACTURER | 149
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 131
 YF-SANOFI PASTEUR | 122
 MEN-SANOFI PASTEUR | 115
 HEP-SMITHKLINE BEECHAM | 115
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 88
+VARCEL-UNKNOWN MANUFACTURER | 88
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 88
 HEPA-SMITHKLINE BEECHAM | 85
 TTOX-SANOFI PASTEUR | 82
+TD-UNKNOWN MANUFACTURER | 69
+HEPA-UNKNOWN MANUFACTURER | 66
 RAB-SANOFI PASTEUR | 65
+DTP-UNKNOWN MANUFACTURER | 59
+TYP-UNKNOWN MANUFACTURER | 52
+PPV-UNKNOWN MANUFACTURER | 52
 HIBV-PFIZER\WYETH | 52
 DTAPH-SANOFI PASTEUR | 50
 DT-SANOFI PASTEUR | 47
@@ -88,6 +101,7 @@ TD-MASS. PUB HLTH BIOL LAB | 45
 FLU3-PFIZER\WYETH | 42
 DTAP-PFIZER\WYETH | 41
 BCG-ORGANON-TEKNIKA | 37
+TTOX-UNKNOWN MANUFACTURER | 33
 TYP-BERNA BIOTECH, LTD. | 32
 OPV-PFIZER\WYETH | 31
 ANTH-MICHIGAN DEPT PUB HLTH | 31
@@ -97,13 +111,19 @@ HBPV-PFIZER\WYETH | 25
 DTP-SANOFI PASTEUR | 24
 DT-BSI | 23
 DT-GLAXOSMITHKLINE BIOLOGICALS | 22
+OPV-UNKNOWN MANUFACTURER | 20
 RUB-MERCK & CO. INC. | 19
 JEV-SANOFI PASTEUR | 19
+MEN-UNKNOWN MANUFACTURER | 18
 IPV-PASTEUR MERIEUX CONNAUGHT | 17
 PPV-PFIZER\WYETH | 17
 DTAP-CONNAUGHT LABORATORIES | 14
+YF-UNKNOWN MANUFACTURER | 13
 HEPAB-SMITHKLINE BEECHAM | 13
 MEA-MERCK & CO. INC. | 13
+DPP-UNKNOWN MANUFACTURER | 12
+DT-UNKNOWN MANUFACTURER | 11
+RAB-UNKNOWN MANUFACTURER | 9
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 7
 DT-MASS. PUB HLTH BIOL LAB | 7
 HIBV-CONNAUGHT LABORATORIES | 7
@@ -113,6 +133,7 @@ TD-CONNAUGHT LABORATORIES | 6
 DTPHIB-SANOFI PASTEUR | 6
 DTPHIB-PFIZER\WYETH | 6
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 6
+DTAPH-UNKNOWN MANUFACTURER | 5
 TD-GLAXOSMITHKLINE BIOLOGICALS | 5
 DTP-LEDERLE LABORATORIES | 5
 BCG-SANOFI PASTEUR | 5
@@ -120,8 +141,10 @@ TYP-CONNAUGHT LABORATORIES | 4
 DTP-CONNAUGHT LABORATORIES | 4
 LYME-SMITHKLINE BEECHAM | 3
 TD-LEDERLE LABORATORIES | 3
+MEA-UNKNOWN MANUFACTURER | 3
 MU-MERCK & CO. INC. | 3
 YF-CONNAUGHT LABORATORIES | 3
+DTPHIB-UNKNOWN MANUFACTURER | 3
 TD-MICHIGAN DEPT PUB HLTH | 3
 FLU3-PARKDALE PHARMACEUTICALS | 3
 MEN-CONNAUGHT LABORATORIES | 2
@@ -130,6 +153,7 @@ RAB-PASTEUR MERIEUX INST. | 2
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 2
 MM-MERCK & CO. INC. | 2
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 2
+SMALL-UNKNOWN MANUFACTURER | 2
 DTP-MASS. PUB HLTH BIOL LAB | 2
 FLU3-CONNAUGHT LABORATORIES | 1
 TD-PFIZER\WYETH | 1
@@ -138,10 +162,14 @@ RUB-SANOFI PASTEUR | 1
 FLU3-MEDEVA PHARMA, LTD. | 1
 DT-CONNAUGHT LABORATORIES | 1
 TTOX-PFIZER\WYETH | 1
+MNQ-UNKNOWN MANUFACTURER | 1
 DTPIPV-SANOFI PASTEUR | 1
+BCG-UNKNOWN MANUFACTURER | 1
 DTAP-BAXTER HEALTHCARE CORP. | 1
+DTPIHI-UNKNOWN MANUFACTURER | 1
 FLU3-AVENTIS PASTEUR | 1
 RV-PFIZER\WYETH | 1
+CHOL-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -190,18 +218,27 @@ HEP-GLAXOSMITHKLINE BIOLOGICALS | 8
 MMR-MERCK & CO. INC. | 7
 VARCEL-MERCK & CO. INC. | 7
 OPV-PFIZER\WYETH | 7
+HEP-UNKNOWN MANUFACTURER | 5
 PPV-MERCK & CO. INC. | 5
+FLUX-UNKNOWN MANUFACTURER | 4
+HIBV-UNKNOWN MANUFACTURER | 4
+DTAP-UNKNOWN MANUFACTURER | 3
 HIBV-PFIZER\WYETH | 3
+IPV-UNKNOWN MANUFACTURER | 3
 DTAP-SMITHKLINE BEECHAM | 2
+UNK-UNKNOWN MANUFACTURER | 2
 ANTH-EMERGENT BIOSOLUTIONS | 2
 SMALL-PFIZER\WYETH | 2
 TD-AVENTIS PASTEUR | 2
+DTP-UNKNOWN MANUFACTURER | 1
+OPV-UNKNOWN MANUFACTURER | 1
 DTAPH-SANOFI PASTEUR | 1
 DT-GLAXOSMITHKLINE BIOLOGICALS | 1
 HBPV-PFIZER\WYETH | 1
 FLU3-EVANS VACCINES | 1
 FLU3-PFIZER\WYETH | 1
 HEP-SMITHKLINE BEECHAM | 1
+DTPHIB-UNKNOWN MANUFACTURER | 1
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1
 TYP-BERNA BIOTECH, LTD. | 1
@@ -279,25 +316,39 @@ HEP-MERCK & CO. INC. | 1634
 HIBV-MERCK & CO. INC. | 1587
 HBHEPB-MERCK & CO. INC. | 1517
 DTAP-SMITHKLINE BEECHAM | 1232
+FLUX-UNKNOWN MANUFACTURER | 1216
 FLUN3-MEDIMMUNE VACCINES, INC. | 1160
 HEPA-MERCK & CO. INC. | 1012
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 900
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 870
 TD-SANOFI PASTEUR | 823
+IPV-UNKNOWN MANUFACTURER | 789
+DTAP-UNKNOWN MANUFACTURER | 738
+HEP-UNKNOWN MANUFACTURER | 665
 TYP-SANOFI PASTEUR | 664
+MMR-UNKNOWN MANUFACTURER | 624
+HIBV-UNKNOWN MANUFACTURER | 590
 YF-SANOFI PASTEUR | 507
 MEN-SANOFI PASTEUR | 487
+UNK-UNKNOWN MANUFACTURER | 438
 HEP-SMITHKLINE BEECHAM | 418
+HEPA-UNKNOWN MANUFACTURER | 373
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 353
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 335
 TTOX-SANOFI PASTEUR | 335
+TD-UNKNOWN MANUFACTURER | 307
+VARCEL-UNKNOWN MANUFACTURER | 287
+TYP-UNKNOWN MANUFACTURER | 278
+DTP-UNKNOWN MANUFACTURER | 271
 RAB-SANOFI PASTEUR | 265
+PPV-UNKNOWN MANUFACTURER | 264
 HEPA-SMITHKLINE BEECHAM | 261
 DT-SANOFI PASTEUR | 188
 DTAPH-SANOFI PASTEUR | 181
 HIBV-PFIZER\WYETH | 174
 ANTH-MICHIGAN DEPT PUB HLTH | 160
 FLU3-PFIZER\WYETH | 158
+TTOX-UNKNOWN MANUFACTURER | 156
 DTAP-PFIZER\WYETH | 147
 TD-MASS. PUB HLTH BIOL LAB | 147
 TYP-BERNA BIOTECH, LTD. | 135
@@ -309,21 +360,29 @@ IPV-PFIZER\WYETH | 109
 JEV-SANOFI PASTEUR | 96
 DT-GLAXOSMITHKLINE BIOLOGICALS | 91
 IPV-CONNAUGHT LTD. | 79
+OPV-UNKNOWN MANUFACTURER | 75
+MEN-UNKNOWN MANUFACTURER | 74
 RUB-MERCK & CO. INC. | 70
 DTP-SANOFI PASTEUR | 65
+YF-UNKNOWN MANUFACTURER | 62
 IPV-PASTEUR MERIEUX CONNAUGHT | 57
+DPP-UNKNOWN MANUFACTURER | 56
 PPV-PFIZER\WYETH | 53
 HEPAB-SMITHKLINE BEECHAM | 50
 DT-MASS. PUB HLTH BIOL LAB | 44
 DTAP-CONNAUGHT LABORATORIES | 42
 MEA-MERCK & CO. INC. | 42
+RAB-UNKNOWN MANUFACTURER | 35
 LYME-SMITHKLINE BEECHAM | 35
+DT-UNKNOWN MANUFACTURER | 31
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 30
 DTPHIB-SANOFI PASTEUR | 26
 YF-CONNAUGHT LABORATORIES | 25
+CHOL-UNKNOWN MANUFACTURER | 24
 TTOX-MASS. PUB HLTH BIOL LAB | 22
 TD-CONNAUGHT LABORATORIES | 22
 MER-MERCK & CO. INC. | 21
+DTAPH-UNKNOWN MANUFACTURER | 20
 DTPHIB-PFIZER\WYETH | 17
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 17
 TD-GLAXOSMITHKLINE BIOLOGICALS | 15
@@ -333,6 +392,7 @@ MU-MERCK & CO. INC. | 12
 DTP-LEDERLE LABORATORIES | 12
 BCG-SANOFI PASTEUR | 10
 TD-LEDERLE LABORATORIES | 9
+MEA-UNKNOWN MANUFACTURER | 9
 DTP-CONNAUGHT LABORATORIES | 9
 RAB-PASTEUR MERIEUX INST. | 8
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 8
@@ -343,15 +403,20 @@ TYP-PFIZER\WYETH | 6
 MM-MERCK & CO. INC. | 6
 DTP-MASS. PUB HLTH BIOL LAB | 6
 FLU3-CONNAUGHT LABORATORIES | 5
+DTPHIB-UNKNOWN MANUFACTURER | 5
 FLU3-MEDEVA PHARMA, LTD. | 4
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 4
 MEN-CONNAUGHT LABORATORIES | 3
 TTOX-PFIZER\WYETH | 3
+MNQ-UNKNOWN MANUFACTURER | 3
 DTPIPV-SANOFI PASTEUR | 3
+SMALL-UNKNOWN MANUFACTURER | 3
 DTAP-BAXTER HEALTHCARE CORP. | 3
+DTPIHI-UNKNOWN MANUFACTURER | 3
 DT-CONNAUGHT LABORATORIES | 2
 FLU3-AVENTIS PASTEUR | 2
 TD-PFIZER\WYETH | 1
 RUB-SANOFI PASTEUR | 1
+BCG-UNKNOWN MANUFACTURER | 1
 RV-PFIZER\WYETH | 1
 ---
