--- a/results/2005.md
+++ b/results/2005.md
@@ -73,6 +73,7 @@ MNQ-SANOFI PASTEUR | 471
 HEP-MERCK & CO. INC. | 451
 FLU3-EVANS VACCINES | 395
 HEPA-MERCK & CO. INC. | 382
+FLUX-UNKNOWN MANUFACTURER | 375
 HBHEPB-MERCK & CO. INC. | 371
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 306
 ANTH-EMERGENT BIOSOLUTIONS | 302
@@ -81,25 +82,39 @@ FLU3-GLAXOSMITHKLINE BIOLOGICALS | 199
 FLUN3-MEDIMMUNE VACCINES, INC. | 197
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 183
 TD-MASS. PUB HLTH BIOL LAB | 166
+DTAP-UNKNOWN MANUFACTURER | 160
+IPV-UNKNOWN MANUFACTURER | 153
 TD-SANOFI PASTEUR | 153
+UNK-UNKNOWN MANUFACTURER | 143
 DTAP-SMITHKLINE BEECHAM | 139
 YF-SANOFI PASTEUR | 137
 TTOX-SANOFI PASTEUR | 132
 TYP-SANOFI PASTEUR | 128
+HEP-UNKNOWN MANUFACTURER | 121
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 121
+HIBV-UNKNOWN MANUFACTURER | 120
+MMR-UNKNOWN MANUFACTURER | 109
 MEN-SANOFI PASTEUR | 108
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 93
 TYP-BERNA BIOTECH, LTD. | 87
+PPV-UNKNOWN MANUFACTURER | 80
 DTAPH-SANOFI PASTEUR | 73
+TD-UNKNOWN MANUFACTURER | 68
 TDAP-SANOFI PASTEUR | 65
 DT-SANOFI PASTEUR | 54
+HEPA-UNKNOWN MANUFACTURER | 53
+VARCEL-UNKNOWN MANUFACTURER | 50
 RAB-SANOFI PASTEUR | 50
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 47
+TTOX-UNKNOWN MANUFACTURER | 46
 HIBV-PFIZER\WYETH | 42
 JEV-SANOFI PASTEUR | 41
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 37
+DTP-UNKNOWN MANUFACTURER | 36
+TYP-UNKNOWN MANUFACTURER | 35
 DT-GLAXOSMITHKLINE BIOLOGICALS | 33
 HEPA-SMITHKLINE BEECHAM | 32
+MEN-UNKNOWN MANUFACTURER | 30
 FLU3-PFIZER\WYETH | 28
 OPV-PFIZER\WYETH | 26
 HEP-SMITHKLINE BEECHAM | 26
@@ -113,18 +128,24 @@ ANTH-MICHIGAN DEPT PUB HLTH | 19
 MEA-MERCK & CO. INC. | 18
 RUB-MERCK & CO. INC. | 17
 HBPV-PFIZER\WYETH | 16
+DPP-UNKNOWN MANUFACTURER | 16
 DTAP-CONNAUGHT LABORATORIES | 14
 IPV-CONNAUGHT LTD. | 13
+OPV-UNKNOWN MANUFACTURER | 13
 DT-BSI | 13
+YF-UNKNOWN MANUFACTURER | 12
+RAB-UNKNOWN MANUFACTURER | 11
 HEPAB-SMITHKLINE BEECHAM | 11
 MMRV-MERCK & CO. INC. | 10
 HIBV-CONNAUGHT LABORATORIES | 7
+DT-UNKNOWN MANUFACTURER | 7
 MER-MERCK & CO. INC. | 7
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 7
 MM-MERCK & CO. INC. | 7
 MU-MERCK & CO. INC. | 7
 FLUX-SANOFI PASTEUR | 7
 HEP-SANOFI PASTEUR | 6
+DTAPH-UNKNOWN MANUFACTURER | 6
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 6
 TD-CONNAUGHT LABORATORIES | 5
 FLU3-PARKDALE PHARMACEUTICALS | 5
@@ -133,19 +154,28 @@ TD-GLAXOSMITHKLINE BIOLOGICALS | 5
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 4
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 4
 DTP-LEDERLE LABORATORIES | 4
+RUB-UNKNOWN MANUFACTURER | 3
 PLAGUE-GREER LABORATORIES, INC. | 3
 TD-MICHIGAN DEPT PUB HLTH | 3
 MEN-CONNAUGHT LABORATORIES | 3
+BCG-UNKNOWN MANUFACTURER | 3
+DTPIHI-UNKNOWN MANUFACTURER | 3
 DTPHIB-PFIZER\WYETH | 3
 DTP-MASS. PUB HLTH BIOL LAB | 3
 TTOX-MASS. PUB HLTH BIOL LAB | 3
 DTP-CONNAUGHT LABORATORIES | 3
+MNQ-UNKNOWN MANUFACTURER | 3
 DT-MASS. PUB HLTH BIOL LAB | 3
+MEA-UNKNOWN MANUFACTURER | 2
+CHOL-UNKNOWN MANUFACTURER | 2
 TYP-CONNAUGHT LABORATORIES | 2
 RAB-EMERGENT BIOSOLUTIONS | 2
+DTPHIB-UNKNOWN MANUFACTURER | 2
 DTPHIB-SANOFI PASTEUR | 2
 DT-CONNAUGHT LABORATORIES | 2
 TYP-PFIZER\WYETH | 2
+DTOX-UNKNOWN MANUFACTURER | 2
+HBPV-UNKNOWN MANUFACTURER | 2
 DTP-PFIZER\WYETH | 2
 TD-LEDERLE LABORATORIES | 1
 YF-CONNAUGHT LABORATORIES | 1
@@ -155,10 +185,13 @@ PNC13-PFIZER\WYETH | 1
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 1
 RAB-CONNAUGHT LTD. | 1
 SMALL-SANOFI PASTEUR | 1
+DTPPHIB-UNKNOWN MANUFACTURER | 1
 JEV-CONNAUGHT LABORATORIES | 1
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 1
 UNK-CONNAUGHT LABORATORIES | 1
+MU-UNKNOWN MANUFACTURER | 1
 RV-PFIZER\WYETH | 1
+SMALL-UNKNOWN MANUFACTURER | 1
 LYME-SMITHKLINE BEECHAM | 1
 MUR-MERCK & CO. INC. | 1
 IPV-PASTEUR MERIEUX INST. | 1
@@ -203,9 +236,13 @@ MMR-MERCK & CO. INC. | 8
 VARCEL-MERCK & CO. INC. | 8
 HEP-MERCK & CO. INC. | 7
 ANTH-EMERGENT BIOSOLUTIONS | 5
+FLUX-UNKNOWN MANUFACTURER | 5
 FLU3-EVANS VACCINES | 4
+DTAP-UNKNOWN MANUFACTURER | 3
+IPV-UNKNOWN MANUFACTURER | 3
 PPV-MERCK & CO. INC. | 3
 HIBV-PFIZER\WYETH | 2
+HEP-UNKNOWN MANUFACTURER | 2
 TD-AVENTIS PASTEUR | 1
 TTOX-SANOFI PASTEUR | 1
 DTPHIB-PFIZER\WYETH | 1
@@ -213,7 +250,9 @@ OPV-PFIZER\WYETH | 1
 PPV-PFIZER\WYETH | 1
 TDAP-SANOFI PASTEUR | 1
 YF-SANOFI PASTEUR | 1
+DTP-UNKNOWN MANUFACTURER | 1
 HEP-SMITHKLINE BEECHAM | 1
+HIBV-UNKNOWN MANUFACTURER | 1
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 ---
 # Total Symptoms
@@ -288,6 +327,7 @@ DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 2156
 ANTH-EMERGENT BIOSOLUTIONS | 2135
 MNQ-SANOFI PASTEUR | 1845
 HIBV-MERCK & CO. INC. | 1832
+FLUX-UNKNOWN MANUFACTURER | 1706
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 1638
 HEP-MERCK & CO. INC. | 1607
 SMALL-PFIZER\WYETH | 1229
@@ -299,23 +339,37 @@ RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 842
 FLUN3-MEDIMMUNE VACCINES, INC. | 831
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 647
 TD-MASS. PUB HLTH BIOL LAB | 635
+IPV-UNKNOWN MANUFACTURER | 619
 TD-SANOFI PASTEUR | 615
+DTAP-UNKNOWN MANUFACTURER | 615
 YF-SANOFI PASTEUR | 566
+UNK-UNKNOWN MANUFACTURER | 518
 TTOX-SANOFI PASTEUR | 496
 TYP-SANOFI PASTEUR | 485
+HEP-UNKNOWN MANUFACTURER | 482
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 481
+HIBV-UNKNOWN MANUFACTURER | 454
 MEN-SANOFI PASTEUR | 420
 DTAP-SMITHKLINE BEECHAM | 398
+MMR-UNKNOWN MANUFACTURER | 376
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 348
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 340
+PPV-UNKNOWN MANUFACTURER | 336
 TYP-BERNA BIOTECH, LTD. | 317
+TD-UNKNOWN MANUFACTURER | 310
+HEPA-UNKNOWN MANUFACTURER | 255
 TDAP-SANOFI PASTEUR | 252
 RAB-SANOFI PASTEUR | 219
+TTOX-UNKNOWN MANUFACTURER | 205
 ANTH-MICHIGAN DEPT PUB HLTH | 195
 DT-SANOFI PASTEUR | 192
+MEN-UNKNOWN MANUFACTURER | 172
 DTAPH-SANOFI PASTEUR | 171
+VARCEL-UNKNOWN MANUFACTURER | 170
+DTP-UNKNOWN MANUFACTURER | 154
 FLU3-PFIZER\WYETH | 146
 JEV-SANOFI PASTEUR | 136
+TYP-UNKNOWN MANUFACTURER | 132
 FLU3-AVENTIS PASTEUR | 109
 DT-GLAXOSMITHKLINE BIOLOGICALS | 107
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 107
@@ -324,18 +378,24 @@ PPV-PFIZER\WYETH | 95
 DTAP-PFIZER\WYETH | 87
 HIBV-PFIZER\WYETH | 86
 OPV-PFIZER\WYETH | 83
+YF-UNKNOWN MANUFACTURER | 74
 HEP-SMITHKLINE BEECHAM | 73
 DTP-SANOFI PASTEUR | 72
 IPV-PASTEUR MERIEUX CONNAUGHT | 69
+DPP-UNKNOWN MANUFACTURER | 65
+OPV-UNKNOWN MANUFACTURER | 63
 DT-BSI | 60
 IPV-PFIZER\WYETH | 53
+RAB-UNKNOWN MANUFACTURER | 52
 PLAGUE-GREER LABORATORIES, INC. | 51
 RUB-MERCK & CO. INC. | 49
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 45
+SMALL-UNKNOWN MANUFACTURER | 44
 HBPV-PFIZER\WYETH | 40
 MEA-MERCK & CO. INC. | 40
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 38
 DTAP-CONNAUGHT LABORATORIES | 35
+DT-UNKNOWN MANUFACTURER | 35
 IPV-CONNAUGHT LTD. | 33
 HEPAB-SMITHKLINE BEECHAM | 32
 FLUX-SANOFI PASTEUR | 32
@@ -343,6 +403,7 @@ MER-MERCK & CO. INC. | 27
 HEP-SANOFI PASTEUR | 26
 TYP-CONNAUGHT LABORATORIES | 23
 TD-CONNAUGHT LABORATORIES | 22
+DTAPH-UNKNOWN MANUFACTURER | 22
 MM-MERCK & CO. INC. | 21
 HIBV-CONNAUGHT LABORATORIES | 20
 MMRV-MERCK & CO. INC. | 20
@@ -350,33 +411,44 @@ TD-GLAXOSMITHKLINE BIOLOGICALS | 19
 FLU3-PARKDALE PHARMACEUTICALS | 18
 MU-MERCK & CO. INC. | 17
 DTP-MASS. PUB HLTH BIOL LAB | 17
+RUB-UNKNOWN MANUFACTURER | 16
 DTPHIB-PFIZER\WYETH | 16
+BCG-UNKNOWN MANUFACTURER | 15
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 14
+CHOL-UNKNOWN MANUFACTURER | 13
+DTPIHI-UNKNOWN MANUFACTURER | 13
 TTOX-MASS. PUB HLTH BIOL LAB | 11
 LYME-SMITHKLINE BEECHAM | 11
 TD-MICHIGAN DEPT PUB HLTH | 10
 CHOL-LEDERLE LABORATORIES | 10
 RAB-CONNAUGHT LTD. | 10
 TYP-PFIZER\WYETH | 10
+DTOX-UNKNOWN MANUFACTURER | 10
 BCG-SANOFI PASTEUR | 9
 DTP-LEDERLE LABORATORIES | 9
 DTP-CONNAUGHT LABORATORIES | 9
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 8
 RAB-EMERGENT BIOSOLUTIONS | 8
 DTP-PFIZER\WYETH | 8
+MEA-UNKNOWN MANUFACTURER | 7
 MEN-CONNAUGHT LABORATORIES | 7
 DT-MASS. PUB HLTH BIOL LAB | 6
+HBPV-UNKNOWN MANUFACTURER | 6
 6VAX-F-SANOFI PASTEUR | 5
+MNQ-UNKNOWN MANUFACTURER | 5
+DTPHIB-UNKNOWN MANUFACTURER | 4
 DTPHIB-SANOFI PASTEUR | 4
 DT-CONNAUGHT LABORATORIES | 4
 SMALL-SANOFI PASTEUR | 4
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 4
 UNK-CONNAUGHT LABORATORIES | 4
 RV-PFIZER\WYETH | 4
+DTPPHIB-UNKNOWN MANUFACTURER | 3
 JEV-CONNAUGHT LABORATORIES | 3
 MUR-MERCK & CO. INC. | 3
 YF-CONNAUGHT LABORATORIES | 2
 PNC13-PFIZER\WYETH | 2
+MU-UNKNOWN MANUFACTURER | 2
 IPV-PASTEUR MERIEUX INST. | 2
 TD-LEDERLE LABORATORIES | 1
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 1
