--- a/results/2006.md
+++ b/results/2006.md
@@ -78,6 +78,7 @@ HEPA-GLAXOSMITHKLINE BIOLOGICALS | 526
 MMRV-MERCK & CO. INC. | 513
 HEP-MERCK & CO. INC. | 437
 RV5-MERCK & CO. INC. | 434
+FLUX-UNKNOWN MANUFACTURER | 431
 HPV4-MERCK & CO. INC. | 427
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 422
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 414
@@ -87,27 +88,42 @@ HBHEPB-MERCK & CO. INC. | 339
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 327
 SMALL-PFIZER\WYETH | 303
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 215
+DTAP-UNKNOWN MANUFACTURER | 204
 TYP-SANOFI PASTEUR | 185
 VARZOS-MERCK & CO. INC. | 181
 FLUN3-MEDIMMUNE VACCINES, INC. | 170
+HEP-UNKNOWN MANUFACTURER | 165
 DTAP-SMITHKLINE BEECHAM | 165
+UNK-UNKNOWN MANUFACTURER | 161
 YF-SANOFI PASTEUR | 153
 TD-MASS. PUB HLTH BIOL LAB | 152
+IPV-UNKNOWN MANUFACTURER | 152
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 151
 TD-SANOFI PASTEUR | 138
+HIBV-UNKNOWN MANUFACTURER | 138
+HEPA-UNKNOWN MANUFACTURER | 105
+MMR-UNKNOWN MANUFACTURER | 99
 TTOX-SANOFI PASTEUR | 97
+PPV-UNKNOWN MANUFACTURER | 95
+TYP-UNKNOWN MANUFACTURER | 77
+VARCEL-UNKNOWN MANUFACTURER | 77
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 76
 DTAPH-SANOFI PASTEUR | 76
 TYP-BERNA BIOTECH, LTD. | 71
 HEPA-SMITHKLINE BEECHAM | 65
 MEN-SANOFI PASTEUR | 61
+TD-UNKNOWN MANUFACTURER | 54
+TTOX-UNKNOWN MANUFACTURER | 52
 HIBV-PFIZER\WYETH | 44
+DTP-UNKNOWN MANUFACTURER | 42
 HEP-SMITHKLINE BEECHAM | 39
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 39
 JEV-SANOFI PASTEUR | 35
 DTAP-BAXTER HEALTHCARE CORP. | 27
 OPV-PFIZER\WYETH | 26
 IPV-PASTEUR MERIEUX CONNAUGHT | 22
+YF-UNKNOWN MANUFACTURER | 19
+OPV-UNKNOWN MANUFACTURER | 19
 RAB-SANOFI PASTEUR | 19
 DTAP-PFIZER\WYETH | 17
 RUB-MERCK & CO. INC. | 17
@@ -121,17 +137,24 @@ HEPAB-SMITHKLINE BEECHAM | 13
 DTP-SANOFI PASTEUR | 13
 DT-SANOFI PASTEUR | 13
 MEA-MERCK & CO. INC. | 12
+BCG-UNKNOWN MANUFACTURER | 12
+MEN-UNKNOWN MANUFACTURER | 11
 FLU3-AVENTIS PASTEUR | 11
 FLU3-PFIZER\WYETH | 11
 DTPHIB-PFIZER\WYETH | 11
+DT-UNKNOWN MANUFACTURER | 11
 BCG-ORGANON-TEKNIKA | 11
+MNQ-UNKNOWN MANUFACTURER | 10
+DTAPH-UNKNOWN MANUFACTURER | 10
 PPV-PFIZER\WYETH | 10
 HIBV-CONNAUGHT LABORATORIES | 10
 DTAP-CONNAUGHT LABORATORIES | 8
 UNK-MERCK & CO. INC. | 7
+DPP-UNKNOWN MANUFACTURER | 7
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 7
 TTOX-MASS. PUB HLTH BIOL LAB | 7
 TD-GLAXOSMITHKLINE BIOLOGICALS | 7
+DTOX-UNKNOWN MANUFACTURER | 7
 DT-MASS. PUB HLTH BIOL LAB | 6
 DT-BSI | 6
 BCG-SANOFI PASTEUR | 6
@@ -140,18 +163,29 @@ HBPV-PFIZER\WYETH | 6
 MM-MERCK & CO. INC. | 5
 DTP-LEDERLE LABORATORIES | 5
 DT-GLAXOSMITHKLINE BIOLOGICALS | 5
+DTPHIB-UNKNOWN MANUFACTURER | 4
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 4
+RAB-UNKNOWN MANUFACTURER | 4
 TTOX-CONNAUGHT LABORATORIES | 3
 DTPHIB-SANOFI PASTEUR | 3
 6VAX-F-SANOFI PASTEUR | 3
 TD-CONNAUGHT LABORATORIES | 3
+DTPIHI-UNKNOWN MANUFACTURER | 3
+DTPPHIB-UNKNOWN MANUFACTURER | 3
+TDAP-UNKNOWN MANUFACTURER | 3
+RVX-UNKNOWN MANUFACTURER | 3
 FLUX-SANOFI PASTEUR | 3
 UNK-CONNAUGHT LABORATORIES | 2
+MU-UNKNOWN MANUFACTURER | 2
 YF-CONNAUGHT LABORATORIES | 2
+HBPV-UNKNOWN MANUFACTURER | 2
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 2
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 2
 MUR-MERCK & CO. INC. | 2
+SMALL-UNKNOWN MANUFACTURER | 2
+PER-UNKNOWN MANUFACTURER | 2
 RV-PFIZER\WYETH | 2
+CHOL-UNKNOWN MANUFACTURER | 1
 TD-SCLAVO | 1
 HEP-SANOFI PASTEUR | 1
 DTP-MASS. PUB HLTH BIOL LAB | 1
@@ -165,7 +199,10 @@ LYME-SMITHKLINE BEECHAM | 1
 FLU3-PARKDALE PHARMACEUTICALS | 1
 MEN-CONNAUGHT LABORATORIES | 1
 DT-CONNAUGHT LTD. | 1
+MEA-UNKNOWN MANUFACTURER | 1
+ANTH-UNKNOWN MANUFACTURER | 1
 TTOX-MEDEVA PHARMA, LTD. | 1
+JEVX-UNKNOWN MANUFACTURER | 1
 IPV-PASTEUR MERIEUX INST. | 1
 ---
 # Total Deaths
@@ -214,19 +251,28 @@ HEP-GLAXOSMITHKLINE BIOLOGICALS | 8
 VARCEL-MERCK & CO. INC. | 7
 PPV-MERCK & CO. INC. | 7
 HEP-MERCK & CO. INC. | 6
+FLUX-UNKNOWN MANUFACTURER | 5
+DTAP-UNKNOWN MANUFACTURER | 5
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 4
+HIBV-UNKNOWN MANUFACTURER | 3
+HEP-UNKNOWN MANUFACTURER | 3
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 3
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 DTAP-SMITHKLINE BEECHAM | 2
 HEPA-MERCK & CO. INC. | 2
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 2
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 2
+PER-UNKNOWN MANUFACTURER | 2
 TDAP-SANOFI PASTEUR | 2
+IPV-UNKNOWN MANUFACTURER | 2
+HEPA-UNKNOWN MANUFACTURER | 1
+MEN-UNKNOWN MANUFACTURER | 1
 TD-SANOFI PASTEUR | 1
 SMALL-PFIZER\WYETH | 1
 MNQ-SANOFI PASTEUR | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
 FLU3-EVANS VACCINES | 1
+OPV-UNKNOWN MANUFACTURER | 1
 RAB-SANOFI PASTEUR | 1
 TYP-SANOFI PASTEUR | 1
 YF-SANOFI PASTEUR | 1
@@ -308,6 +354,7 @@ DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 2665
 HIBV-SANOFI PASTEUR | 2455
 MNQ-SANOFI PASTEUR | 2378
 HIBV-MERCK & CO. INC. | 2365
+FLUX-UNKNOWN MANUFACTURER | 2061
 HEPA-MERCK & CO. INC. | 1872
 SMALL-PFIZER\WYETH | 1801
 HEP-MERCK & CO. INC. | 1758
@@ -319,26 +366,41 @@ HEP-GLAXOSMITHKLINE BIOLOGICALS | 1395
 HBHEPB-MERCK & CO. INC. | 1137
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 1118
 HPV4-MERCK & CO. INC. | 1091
+HEP-UNKNOWN MANUFACTURER | 1076
 RV5-MERCK & CO. INC. | 1021
+DTAP-UNKNOWN MANUFACTURER | 826
 TYP-SANOFI PASTEUR | 820
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 715
 FLUN3-MEDIMMUNE VACCINES, INC. | 656
+HIBV-UNKNOWN MANUFACTURER | 639
 YF-SANOFI PASTEUR | 632
 TD-MASS. PUB HLTH BIOL LAB | 556
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 545
 VARZOS-MERCK & CO. INC. | 545
+HEPA-UNKNOWN MANUFACTURER | 534
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 533
+IPV-UNKNOWN MANUFACTURER | 529
 TD-SANOFI PASTEUR | 521
+TYP-UNKNOWN MANUFACTURER | 519
+UNK-UNKNOWN MANUFACTURER | 512
 DTAP-SMITHKLINE BEECHAM | 500
+PPV-UNKNOWN MANUFACTURER | 425
 TTOX-SANOFI PASTEUR | 377
+TD-UNKNOWN MANUFACTURER | 325
+MMR-UNKNOWN MANUFACTURER | 317
 MEN-SANOFI PASTEUR | 315
 TYP-BERNA BIOTECH, LTD. | 286
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 267
 HEP-SMITHKLINE BEECHAM | 233
+VARCEL-UNKNOWN MANUFACTURER | 225
 DTAPH-SANOFI PASTEUR | 216
+DTP-UNKNOWN MANUFACTURER | 195
 HEPA-SMITHKLINE BEECHAM | 181
 HIBV-PFIZER\WYETH | 180
+TTOX-UNKNOWN MANUFACTURER | 158
+YF-UNKNOWN MANUFACTURER | 144
 ANTH-MICHIGAN DEPT PUB HLTH | 140
+OPV-UNKNOWN MANUFACTURER | 129
 DTAP-PFIZER\WYETH | 120
 OPV-PFIZER\WYETH | 119
 JEV-SANOFI PASTEUR | 110
@@ -347,15 +409,20 @@ RAB-SANOFI PASTEUR | 91
 IPV-CONNAUGHT LTD. | 70
 RUB-MERCK & CO. INC. | 68
 FLU3-PFIZER\WYETH | 67
+MEN-UNKNOWN MANUFACTURER | 63
 FLU3-AVENTIS PASTEUR | 63
 IPV-PASTEUR MERIEUX CONNAUGHT | 61
 MU-MERCK & CO. INC. | 61
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 58
 FLU3-EVANS VACCINES | 57
+DT-UNKNOWN MANUFACTURER | 57
 IPV-PFIZER\WYETH | 54
 DT-SANOFI PASTEUR | 54
 HEPAB-SMITHKLINE BEECHAM | 49
+DTAPH-UNKNOWN MANUFACTURER | 49
+BCG-UNKNOWN MANUFACTURER | 47
 DTP-LEDERLE LABORATORIES | 42
+MNQ-UNKNOWN MANUFACTURER | 41
 PPV-PFIZER\WYETH | 40
 BCG-ORGANON-TEKNIKA | 37
 DTAP-BAXTER HEALTHCARE CORP. | 35
@@ -366,39 +433,55 @@ TD-CONNAUGHT LABORATORIES | 30
 MER-MERCK & CO. INC. | 29
 DTAP-CONNAUGHT LABORATORIES | 29
 HIBV-CONNAUGHT LABORATORIES | 29
+DTOX-UNKNOWN MANUFACTURER | 28
 DTP-SANOFI PASTEUR | 27
+DPP-UNKNOWN MANUFACTURER | 27
 DTP-EMERGENT BIOSOLUTIONS | 24
 DT-BSI | 22
 DT-MASS. PUB HLTH BIOL LAB | 21
 MEN-CONNAUGHT LABORATORIES | 21
 TTOX-MASS. PUB HLTH BIOL LAB | 20
 BCG-SANOFI PASTEUR | 18
+RAB-UNKNOWN MANUFACTURER | 17
+DTPIHI-UNKNOWN MANUFACTURER | 17
+DTPHIB-UNKNOWN MANUFACTURER | 16
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 16
+SMALL-UNKNOWN MANUFACTURER | 15
 UNK-MERCK & CO. INC. | 14
+ANTH-UNKNOWN MANUFACTURER | 14
 FLUX-SANOFI PASTEUR | 14
 DTPHIB-SANOFI PASTEUR | 13
 MM-MERCK & CO. INC. | 12
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 12
 LYME-SMITHKLINE BEECHAM | 12
 TTOX-CONNAUGHT LABORATORIES | 11
+HBPV-UNKNOWN MANUFACTURER | 11
 DT-GLAXOSMITHKLINE BIOLOGICALS | 9
+DTPPHIB-UNKNOWN MANUFACTURER | 9
 6VAX-F-SANOFI PASTEUR | 8
 YF-CONNAUGHT LABORATORIES | 8
 TYP-PFIZER\WYETH | 8
+JEVX-UNKNOWN MANUFACTURER | 7
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 6
 MUR-MERCK & CO. INC. | 6
+TDAP-UNKNOWN MANUFACTURER | 6
 TD-SCLAVO | 5
 HEP-SANOFI PASTEUR | 5
+RVX-UNKNOWN MANUFACTURER | 5
 UNK-CONNAUGHT LABORATORIES | 4
+MU-UNKNOWN MANUFACTURER | 4
 TTOX-EMERGENT BIOSOLUTIONS | 4
 RV-PFIZER\WYETH | 4
+MEA-UNKNOWN MANUFACTURER | 4
 TD-PFIZER\WYETH | 3
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 3
 FLU3-PARKDALE PHARMACEUTICALS | 3
 DT-CONNAUGHT LTD. | 3
 TTOX-MEDEVA PHARMA, LTD. | 3
+CHOL-UNKNOWN MANUFACTURER | 2
 CHOL-LEDERLE LABORATORIES | 2
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 2
 DTP-MASS. PUB HLTH BIOL LAB | 1
+PER-UNKNOWN MANUFACTURER | 1
 IPV-PASTEUR MERIEUX INST. | 1
 ---
