--- a/results/2007.md
+++ b/results/2007.md
@@ -83,45 +83,74 @@ HIBV-SANOFI PASTEUR | 987
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 670
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 560
 ANTH-EMERGENT BIOSOLUTIONS | 540
+FLUX-UNKNOWN MANUFACTURER | 534
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 512
 HEP-MERCK & CO. INC. | 496
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 472
 HBHEPB-MERCK & CO. INC. | 367
+DTAP-UNKNOWN MANUFACTURER | 362
 TD-SANOFI PASTEUR | 308
+UNK-UNKNOWN MANUFACTURER | 299
 TYP-SANOFI PASTEUR | 238
 SMALL-PFIZER\WYETH | 229
+IPV-UNKNOWN MANUFACTURER | 228
+HIBV-UNKNOWN MANUFACTURER | 180
 FLUN3-MEDIMMUNE VACCINES, INC. | 179
+VARCEL-UNKNOWN MANUFACTURER | 166
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 165
+MMR-UNKNOWN MANUFACTURER | 163
+HEPA-UNKNOWN MANUFACTURER | 162
 YF-SANOFI PASTEUR | 157
+ANTH-UNKNOWN MANUFACTURER | 154
+HEP-UNKNOWN MANUFACTURER | 153
+PPV-UNKNOWN MANUFACTURER | 151
+TDAP-UNKNOWN MANUFACTURER | 117
+TD-UNKNOWN MANUFACTURER | 93
 TD-MASS. PUB HLTH BIOL LAB | 90
 TYP-BERNA BIOTECH, LTD. | 79
 TTOX-SANOFI PASTEUR | 76
+TTOX-UNKNOWN MANUFACTURER | 69
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 65
 DTAPH-SANOFI PASTEUR | 63
 RAB-SANOFI PASTEUR | 53
+TYP-UNKNOWN MANUFACTURER | 50
+SMALL-UNKNOWN MANUFACTURER | 48
 DTAP-SMITHKLINE BEECHAM | 45
+HPVX-UNKNOWN MANUFACTURER | 45
+MEN-UNKNOWN MANUFACTURER | 45
+DTP-UNKNOWN MANUFACTURER | 43
 HIBV-PFIZER\WYETH | 41
+MMRV-UNKNOWN MANUFACTURER | 39
 PPV-PFIZER\WYETH | 36
 JEV-SANOFI PASTEUR | 36
 DT-SANOFI PASTEUR | 33
 ANTH-MICHIGAN DEPT PUB HLTH | 33
 MEN-SANOFI PASTEUR | 31
+VARZOS-UNKNOWN MANUFACTURER | 29
 HEPA-SMITHKLINE BEECHAM | 28
+RVX-UNKNOWN MANUFACTURER | 28
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 23
 DTP-SANOFI PASTEUR | 22
+OPV-UNKNOWN MANUFACTURER | 18
 RUB-MERCK & CO. INC. | 18
+DPP-UNKNOWN MANUFACTURER | 17
 HEP-SMITHKLINE BEECHAM | 16
 IPV-PASTEUR MERIEUX CONNAUGHT | 15
 DTAP-PFIZER\WYETH | 14
+YF-UNKNOWN MANUFACTURER | 13
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 13
 OPV-PFIZER\WYETH | 13
 TTOX-MASS. PUB HLTH BIOL LAB | 13
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 13
 MU-MERCK & CO. INC. | 12
 MEA-MERCK & CO. INC. | 11
+RAB-UNKNOWN MANUFACTURER | 11
 FLU3-CSL LIMITED | 11
 FLU3-PFIZER\WYETH | 10
 IPV-PFIZER\WYETH | 10
+DTAPH-UNKNOWN MANUFACTURER | 10
+DTOX-UNKNOWN MANUFACTURER | 9
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 9
 DTAP-CONNAUGHT LABORATORIES | 8
 BCG-SANOFI PASTEUR | 8
 TD-AVENTIS PASTEUR | 7
@@ -129,9 +158,11 @@ HIBV-CONNAUGHT LABORATORIES | 7
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 7
 HBPV-PFIZER\WYETH | 6
 TYP-PFIZER\WYETH | 6
+HEPAB-UNKNOWN MANUFACTURER | 6
 MM-MERCK & CO. INC. | 6
 FLU3-EVANS VACCINES | 5
 DT-BSI | 5
+DT-UNKNOWN MANUFACTURER | 5
 DTPHIB-SANOFI PASTEUR | 5
 TD-GLAXOSMITHKLINE BIOLOGICALS | 4
 DTPHIB-PFIZER\WYETH | 4
@@ -144,14 +175,25 @@ HEPAB-SMITHKLINE BEECHAM | 3
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 3
 DTPIPV-SANOFI PASTEUR | 3
 6VAX-F-SANOFI PASTEUR | 3
+MNQ-UNKNOWN MANUFACTURER | 3
 PER-EMERGENT BIOSOLUTIONS | 3
+DTPHEP-UNKNOWN MANUFACTURER | 3
+RUB-UNKNOWN MANUFACTURER | 3
+DTIPV-UNKNOWN MANUFACTURER | 3
+6VAX-F-UNKNOWN MANUFACTURER | 3
 MER-MERCK & CO. INC. | 2
+DTPHIB-UNKNOWN MANUFACTURER | 2
+BCG-UNKNOWN MANUFACTURER | 2
 DTP-LEDERLE LABORATORIES | 2
 DT-MASS. PUB HLTH BIOL LAB | 2
+DTPIHI-UNKNOWN MANUFACTURER | 2
+DTPPHIB-UNKNOWN MANUFACTURER | 2
+MEA-UNKNOWN MANUFACTURER | 2
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 YF-CONNAUGHT LABORATORIES | 1
 FLU3-PARKDALE PHARMACEUTICALS | 1
 MUR-MERCK & CO. INC. | 1
+MU-UNKNOWN MANUFACTURER | 1
 LYME-SMITHKLINE BEECHAM | 1
 TYP-CONNAUGHT LABORATORIES | 1
 TTOX-PFIZER\WYETH | 1
@@ -164,6 +206,7 @@ MEN-CONNAUGHT LTD. | 1
 UNK-MERCK & CO. INC. | 1
 DTAP-BAXTER HEALTHCARE CORP. | 1
 FLUX-SANOFI PASTEUR | 1
+DTPIPV-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -216,9 +259,13 @@ VARCEL-MERCK & CO. INC. | 6
 MMRV-MERCK & CO. INC. | 5
 PPV-MERCK & CO. INC. | 5
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 4
+FLUX-UNKNOWN MANUFACTURER | 4
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 4
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 4
+HEP-UNKNOWN MANUFACTURER | 3
+HIBV-UNKNOWN MANUFACTURER | 3
 HEP-MERCK & CO. INC. | 3
+DTAP-UNKNOWN MANUFACTURER | 3
 MNQ-SANOFI PASTEUR | 2
 HEPA-MERCK & CO. INC. | 2
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 2
@@ -227,10 +274,15 @@ HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 1
 TYP-SANOFI PASTEUR | 1
 ANTH-MICHIGAN DEPT PUB HLTH | 1
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
+OPV-UNKNOWN MANUFACTURER | 1
 DTAP-SMITHKLINE BEECHAM | 1
 HEP-SMITHKLINE BEECHAM | 1
 HIBV-PFIZER\WYETH | 1
+VARCEL-UNKNOWN MANUFACTURER | 1
 TD-SANOFI PASTEUR | 1
+UNK-UNKNOWN MANUFACTURER | 1
+VARZOS-UNKNOWN MANUFACTURER | 1
+IPV-UNKNOWN MANUFACTURER | 1
 FLUN3-MEDIMMUNE VACCINES, INC. | 1
 FLU3-PFIZER\WYETH | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
@@ -320,49 +372,79 @@ HIBV-SANOFI PASTEUR | 3402
 HIBV-MERCK & CO. INC. | 3224
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 3171
 ANTH-EMERGENT BIOSOLUTIONS | 3114
+FLUX-UNKNOWN MANUFACTURER | 2623
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 2435
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 2018
 HEP-MERCK & CO. INC. | 1992
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1787
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1679
+DTAP-UNKNOWN MANUFACTURER | 1472
 SMALL-PFIZER\WYETH | 1315
 HBHEPB-MERCK & CO. INC. | 1250
 TYP-SANOFI PASTEUR | 1185
 TD-SANOFI PASTEUR | 1182
+UNK-UNKNOWN MANUFACTURER | 1006
+ANTH-UNKNOWN MANUFACTURER | 955
+HIBV-UNKNOWN MANUFACTURER | 876
+HEP-UNKNOWN MANUFACTURER | 857
+PPV-UNKNOWN MANUFACTURER | 800
+HEPA-UNKNOWN MANUFACTURER | 791
+IPV-UNKNOWN MANUFACTURER | 756
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 715
+MMR-UNKNOWN MANUFACTURER | 679
 FLUN3-MEDIMMUNE VACCINES, INC. | 670
 YF-SANOFI PASTEUR | 668
+VARCEL-UNKNOWN MANUFACTURER | 651
+TDAP-UNKNOWN MANUFACTURER | 631
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 612
+TD-UNKNOWN MANUFACTURER | 525
 TYP-BERNA BIOTECH, LTD. | 338
 TD-MASS. PUB HLTH BIOL LAB | 321
+TYP-UNKNOWN MANUFACTURER | 305
+SMALL-UNKNOWN MANUFACTURER | 291
+TTOX-UNKNOWN MANUFACTURER | 288
 TTOX-SANOFI PASTEUR | 285
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 254
 RAB-SANOFI PASTEUR | 247
+MEN-UNKNOWN MANUFACTURER | 240
+HPVX-UNKNOWN MANUFACTURER | 218
 DTAPH-SANOFI PASTEUR | 194
 HIBV-PFIZER\WYETH | 186
 ANTH-MICHIGAN DEPT PUB HLTH | 171
 JEV-SANOFI PASTEUR | 162
+DTP-UNKNOWN MANUFACTURER | 159
 DTAP-SMITHKLINE BEECHAM | 156
 PPV-PFIZER\WYETH | 143
+MMRV-UNKNOWN MANUFACTURER | 142
+VARZOS-UNKNOWN MANUFACTURER | 142
 MEN-SANOFI PASTEUR | 135
 OPV-PFIZER\WYETH | 135
+RVX-UNKNOWN MANUFACTURER | 126
 DTAP-PFIZER\WYETH | 117
 HEPA-SMITHKLINE BEECHAM | 102
+YF-UNKNOWN MANUFACTURER | 96
 DT-SANOFI PASTEUR | 94
 DTP-SANOFI PASTEUR | 78
 DTPHIB-PFIZER\WYETH | 72
+OPV-UNKNOWN MANUFACTURER | 71
 HEP-SMITHKLINE BEECHAM | 70
 HBPV-PFIZER\WYETH | 68
 FLU3-CSL LIMITED | 66
 RUB-MERCK & CO. INC. | 64
+DPP-UNKNOWN MANUFACTURER | 60
 IPV-PASTEUR MERIEUX CONNAUGHT | 56
+DTAPH-UNKNOWN MANUFACTURER | 49
 IPV-PFIZER\WYETH | 48
 DTAP-CONNAUGHT LABORATORIES | 43
 TTOX-MASS. PUB HLTH BIOL LAB | 43
+RAB-UNKNOWN MANUFACTURER | 42
+DTOX-UNKNOWN MANUFACTURER | 42
+HEPAB-UNKNOWN MANUFACTURER | 41
 MEA-MERCK & CO. INC. | 40
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 39
 FLU3-PFIZER\WYETH | 36
 MU-MERCK & CO. INC. | 34
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 34
 TD-AVENTIS PASTEUR | 33
 FLU3-EVANS VACCINES | 33
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 31
@@ -373,15 +455,21 @@ BCG-SANOFI PASTEUR | 25
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 21
 DT-MASS. PUB HLTH BIOL LAB | 20
 TYP-PFIZER\WYETH | 19
+DTIPV-UNKNOWN MANUFACTURER | 19
 DTPHIB-SANOFI PASTEUR | 18
 MM-MERCK & CO. INC. | 16
 TD-GLAXOSMITHKLINE BIOLOGICALS | 15
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 15
+MNQ-UNKNOWN MANUFACTURER | 14
+DTPHEP-UNKNOWN MANUFACTURER | 14
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 13
 TYP-CONNAUGHT LABORATORIES | 13
+DT-UNKNOWN MANUFACTURER | 13
 DTAP-BAXTER HEALTHCARE CORP. | 13
 6VAX-F-SANOFI PASTEUR | 12
+6VAX-F-UNKNOWN MANUFACTURER | 12
 DT-GLAXOSMITHKLINE BIOLOGICALS | 11
+BCG-UNKNOWN MANUFACTURER | 11
 DTP-LEDERLE LABORATORIES | 11
 RV-PFIZER\WYETH | 10
 PER-EMERGENT BIOSOLUTIONS | 10
@@ -389,18 +477,25 @@ HEPAB-SMITHKLINE BEECHAM | 9
 LYME-SMITHKLINE BEECHAM | 9
 FLUX-SANOFI PASTEUR | 9
 MUR-MERCK & CO. INC. | 8
+DTPHIB-UNKNOWN MANUFACTURER | 8
 HEP-SANOFI PASTEUR | 8
 MER-MERCK & CO. INC. | 7
 DTPIPV-SANOFI PASTEUR | 7
 TTOX-MEDEVA PHARMA, LTD. | 7
+DTPIHI-UNKNOWN MANUFACTURER | 7
+RUB-UNKNOWN MANUFACTURER | 7
 YF-CONNAUGHT LABORATORIES | 6
 TD-MICHIGAN DEPT PUB HLTH | 6
 TTOX-EMERGENT BIOSOLUTIONS | 6
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 6
 FLU3-PARKDALE PHARMACEUTICALS | 5
+MEA-UNKNOWN MANUFACTURER | 5
+DTPPHIB-UNKNOWN MANUFACTURER | 4
 MEN-CONNAUGHT LTD. | 3
+DTPIPV-UNKNOWN MANUFACTURER | 3
 TTOX-PFIZER\WYETH | 2
 DTP-PFIZER\WYETH | 2
+MU-UNKNOWN MANUFACTURER | 1
 FLU3-AVENTIS PASTEUR | 1
 UNK-MERCK & CO. INC. | 1
 ---
