--- a/results/2008.md
+++ b/results/2008.md
@@ -87,39 +87,67 @@ HEP-MERCK & CO. INC. | 676
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 652
 FLUN3-MEDIMMUNE VACCINES, INC. | 644
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 632
+FLUX-UNKNOWN MANUFACTURER | 602
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 575
 ANTH-EMERGENT BIOSOLUTIONS | 511
 HEPA-MERCK & CO. INC. | 423
+DTAP-UNKNOWN MANUFACTURER | 345
 HIBV-MERCK & CO. INC. | 330
 TYP-SANOFI PASTEUR | 283
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 278
 TD-SANOFI PASTEUR | 263
 MMRV-MERCK & CO. INC. | 261
+PPV-UNKNOWN MANUFACTURER | 218
 YF-SANOFI PASTEUR | 207
+UNK-UNKNOWN MANUFACTURER | 202
+HEPA-UNKNOWN MANUFACTURER | 195
+IPV-UNKNOWN MANUFACTURER | 194
+MMR-UNKNOWN MANUFACTURER | 192
 FLU3-CSL LIMITED | 183
 HBHEPB-MERCK & CO. INC. | 173
+VARCEL-UNKNOWN MANUFACTURER | 172
+HEP-UNKNOWN MANUFACTURER | 171
+TDAP-UNKNOWN MANUFACTURER | 155
+ANTH-UNKNOWN MANUFACTURER | 150
 SMALL-SANOFI PASTEUR | 128
+HIBV-UNKNOWN MANUFACTURER | 124
+SMALL-UNKNOWN MANUFACTURER | 118
+TD-UNKNOWN MANUFACTURER | 110
 DTAPIPVHIB-SANOFI PASTEUR | 101
 DTAPH-SANOFI PASTEUR | 99
 TD-MASS. PUB HLTH BIOL LAB | 85
+MEN-UNKNOWN MANUFACTURER | 83
 DT-SANOFI PASTEUR | 81
 TTOX-SANOFI PASTEUR | 80
 RAB-SANOFI PASTEUR | 78
+TYP-UNKNOWN MANUFACTURER | 76
 TYP-BERNA BIOTECH, LTD. | 71
 SMALL-PFIZER\WYETH | 66
 ANTH-MICHIGAN DEPT PUB HLTH | 65
+TTOX-UNKNOWN MANUFACTURER | 58
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 52
 JEV-SANOFI PASTEUR | 47
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 46
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 41
+VARZOS-UNKNOWN MANUFACTURER | 37
+RVX-UNKNOWN MANUFACTURER | 36
 PPV-PFIZER\WYETH | 35
+DTP-UNKNOWN MANUFACTURER | 32
+HPVX-UNKNOWN MANUFACTURER | 30
 MEN-SANOFI PASTEUR | 22
 DTP-SANOFI PASTEUR | 22
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 18
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 17
 FLUX-SANOFI PASTEUR | 16
+OPV-UNKNOWN MANUFACTURER | 16
+MMRV-UNKNOWN MANUFACTURER | 16
 MU-MERCK & CO. INC. | 16
+RAB-UNKNOWN MANUFACTURER | 15
+YF-UNKNOWN MANUFACTURER | 14
 MEA-MERCK & CO. INC. | 13
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 13
+DPP-UNKNOWN MANUFACTURER | 12
+HEPAB-UNKNOWN MANUFACTURER | 11
 HIBV-PFIZER\WYETH | 10
 HIBV-CONNAUGHT LABORATORIES | 9
 RUB-MERCK & CO. INC. | 9
@@ -128,38 +156,59 @@ TD-AVENTIS PASTEUR | 7
 HEPA-SMITHKLINE BEECHAM | 7
 PER-EMERGENT BIOSOLUTIONS | 6
 FLU3-AVENTIS PASTEUR | 6
+DTPIHI-UNKNOWN MANUFACTURER | 6
+DTOX-UNKNOWN MANUFACTURER | 6
 DTAP-CONNAUGHT LABORATORIES | 6
 DTAP-SMITHKLINE BEECHAM | 5
 IPV-PFIZER\WYETH | 5
+DT-UNKNOWN MANUFACTURER | 5
+MEA-UNKNOWN MANUFACTURER | 5
 DTAP-PFIZER\WYETH | 4
 OPV-PFIZER\WYETH | 4
+6VAX-F-UNKNOWN MANUFACTURER | 4
+RUB-UNKNOWN MANUFACTURER | 4
 UNK-MERCK & CO. INC. | 4
 DTPHIB-SANOFI PASTEUR | 4
 RV-PFIZER\WYETH | 3
 BCG-SANOFI PASTEUR | 3
+DTPHIB-UNKNOWN MANUFACTURER | 3
 MM-MERCK & CO. INC. | 3
 TTOX-MASS. PUB HLTH BIOL LAB | 3
 DT-MASS. PUB HLTH BIOL LAB | 3
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 3
+DTPPHIB-UNKNOWN MANUFACTURER | 3
+DTIPV-UNKNOWN MANUFACTURER | 3
 HEP-SMITHKLINE BEECHAM | 3
 IPV-CONNAUGHT LTD. | 3
 HEP-SANOFI PASTEUR | 3
 FLU3-PFIZER\WYETH | 3
+PER-UNKNOWN MANUFACTURER | 3
+DTPHEP-UNKNOWN MANUFACTURER | 2
 TD-GLAXOSMITHKLINE BIOLOGICALS | 2
 DTP-PFIZER\WYETH | 2
+BCG-UNKNOWN MANUFACTURER | 2
+HBHEPB-UNKNOWN MANUFACTURER | 2
+DTAPH-UNKNOWN MANUFACTURER | 2
 DTAP-BAXTER HEALTHCARE CORP. | 2
 TYP-PFIZER\WYETH | 2
+CHOL-UNKNOWN MANUFACTURER | 2
 FLU3-PARKDALE PHARMACEUTICALS | 2
 MUR-MERCK & CO. INC. | 1
 FLU3-LEDERLE LABORATORIES | 1
 FLU3-MEDEVA PHARMA, LTD. | 1
 DTPIPV-BERNA BIOTECH, LTD. | 1
 DTP-CONNAUGHT LABORATORIES | 1
+MM-UNKNOWN MANUFACTURER | 1
 DTPHIB-PFIZER\WYETH | 1
+DTPIPV-UNKNOWN MANUFACTURER | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 DTPIPV-SANOFI PASTEUR | 1
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 1
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+MNQ-UNKNOWN MANUFACTURER | 1
 PLAGUE-GREER LABORATORIES, INC. | 1
+MU-UNKNOWN MANUFACTURER | 1
+TBE-UNKNOWN MANUFACTURER | 1
 FLU3-CONNAUGHT LABORATORIES | 1
 ---
 # Total Deaths
@@ -215,20 +264,30 @@ MNQ-SANOFI PASTEUR | 6
 TDAP-SANOFI PASTEUR | 6
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 4
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 3
+FLUX-UNKNOWN MANUFACTURER | 3
 FLUN3-MEDIMMUNE VACCINES, INC. | 3
 MMRV-MERCK & CO. INC. | 3
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 2
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 2
+HEP-UNKNOWN MANUFACTURER | 2
 HEPA-SMITHKLINE BEECHAM | 2
+UNK-UNKNOWN MANUFACTURER | 2
 DTAPIPVHIB-SANOFI PASTEUR | 2
 MU-MERCK & CO. INC. | 1
+TTOX-UNKNOWN MANUFACTURER | 1
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1
 PPV-PFIZER\WYETH | 1
 HEPA-MERCK & CO. INC. | 1
+DTAP-UNKNOWN MANUFACTURER | 1
 IPV-PFIZER\WYETH | 1
+HIBV-UNKNOWN MANUFACTURER | 1
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
+MEN-UNKNOWN MANUFACTURER | 1
+YF-UNKNOWN MANUFACTURER | 1
 TTOX-SANOFI PASTEUR | 1
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 1
+SMALL-UNKNOWN MANUFACTURER | 1
+TD-UNKNOWN MANUFACTURER | 1
 YF-SANOFI PASTEUR | 1
 MEN-SANOFI PASTEUR | 1
 FLU3-AVENTIS PASTEUR | 1
@@ -318,6 +377,7 @@ RV5-MERCK & CO. INC. | 5463
 HIBV-SANOFI PASTEUR | 4714
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 4075
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 3292
+FLUX-UNKNOWN MANUFACTURER | 3152
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 3125
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 2448
 FLUN3-MEDIMMUNE VACCINES, INC. | 2391
@@ -326,17 +386,32 @@ HEP-MERCK & CO. INC. | 2241
 ANTH-EMERGENT BIOSOLUTIONS | 2147
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1834
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 1680
+DTAP-UNKNOWN MANUFACTURER | 1513
 HEPA-MERCK & CO. INC. | 1488
 TYP-SANOFI PASTEUR | 1225
+PPV-UNKNOWN MANUFACTURER | 1171
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 1131
 HIBV-MERCK & CO. INC. | 1111
+ANTH-UNKNOWN MANUFACTURER | 1067
 YF-SANOFI PASTEUR | 989
 TD-SANOFI PASTEUR | 987
+HEPA-UNKNOWN MANUFACTURER | 913
+MMR-UNKNOWN MANUFACTURER | 849
+SMALL-UNKNOWN MANUFACTURER | 846
+IPV-UNKNOWN MANUFACTURER | 843
 MMRV-MERCK & CO. INC. | 810
+VARCEL-UNKNOWN MANUFACTURER | 765
+HEP-UNKNOWN MANUFACTURER | 746
+HIBV-UNKNOWN MANUFACTURER | 724
+UNK-UNKNOWN MANUFACTURER | 711
 HBHEPB-MERCK & CO. INC. | 706
 FLU3-CSL LIMITED | 701
+TDAP-UNKNOWN MANUFACTURER | 698
 SMALL-SANOFI PASTEUR | 616
+TD-UNKNOWN MANUFACTURER | 523
+TYP-UNKNOWN MANUFACTURER | 517
 SMALL-PFIZER\WYETH | 466
+MEN-UNKNOWN MANUFACTURER | 381
 DTAPIPVHIB-SANOFI PASTEUR | 358
 RAB-SANOFI PASTEUR | 340
 DT-SANOFI PASTEUR | 332
@@ -345,17 +420,30 @@ ANTH-MICHIGAN DEPT PUB HLTH | 305
 TTOX-SANOFI PASTEUR | 296
 TYP-BERNA BIOTECH, LTD. | 268
 DTAPH-SANOFI PASTEUR | 221
+TTOX-UNKNOWN MANUFACTURER | 208
+RVX-UNKNOWN MANUFACTURER | 186
 JEV-SANOFI PASTEUR | 183
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 171
+VARZOS-UNKNOWN MANUFACTURER | 167
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 155
 PPV-PFIZER\WYETH | 150
+HPVX-UNKNOWN MANUFACTURER | 146
+DTP-UNKNOWN MANUFACTURER | 106
+YF-UNKNOWN MANUFACTURER | 104
 MEN-SANOFI PASTEUR | 94
 DTP-SANOFI PASTEUR | 87
+RAB-UNKNOWN MANUFACTURER | 85
 FLUX-SANOFI PASTEUR | 78
+MMRV-UNKNOWN MANUFACTURER | 76
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 69
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 65
+OPV-UNKNOWN MANUFACTURER | 61
+DPP-UNKNOWN MANUFACTURER | 58
 MEA-MERCK & CO. INC. | 53
+DTOX-UNKNOWN MANUFACTURER | 50
 MU-MERCK & CO. INC. | 48
 HIBV-PFIZER\WYETH | 47
+HEPAB-UNKNOWN MANUFACTURER | 43
 DTPHIB-PFIZER\WYETH | 41
 HEPA-SMITHKLINE BEECHAM | 37
 DTAP-SMITHKLINE BEECHAM | 34
@@ -365,12 +453,20 @@ HIBV-CONNAUGHT LABORATORIES | 31
 FLU3-PFIZER\WYETH | 30
 TD-AVENTIS PASTEUR | 29
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 28
+DTPHIB-UNKNOWN MANUFACTURER | 27
 TTOX-MASS. PUB HLTH BIOL LAB | 25
+DT-UNKNOWN MANUFACTURER | 24
 DTAP-PFIZER\WYETH | 23
 OPV-PFIZER\WYETH | 23
+6VAX-F-UNKNOWN MANUFACTURER | 23
+MEA-UNKNOWN MANUFACTURER | 22
+DTPHEP-UNKNOWN MANUFACTURER | 20
 FLU3-AVENTIS PASTEUR | 20
+DTPIHI-UNKNOWN MANUFACTURER | 20
 DTP-PFIZER\WYETH | 20
 IPV-PFIZER\WYETH | 19
+TBE-UNKNOWN MANUFACTURER | 18
+RUB-UNKNOWN MANUFACTURER | 17
 HEP-SMITHKLINE BEECHAM | 15
 DTAP-CONNAUGHT LABORATORIES | 15
 IPV-CONNAUGHT LTD. | 14
@@ -378,23 +474,35 @@ DTPIPV-SANOFI PASTEUR | 14
 TYP-PFIZER\WYETH | 14
 HEP-SANOFI PASTEUR | 13
 BCG-SANOFI PASTEUR | 12
+DTIPV-UNKNOWN MANUFACTURER | 12
 RV-PFIZER\WYETH | 11
 DT-MASS. PUB HLTH BIOL LAB | 11
 DTPHIB-SANOFI PASTEUR | 11
+DTPIPV-UNKNOWN MANUFACTURER | 11
 PER-EMERGENT BIOSOLUTIONS | 10
 PLAGUE-GREER LABORATORIES, INC. | 10
 TD-GLAXOSMITHKLINE BIOLOGICALS | 9
+HBHEPB-UNKNOWN MANUFACTURER | 9
 FLU3-CONNAUGHT LABORATORIES | 9
 MM-MERCK & CO. INC. | 8
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 8
 UNK-MERCK & CO. INC. | 7
+CHOL-UNKNOWN MANUFACTURER | 7
 FLU3-PARKDALE PHARMACEUTICALS | 7
 DTP-CONNAUGHT LABORATORIES | 6
+DTPPHIB-UNKNOWN MANUFACTURER | 5
 DTPIPV-BERNA BIOTECH, LTD. | 4
+BCG-UNKNOWN MANUFACTURER | 4
+MM-UNKNOWN MANUFACTURER | 4
 DTAP-BAXTER HEALTHCARE CORP. | 4
+DTAPH-UNKNOWN MANUFACTURER | 3
+PER-UNKNOWN MANUFACTURER | 3
 MUR-MERCK & CO. INC. | 2
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 2
+MU-UNKNOWN MANUFACTURER | 2
 FLU3-LEDERLE LABORATORIES | 1
 FLU3-MEDEVA PHARMA, LTD. | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 1
+MNQ-UNKNOWN MANUFACTURER | 1
 ---
