--- a/results/2009.md
+++ b/results/2009.md
@@ -87,7 +87,9 @@ FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1445
 FLUN3-MEDIMMUNE VACCINES, INC. | 1275
 DTAP-SANOFI PASTEUR | 1270
 IPV-SANOFI PASTEUR | 1113
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 987
 RV5-MERCK & CO. INC. | 867
+FLUX-UNKNOWN MANUFACTURER | 853
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 795
 DTAPIPVHIB-SANOFI PASTEUR | 791
 HIBV-SANOFI PASTEUR | 755
@@ -100,56 +102,97 @@ FLU3-CSL LIMITED | 512
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 492
 HEPA-MERCK & CO. INC. | 450
 ANTH-EMERGENT BIOSOLUTIONS | 318
+DTAP-UNKNOWN MANUFACTURER | 247
+UNK-UNKNOWN MANUFACTURER | 243
 TYP-SANOFI PASTEUR | 238
+PPV-UNKNOWN MANUFACTURER | 235
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 213
+MMR-UNKNOWN MANUFACTURER | 211
 FLUX-SANOFI PASTEUR | 201
 SMALL-SANOFI PASTEUR | 185
+VARCEL-UNKNOWN MANUFACTURER | 169
 TD-SANOFI PASTEUR | 168
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 164
 YF-SANOFI PASTEUR | 147
+IPV-UNKNOWN MANUFACTURER | 146
+HEPA-UNKNOWN MANUFACTURER | 146
 FLU(H1N1)-CSL LIMITED | 137
+HEP-UNKNOWN MANUFACTURER | 124
+TDAP-UNKNOWN MANUFACTURER | 120
 HIBV-MERCK & CO. INC. | 119
+HIBV-UNKNOWN MANUFACTURER | 105
+TD-UNKNOWN MANUFACTURER | 95
+ANTH-UNKNOWN MANUFACTURER | 88
+SMALL-UNKNOWN MANUFACTURER | 81
+MEN-UNKNOWN MANUFACTURER | 76
+VARZOS-UNKNOWN MANUFACTURER | 74
+TYP-UNKNOWN MANUFACTURER | 67
 MMRV-MERCK & CO. INC. | 67
 TD-MASS. PUB HLTH BIOL LAB | 67
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 58
 TYP-BERNA BIOTECH, LTD. | 58
 ANTH-MICHIGAN DEPT PUB HLTH | 48
+TTOX-UNKNOWN MANUFACTURER | 46
 TTOX-SANOFI PASTEUR | 46
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 43
 DT-SANOFI PASTEUR | 42
+RVX-UNKNOWN MANUFACTURER | 34
 RAB-SANOFI PASTEUR | 32
+HPVX-UNKNOWN MANUFACTURER | 31
 HBHEPB-MERCK & CO. INC. | 29
 PPV-PFIZER\WYETH | 28
+DTP-UNKNOWN MANUFACTURER | 25
 MEA-MERCK & CO. INC. | 23
 SMALL-PFIZER\WYETH | 23
 RUB-MERCK & CO. INC. | 21
 JEV-SANOFI PASTEUR | 20
 DTP-SANOFI PASTEUR | 18
+DTPPHIB-UNKNOWN MANUFACTURER | 17
+YF-UNKNOWN MANUFACTURER | 17
 MEN-SANOFI PASTEUR | 16
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 16
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 16
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 15
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 14
+DPP-UNKNOWN MANUFACTURER | 14
 DTAPH-SANOFI PASTEUR | 13
+MMRV-UNKNOWN MANUFACTURER | 12
 HEPA-SMITHKLINE BEECHAM | 12
+RAB-UNKNOWN MANUFACTURER | 11
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 11
+HEPAB-UNKNOWN MANUFACTURER | 11
+OPV-UNKNOWN MANUFACTURER | 10
 MU-MERCK & CO. INC. | 10
 TD-AVENTIS PASTEUR | 8
 TD-GLAXOSMITHKLINE BIOLOGICALS | 7
+DTOX-UNKNOWN MANUFACTURER | 6
 HIBV-PFIZER\WYETH | 6
 HEP-SANOFI PASTEUR | 6
 FLU3-AVENTIS PASTEUR | 6
 DTPIPV-SANOFI PASTEUR | 5
 FLU3-PFIZER\WYETH | 5
+DTPIPV-UNKNOWN MANUFACTURER | 5
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 5
 6VAX-F-SANOFI PASTEUR | 5
+MEA-UNKNOWN MANUFACTURER | 5
+DTAPH-UNKNOWN MANUFACTURER | 5
 DTAP-PFIZER\WYETH | 4
+DT-UNKNOWN MANUFACTURER | 4
 TYP-PFIZER\WYETH | 4
+DTIPV-UNKNOWN MANUFACTURER | 4
 PER-EMERGENT BIOSOLUTIONS | 4
 JEV1-INTERCELL AG | 4
+CHOL-UNKNOWN MANUFACTURER | 3
+DTPHIB-UNKNOWN MANUFACTURER | 3
 IPV-PFIZER\WYETH | 3
+RUB-UNKNOWN MANUFACTURER | 3
+6VAX-F-UNKNOWN MANUFACTURER | 3
+DTPHEP-UNKNOWN MANUFACTURER | 2
 UNK-MERCK & CO. INC. | 2
 MUR-MERCK & CO. INC. | 2
 HEP-SMITHKLINE BEECHAM | 2
+PER-UNKNOWN MANUFACTURER | 2
+DTPIHI-UNKNOWN MANUFACTURER | 2
 FLU3-CONNAUGHT LABORATORIES | 2
 H5N1-SANOFI PASTEUR | 1
 DTAP-BAXTER HEALTHCARE CORP. | 1
@@ -158,16 +201,20 @@ DTPHIB-SANOFI PASTEUR | 1
 DT-MASS. PUB HLTH BIOL LAB | 1
 DT-CONNAUGHT LABORATORIES | 1
 DTAP-SMITHKLINE BEECHAM | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 IPV-CONNAUGHT LTD. | 1
 MM-MERCK & CO. INC. | 1
 MNC-PFIZER\WYETH | 1
+BCG-UNKNOWN MANUFACTURER | 1
 MER-MERCK & CO. INC. | 1
 TD-MICHIGAN DEPT PUB HLTH | 1
 TTOX-SCLAVO | 1
 FLU3-PARKDALE PHARMACEUTICALS | 1
 MEN-CONNAUGHT LABORATORIES | 1
 TYP-CONNAUGHT LABORATORIES | 1
+MU-UNKNOWN MANUFACTURER | 1
 OPV-PFIZER\WYETH | 1
+MM-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -225,6 +272,7 @@ PPV-MERCK & CO. INC. | 8
 VARZOS-MERCK & CO. INC. | 8
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 8
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 7
+FLUX-UNKNOWN MANUFACTURER | 6
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 6
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 5
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 5
@@ -234,6 +282,7 @@ TDAP-SANOFI PASTEUR | 4
 HIBV-MERCK & CO. INC. | 4
 FLUX-SANOFI PASTEUR | 3
 HEPA-MERCK & CO. INC. | 2
+DTAP-UNKNOWN MANUFACTURER | 2
 MEA-MERCK & CO. INC. | 2
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 2
@@ -246,8 +295,12 @@ RAB-SANOFI PASTEUR | 1
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
 HBHEPB-MERCK & CO. INC. | 1
+IPV-UNKNOWN MANUFACTURER | 1
 TYP-SANOFI PASTEUR | 1
 YF-SANOFI PASTEUR | 1
+HEP-UNKNOWN MANUFACTURER | 1
+DT-UNKNOWN MANUFACTURER | 1
+RAB-UNKNOWN MANUFACTURER | 1
 MMRV-MERCK & CO. INC. | 1
 ---
 # Total Symptoms
@@ -336,7 +389,9 @@ VARZOS-MERCK & CO. INC. | 6122
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 6117
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 5938
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 5209
+FLUX-UNKNOWN MANUFACTURER | 4246
 DTAP-SANOFI PASTEUR | 4063
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 3967
 FLUN3-MEDIMMUNE VACCINES, INC. | 3805
 IPV-SANOFI PASTEUR | 3689
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 3081
@@ -352,18 +407,35 @@ DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1856
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1802
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1784
 HEPA-MERCK & CO. INC. | 1572
+PPV-UNKNOWN MANUFACTURER | 1204
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 1191
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 1118
+DTAP-UNKNOWN MANUFACTURER | 1077
 FLUX-SANOFI PASTEUR | 1062
 TYP-SANOFI PASTEUR | 996
+UNK-UNKNOWN MANUFACTURER | 923
 SMALL-SANOFI PASTEUR | 833
+MMR-UNKNOWN MANUFACTURER | 820
 YF-SANOFI PASTEUR | 778
+VARCEL-UNKNOWN MANUFACTURER | 765
+HEPA-UNKNOWN MANUFACTURER | 732
+TDAP-UNKNOWN MANUFACTURER | 700
+IPV-UNKNOWN MANUFACTURER | 679
 TD-SANOFI PASTEUR | 644
 HIBV-MERCK & CO. INC. | 579
+SMALL-UNKNOWN MANUFACTURER | 572
 FLU(H1N1)-CSL LIMITED | 569
 ANTH-MICHIGAN DEPT PUB HLTH | 545
+ANTH-UNKNOWN MANUFACTURER | 544
+HEP-UNKNOWN MANUFACTURER | 537
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 507
+HIBV-UNKNOWN MANUFACTURER | 469
+MEN-UNKNOWN MANUFACTURER | 465
+TD-UNKNOWN MANUFACTURER | 465
+TYP-UNKNOWN MANUFACTURER | 459
+VARZOS-UNKNOWN MANUFACTURER | 277
 TD-MASS. PUB HLTH BIOL LAB | 264
+TTOX-UNKNOWN MANUFACTURER | 258
 MMRV-MERCK & CO. INC. | 256
 TYP-BERNA BIOTECH, LTD. | 244
 SMALL-PFIZER\WYETH | 231
@@ -371,47 +443,74 @@ RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 227
 TTOX-SANOFI PASTEUR | 194
 DT-SANOFI PASTEUR | 173
 HBHEPB-MERCK & CO. INC. | 166
+RVX-UNKNOWN MANUFACTURER | 152
 RAB-SANOFI PASTEUR | 125
 DTP-SANOFI PASTEUR | 123
+DTP-UNKNOWN MANUFACTURER | 123
+HPVX-UNKNOWN MANUFACTURER | 118
 PPV-PFIZER\WYETH | 117
+RAB-UNKNOWN MANUFACTURER | 110
 MEN-SANOFI PASTEUR | 103
+YF-UNKNOWN MANUFACTURER | 100
 HEPA-SMITHKLINE BEECHAM | 84
+DPP-UNKNOWN MANUFACTURER | 75
 JEV-SANOFI PASTEUR | 71
+DTPPHIB-UNKNOWN MANUFACTURER | 69
+DT-UNKNOWN MANUFACTURER | 64
 RUB-MERCK & CO. INC. | 64
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 64
+OPV-UNKNOWN MANUFACTURER | 63
+HEPAB-UNKNOWN MANUFACTURER | 63
 MEA-MERCK & CO. INC. | 60
 DTAPH-SANOFI PASTEUR | 59
 TD-AVENTIS PASTEUR | 58
+MMRV-UNKNOWN MANUFACTURER | 57
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 55
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 54
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 52
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 44
 TYP-PFIZER\WYETH | 40
 FLU3-AVENTIS PASTEUR | 38
 TD-GLAXOSMITHKLINE BIOLOGICALS | 36
 6VAX-F-SANOFI PASTEUR | 25
+MEA-UNKNOWN MANUFACTURER | 25
+DTPIPV-UNKNOWN MANUFACTURER | 24
+DTAPH-UNKNOWN MANUFACTURER | 22
+DTOX-UNKNOWN MANUFACTURER | 21
 IPV-PFIZER\WYETH | 21
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 20
 PER-EMERGENT BIOSOLUTIONS | 20
 JEV1-INTERCELL AG | 20
 FLU3-PFIZER\WYETH | 19
 MU-MERCK & CO. INC. | 19
+6VAX-F-UNKNOWN MANUFACTURER | 19
 FLU3-CONNAUGHT LABORATORIES | 18
 HEP-SANOFI PASTEUR | 17
 DTAP-PFIZER\WYETH | 14
+CHOL-UNKNOWN MANUFACTURER | 13
 MUR-MERCK & CO. INC. | 13
 DTPIPV-SANOFI PASTEUR | 12
 HIBV-PFIZER\WYETH | 12
+DTIPV-UNKNOWN MANUFACTURER | 12
 DTAP-BAXTER HEALTHCARE CORP. | 11
+DTPHEP-UNKNOWN MANUFACTURER | 11
+DTPHIB-UNKNOWN MANUFACTURER | 9
+PER-UNKNOWN MANUFACTURER | 8
 MNC-PFIZER\WYETH | 8
 UNK-MERCK & CO. INC. | 6
 DTAP-SMITHKLINE BEECHAM | 6
+HBPV-UNKNOWN MANUFACTURER | 6
+DTPIHI-UNKNOWN MANUFACTURER | 6
 MEN-CONNAUGHT LABORATORIES | 6
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 5
+RUB-UNKNOWN MANUFACTURER | 5
 MER-MERCK & CO. INC. | 5
 FLU3-PARKDALE PHARMACEUTICALS | 5
 OPV-PFIZER\WYETH | 4
 DT-MASS. PUB HLTH BIOL LAB | 3
 HEP-SMITHKLINE BEECHAM | 3
+MU-UNKNOWN MANUFACTURER | 3
+MM-UNKNOWN MANUFACTURER | 3
 H5N1-SANOFI PASTEUR | 2
 IPV-CONNAUGHT LTD. | 2
 TTOX-SCLAVO | 2
@@ -419,5 +518,6 @@ TYP-CONNAUGHT LABORATORIES | 2
 DTPHIB-SANOFI PASTEUR | 1
 DT-CONNAUGHT LABORATORIES | 1
 MM-MERCK & CO. INC. | 1
+BCG-UNKNOWN MANUFACTURER | 1
 TD-MICHIGAN DEPT PUB HLTH | 1
 ---
