--- a/results/2010.md
+++ b/results/2010.md
@@ -88,12 +88,14 @@ HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1310
 MNQ-SANOFI PASTEUR | 1300
 PNC-PFIZER\WYETH | 1105
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 1089
+FLUX-UNKNOWN MANUFACTURER | 1087
 DTAP-SANOFI PASTEUR | 1023
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 996
 DTAPIPVHIB-SANOFI PASTEUR | 940
 RV5-MERCK & CO. INC. | 884
 VARZOS-MERCK & CO. INC. | 868
 IPV-SANOFI PASTEUR | 863
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 836
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 830
 FLUN3-MEDIMMUNE VACCINES, INC. | 790
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 788
@@ -104,64 +106,111 @@ FLU3-CSL LIMITED | 552
 HEP-MERCK & CO. INC. | 477
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 404
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 368
+PPV-UNKNOWN MANUFACTURER | 342
+DTAP-UNKNOWN MANUFACTURER | 292
+MMR-UNKNOWN MANUFACTURER | 252
 ANTH-EMERGENT BIOSOLUTIONS | 235
 MMRV-MERCK & CO. INC. | 229
+TDAP-UNKNOWN MANUFACTURER | 225
+VARCEL-UNKNOWN MANUFACTURER | 220
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 216
 TYP-SANOFI PASTEUR | 215
+HEPA-UNKNOWN MANUFACTURER | 205
+UNK-UNKNOWN MANUFACTURER | 199
+HEP-UNKNOWN MANUFACTURER | 179
 SMALL-SANOFI PASTEUR | 175
 HIBV-MERCK & CO. INC. | 171
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 154
 YF-SANOFI PASTEUR | 149
+HIBV-UNKNOWN MANUFACTURER | 143
+IPV-UNKNOWN MANUFACTURER | 135
 TD-SANOFI PASTEUR | 133
 FLU(H1N1)-CSL LIMITED | 128
 MEN-SANOFI PASTEUR | 108
+ANTH-UNKNOWN MANUFACTURER | 98
+TD-UNKNOWN MANUFACTURER | 97
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 84
 FLUX-SANOFI PASTEUR | 70
+TTOX-UNKNOWN MANUFACTURER | 69
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 67
+VARZOS-UNKNOWN MANUFACTURER | 66
+TYP-UNKNOWN MANUFACTURER | 59
+RVX-UNKNOWN MANUFACTURER | 58
 TYP-BERNA BIOTECH, LTD. | 56
+MEN-UNKNOWN MANUFACTURER | 54
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 54
+DTP-UNKNOWN MANUFACTURER | 48
 TTOX-SANOFI PASTEUR | 47
 TD-MASS. PUB HLTH BIOL LAB | 47
+SMALL-UNKNOWN MANUFACTURER | 47
 DT-SANOFI PASTEUR | 41
 RAB-SANOFI PASTEUR | 40
 ANTH-MICHIGAN DEPT PUB HLTH | 35
+HPVX-UNKNOWN MANUFACTURER | 34
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 33
 MEA-MERCK & CO. INC. | 33
+MMRV-UNKNOWN MANUFACTURER | 29
+OPV-UNKNOWN MANUFACTURER | 23
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 22
+YF-UNKNOWN MANUFACTURER | 19
 JEV-SANOFI PASTEUR | 19
 DTP-SANOFI PASTEUR | 16
 PPV-PFIZER\WYETH | 15
 HBHEPB-MERCK & CO. INC. | 15
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 15
+HEPAB-UNKNOWN MANUFACTURER | 15
 RUB-MERCK & CO. INC. | 15
+DPP-UNKNOWN MANUFACTURER | 13
+RAB-UNKNOWN MANUFACTURER | 13
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 12
+6VAX-F-UNKNOWN MANUFACTURER | 11
 TD-AVENTIS PASTEUR | 11
 JEV1-INTERCELL AG | 11
 MU-MERCK & CO. INC. | 10
+DTAPH-UNKNOWN MANUFACTURER | 9
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 9
 HEPA-SMITHKLINE BEECHAM | 8
 PER-EMERGENT BIOSOLUTIONS | 8
+DTOX-UNKNOWN MANUFACTURER | 7
 DTAPH-SANOFI PASTEUR | 7
 HEP-SANOFI PASTEUR | 7
+DTIPV-UNKNOWN MANUFACTURER | 6
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 6
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 6
 SMALL-PFIZER\WYETH | 5
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 5
 6VAX-F-SANOFI PASTEUR | 5
+DTPIPV-UNKNOWN MANUFACTURER | 5
+MNQ-UNKNOWN MANUFACTURER | 4
 IPV-PFIZER\WYETH | 4
+DTPIHI-UNKNOWN MANUFACTURER | 4
+MEA-UNKNOWN MANUFACTURER | 4
+DT-UNKNOWN MANUFACTURER | 4
+MU-UNKNOWN MANUFACTURER | 3
 FLU3-MEDEVA PHARMA, LTD. | 3
+HBPV-UNKNOWN MANUFACTURER | 3
 FLU3-PARKDALE PHARMACEUTICALS | 3
 DTAP-CONNAUGHT LABORATORIES | 3
 DT-MASS. PUB HLTH BIOL LAB | 3
 DTAP-PFIZER\WYETH | 3
 DTPIPV-SANOFI PASTEUR | 3
+PER-UNKNOWN MANUFACTURER | 3
 MUR-MERCK & CO. INC. | 3
+DTPHEP-UNKNOWN MANUFACTURER | 3
 HEP-SMITHKLINE BEECHAM | 2
+BCG-UNKNOWN MANUFACTURER | 2
 DTAP-SMITHKLINE BEECHAM | 2
 FLU3-EVANS VACCINES | 2
+MM-UNKNOWN MANUFACTURER | 2
 TD-GLAXOSMITHKLINE BIOLOGICALS | 2
+JEVX-UNKNOWN MANUFACTURER | 2
+RUB-UNKNOWN MANUFACTURER | 2
 MM-MERCK & CO. INC. | 2
 DTP-MICHIGAN DEPT PUB HLTH | 2
 OPV-PFIZER\WYETH | 2
+CHOL-UNKNOWN MANUFACTURER | 2
+SSEV-UNKNOWN MANUFACTURER | 2
+DTPHIB-UNKNOWN MANUFACTURER | 2
 DTPHIB-SANOFI PASTEUR | 2
 FLU3-PFIZER\WYETH | 2
 IPV-CONNAUGHT LTD. | 1
@@ -179,6 +228,7 @@ UNK-MERCK & CO. INC. | 1
 HIBV-CONNAUGHT LABORATORIES | 1
 TYP-PFIZER\WYETH | 1
 DTP-PFIZER\WYETH | 1
+DTPPHIB-UNKNOWN MANUFACTURER | 1
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 MER-MERCK & CO. INC. | 1
 ---
@@ -243,15 +293,25 @@ HIBV-MERCK & CO. INC. | 5
 FLUX-SANOFI PASTEUR | 4
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 4
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 3
+FLUX-UNKNOWN MANUFACTURER | 3
 FLUN3-MEDIMMUNE VACCINES, INC. | 3
 DTAP-SANOFI PASTEUR | 3
 IPV-SANOFI PASTEUR | 3
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 3
+MEN-UNKNOWN MANUFACTURER | 2
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 1
+UNK-UNKNOWN MANUFACTURER | 1
 FLU(H1N1)-CSL LIMITED | 1
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU3-CSL LIMITED | 1
+OPV-UNKNOWN MANUFACTURER | 1
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
+YF-UNKNOWN MANUFACTURER | 1
+DTAP-UNKNOWN MANUFACTURER | 1
+IPV-UNKNOWN MANUFACTURER | 1
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1
+PPV-UNKNOWN MANUFACTURER | 1
+HIBV-UNKNOWN MANUFACTURER | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
@@ -338,10 +398,12 @@ TDAP-SANOFI PASTEUR | 9054
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 8353
 FLU(H1N1)-SANOFI PASTEUR | 7303
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 6094
+FLUX-UNKNOWN MANUFACTURER | 5262
 MNQ-SANOFI PASTEUR | 5218
 PNC13-PFIZER\WYETH | 4990
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 4365
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 4085
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 3760
 PNC-PFIZER\WYETH | 3641
 DTAP-SANOFI PASTEUR | 3492
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 3157
@@ -357,83 +419,131 @@ HEPA-MERCK & CO. INC. | 2504
 HIBV-SANOFI PASTEUR | 2436
 FLU3-CSL LIMITED | 2259
 HEP-MERCK & CO. INC. | 1854
+PPV-UNKNOWN MANUFACTURER | 1544
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1297
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1292
 ANTH-EMERGENT BIOSOLUTIONS | 1267
+DTAP-UNKNOWN MANUFACTURER | 1251
+TDAP-UNKNOWN MANUFACTURER | 1183
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 1071
 TYP-SANOFI PASTEUR | 1021
+MMR-UNKNOWN MANUFACTURER | 1005
 SMALL-SANOFI PASTEUR | 993
+VARCEL-UNKNOWN MANUFACTURER | 932
+HEPA-UNKNOWN MANUFACTURER | 826
 MMRV-MERCK & CO. INC. | 765
+HIBV-UNKNOWN MANUFACTURER | 709
+HEP-UNKNOWN MANUFACTURER | 702
 YF-SANOFI PASTEUR | 690
+UNK-UNKNOWN MANUFACTURER | 647
 FLU(H1N1)-CSL LIMITED | 623
 HIBV-MERCK & CO. INC. | 604
+ANTH-UNKNOWN MANUFACTURER | 568
+IPV-UNKNOWN MANUFACTURER | 566
 TD-SANOFI PASTEUR | 540
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 509
 MEN-SANOFI PASTEUR | 451
+TD-UNKNOWN MANUFACTURER | 445
 FLUX-SANOFI PASTEUR | 397
+TTOX-UNKNOWN MANUFACTURER | 344
+TYP-UNKNOWN MANUFACTURER | 332
 ANTH-MICHIGAN DEPT PUB HLTH | 303
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 301
+SMALL-UNKNOWN MANUFACTURER | 296
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 295
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 273
+RVX-UNKNOWN MANUFACTURER | 250
+VARZOS-UNKNOWN MANUFACTURER | 249
+MEN-UNKNOWN MANUFACTURER | 244
+DTP-UNKNOWN MANUFACTURER | 241
 TYP-BERNA BIOTECH, LTD. | 240
 TTOX-SANOFI PASTEUR | 225
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 192
+YF-UNKNOWN MANUFACTURER | 178
 TD-MASS. PUB HLTH BIOL LAB | 167
+HPVX-UNKNOWN MANUFACTURER | 162
 DT-SANOFI PASTEUR | 151
+MMRV-UNKNOWN MANUFACTURER | 148
 RAB-SANOFI PASTEUR | 148
 JEV-SANOFI PASTEUR | 90
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 89
+RAB-UNKNOWN MANUFACTURER | 81
+OPV-UNKNOWN MANUFACTURER | 80
 MEA-MERCK & CO. INC. | 78
+HEPAB-UNKNOWN MANUFACTURER | 68
 HBHEPB-MERCK & CO. INC. | 67
+DPP-UNKNOWN MANUFACTURER | 61
+6VAX-F-UNKNOWN MANUFACTURER | 57
 DTP-SANOFI PASTEUR | 55
 PPV-PFIZER\WYETH | 48
 JEV1-INTERCELL AG | 46
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 44
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 43
 TD-AVENTIS PASTEUR | 42
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 39
 HEP-SANOFI PASTEUR | 39
 PER-EMERGENT BIOSOLUTIONS | 37
+DTOX-UNKNOWN MANUFACTURER | 36
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 35
 HEPA-SMITHKLINE BEECHAM | 33
 DTAPH-SANOFI PASTEUR | 33
+DTAPH-UNKNOWN MANUFACTURER | 32
 RUB-MERCK & CO. INC. | 31
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 31
 DTAP-PFIZER\WYETH | 29
 SMALL-PFIZER\WYETH | 27
+DTPIPV-UNKNOWN MANUFACTURER | 21
+DTIPV-UNKNOWN MANUFACTURER | 20
 FLU3-MEDEVA PHARMA, LTD. | 20
+DTPHEP-UNKNOWN MANUFACTURER | 19
+HBPV-UNKNOWN MANUFACTURER | 18
 HEP-SMITHKLINE BEECHAM | 17
 MU-MERCK & CO. INC. | 17
 OPV-PFIZER\WYETH | 17
+MNQ-UNKNOWN MANUFACTURER | 16
 IPV-PFIZER\WYETH | 16
 DTAP-CONNAUGHT LABORATORIES | 15
 DT-MASS. PUB HLTH BIOL LAB | 15
+DTPIHI-UNKNOWN MANUFACTURER | 15
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 15
 6VAX-F-SANOFI PASTEUR | 15
 DTP-MICHIGAN DEPT PUB HLTH | 14
 DTP-PFIZER\WYETH | 14
+MEA-UNKNOWN MANUFACTURER | 13
 MER-MERCK & CO. INC. | 12
 IPV-CONNAUGHT LTD. | 11
 DTPIPV-SANOFI PASTEUR | 11
 FLU3-EVANS VACCINES | 10
 MUR-MERCK & CO. INC. | 10
+MU-UNKNOWN MANUFACTURER | 9
+PER-UNKNOWN MANUFACTURER | 9
 FLU3-PFIZER\WYETH | 9
+DTPPHIB-UNKNOWN MANUFACTURER | 9
+BCG-UNKNOWN MANUFACTURER | 8
+DT-UNKNOWN MANUFACTURER | 8
 DTAP-SMITHKLINE BEECHAM | 7
 TD-GLAXOSMITHKLINE BIOLOGICALS | 7
+JEVX-UNKNOWN MANUFACTURER | 7
+SSEV-UNKNOWN MANUFACTURER | 7
 DTPHIB-SANOFI PASTEUR | 7
 FLU3-AVENTIS PASTEUR | 6
+RUB-UNKNOWN MANUFACTURER | 5
 MM-MERCK & CO. INC. | 5
 MEN-CONNAUGHT LABORATORIES | 5
 UNK-MERCK & CO. INC. | 5
 FLU3-PARKDALE PHARMACEUTICALS | 4
+MM-UNKNOWN MANUFACTURER | 4
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 4
 RV-PFIZER\WYETH | 4
 IPV-PASTEUR MERIEUX INST. | 4
 TTOX-MASS. PUB HLTH BIOL LAB | 4
 TD-PFIZER\WYETH | 4
 HIBV-CONNAUGHT LABORATORIES | 4
+DTPHIB-UNKNOWN MANUFACTURER | 3
 TYP-PFIZER\WYETH | 3
 TD-MICHIGAN DEPT PUB HLTH | 2
 DTP-MASS. PUB HLTH BIOL LAB | 2
+CHOL-UNKNOWN MANUFACTURER | 2
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 FLU3-CONNAUGHT LABORATORIES | 1
 ---
