--- a/results/2011.md
+++ b/results/2011.md
@@ -84,6 +84,7 @@ PNC13-PFIZER\WYETH | 1829
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1284
 MNQ-SANOFI PASTEUR | 1212
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1181
+FLUX-UNKNOWN MANUFACTURER | 1076
 DTAPIPVHIB-SANOFI PASTEUR | 1032
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 939
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 871
@@ -101,20 +102,41 @@ MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 448
 FLU3-CSL LIMITED | 438
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 383
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 365
+DTAP-UNKNOWN MANUFACTURER | 322
+PPV-UNKNOWN MANUFACTURER | 303
 MMRV-MERCK & CO. INC. | 279
 HIBV-MERCK & CO. INC. | 269
+VARCEL-UNKNOWN MANUFACTURER | 248
+TDAP-UNKNOWN MANUFACTURER | 248
+MMR-UNKNOWN MANUFACTURER | 243
 ANTH-EMERGENT BIOSOLUTIONS | 234
 SMALL-SANOFI PASTEUR | 218
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 206
 TYP-SANOFI PASTEUR | 205
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 177
 YF-SANOFI PASTEUR | 164
+HEPA-UNKNOWN MANUFACTURER | 160
+HIBV-UNKNOWN MANUFACTURER | 142
+HEP-UNKNOWN MANUFACTURER | 134
+IPV-UNKNOWN MANUFACTURER | 125
+UNK-UNKNOWN MANUFACTURER | 123
 TD-SANOFI PASTEUR | 91
+RVX-UNKNOWN MANUFACTURER | 87
+MEN-UNKNOWN MANUFACTURER | 81
+ANTH-UNKNOWN MANUFACTURER | 72
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 65
 TYP-BERNA BIOTECH, LTD. | 64
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 63
+SMALL-UNKNOWN MANUFACTURER | 57
+TD-UNKNOWN MANUFACTURER | 57
+VARZOS-UNKNOWN MANUFACTURER | 57
+DTP-UNKNOWN MANUFACTURER | 56
+TTOX-UNKNOWN MANUFACTURER | 51
+HPVX-UNKNOWN MANUFACTURER | 50
 FLUX-SANOFI PASTEUR | 48
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 46
 RAB-SANOFI PASTEUR | 46
+TYP-UNKNOWN MANUFACTURER | 41
 MEN-SANOFI PASTEUR | 40
 DT-SANOFI PASTEUR | 39
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 38
@@ -124,15 +146,27 @@ ANTH-MICHIGAN DEPT PUB HLTH | 22
 TTOX-SANOFI PASTEUR | 22
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 19
 PER-EMERGENT BIOSOLUTIONS | 19
+MMRV-UNKNOWN MANUFACTURER | 18
+6VAX-F-UNKNOWN MANUFACTURER | 18
+DPP-UNKNOWN MANUFACTURER | 15
+OPV-UNKNOWN MANUFACTURER | 15
 TD-MASS. PUB HLTH BIOL LAB | 15
+YF-UNKNOWN MANUFACTURER | 15
 DTP-SANOFI PASTEUR | 14
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 12
+RAB-UNKNOWN MANUFACTURER | 11
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 10
 MEA-MERCK & CO. INC. | 10
+DT-UNKNOWN MANUFACTURER | 10
+DTAPH-UNKNOWN MANUFACTURER | 10
+HEPAB-UNKNOWN MANUFACTURER | 10
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 10
 PPV-PFIZER\WYETH | 9
+PER-UNKNOWN MANUFACTURER | 9
 HBHEPB-MERCK & CO. INC. | 8
 HIBV-PFIZER\WYETH | 8
 JEV-SANOFI PASTEUR | 7
+DTPPHIB-UNKNOWN MANUFACTURER | 7
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 7
 RUB-MERCK & CO. INC. | 6
 TD-AVENTIS PASTEUR | 6
@@ -140,30 +174,44 @@ FLU(H1N1)-CSL LIMITED | 5
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 5
 DTAP-PFIZER\WYETH | 5
 OPV-PFIZER\WYETH | 5
+RUB-UNKNOWN MANUFACTURER | 5
 HEPAB-SMITHKLINE BEECHAM | 4
 SMALL-PFIZER\WYETH | 3
+DTPIHI-UNKNOWN MANUFACTURER | 3
 HEP-SANOFI PASTEUR | 3
 FLU3-EVANS VACCINES | 3
+DTOX-UNKNOWN MANUFACTURER | 3
 FLU3-PFIZER\WYETH | 3
+HBPV-UNKNOWN MANUFACTURER | 3
 MU-MERCK & CO. INC. | 3
+DTIPV-UNKNOWN MANUFACTURER | 3
 DTPIPV-SANOFI PASTEUR | 3
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 3
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 3
 DTAPH-SANOFI PASTEUR | 2
 DTAP-SMITHKLINE BEECHAM | 2
+DTPIPV-UNKNOWN MANUFACTURER | 2
 6VAX-F-SANOFI PASTEUR | 2
 FLU3-MEDEVA PHARMA, LTD. | 2
+MEA-UNKNOWN MANUFACTURER | 2
 FLUX-CSL LIMITED | 2
+DTPHIB-UNKNOWN MANUFACTURER | 2
 BCG-SANOFI PASTEUR | 2
 FLU3-CONNAUGHT LABORATORIES | 2
+MM-UNKNOWN MANUFACTURER | 2
 TTOX-MASS. PUB HLTH BIOL LAB | 2
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 2
 BCG-ORGANON-TEKNIKA | 1
+CHOL-UNKNOWN MANUFACTURER | 1
+DTPHEP-UNKNOWN MANUFACTURER | 1
 DT-MASS. PUB HLTH BIOL LAB | 1
 IPV-PASTEUR MERIEUX CONNAUGHT | 1
+BCG-UNKNOWN MANUFACTURER | 1
+MU-UNKNOWN MANUFACTURER | 1
 FLUX-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 TYP-PFIZER\WYETH | 1
 TD-GLAXOSMITHKLINE BIOLOGICALS | 1
+JEVX-UNKNOWN MANUFACTURER | 1
 HEPA-SMITHKLINE BEECHAM | 1
 TTOX-SCLAVO | 1
 TTOX-PFIZER\WYETH | 1
@@ -222,6 +270,7 @@ PNC13-PFIZER\WYETH | 41
 DTAPIPVHIB-SANOFI PASTEUR | 40
 RV5-MERCK & CO. INC. | 33
 FLU3-SANOFI PASTEUR | 26
+FLUX-UNKNOWN MANUFACTURER | 22
 PNC-PFIZER\WYETH | 16
 VARCEL-MERCK & CO. INC. | 13
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 12
@@ -234,27 +283,35 @@ MNQ-SANOFI PASTEUR | 5
 HIBV-SANOFI PASTEUR | 5
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 4
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 4
+DTP-UNKNOWN MANUFACTURER | 4
+HEP-UNKNOWN MANUFACTURER | 4
 VARZOS-MERCK & CO. INC. | 3
 FLUN3-MEDIMMUNE VACCINES, INC. | 3
 TDAP-SANOFI PASTEUR | 3
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 3
+IPV-UNKNOWN MANUFACTURER | 3
 DTAP-SANOFI PASTEUR | 3
 IPV-SANOFI PASTEUR | 3
 HEPA-MERCK & CO. INC. | 3
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 3
 HIBV-MERCK & CO. INC. | 3
 FLU3-CSL LIMITED | 3
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 3
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 PPV-MERCK & CO. INC. | 2
+DTAP-UNKNOWN MANUFACTURER | 2
 TD-SANOFI PASTEUR | 1
 YF-SANOFI PASTEUR | 1
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+DT-UNKNOWN MANUFACTURER | 1
 FLU(H1N1)-SANOFI PASTEUR | 1
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+HIBV-UNKNOWN MANUFACTURER | 1
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+TDAP-UNKNOWN MANUFACTURER | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
 SMALL-SANOFI PASTEUR | 1
 TYP-SANOFI PASTEUR | 1
@@ -343,6 +400,7 @@ HPV4-MERCK & CO. INC. | 8615
 MMR-MERCK & CO. INC. | 7378
 PNC13-PFIZER\WYETH | 6587
 VARZOS-MERCK & CO. INC. | 6483
+FLUX-UNKNOWN MANUFACTURER | 5434
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 4689
 MNQ-SANOFI PASTEUR | 4608
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 4061
@@ -359,50 +417,87 @@ DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1964
 PNC-PFIZER\WYETH | 1948
 HIBV-SANOFI PASTEUR | 1908
 FLU3-CSL LIMITED | 1839
+PPV-UNKNOWN MANUFACTURER | 1542
 HEP-MERCK & CO. INC. | 1524
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1501
+DTAP-UNKNOWN MANUFACTURER | 1448
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1312
 SMALL-SANOFI PASTEUR | 1273
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1260
 ANTH-EMERGENT BIOSOLUTIONS | 1207
+TDAP-UNKNOWN MANUFACTURER | 1145
+MMR-UNKNOWN MANUFACTURER | 993
 HIBV-MERCK & CO. INC. | 980
 MMRV-MERCK & CO. INC. | 944
+VARCEL-UNKNOWN MANUFACTURER | 920
 TYP-SANOFI PASTEUR | 920
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 847
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 800
 YF-SANOFI PASTEUR | 704
+HEPA-UNKNOWN MANUFACTURER | 670
+HEP-UNKNOWN MANUFACTURER | 657
+IPV-UNKNOWN MANUFACTURER | 605
+HIBV-UNKNOWN MANUFACTURER | 518
+UNK-UNKNOWN MANUFACTURER | 482
+ANTH-UNKNOWN MANUFACTURER | 415
 TD-SANOFI PASTEUR | 403
+MEN-UNKNOWN MANUFACTURER | 388
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 367
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 343
+RVX-UNKNOWN MANUFACTURER | 311
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 296
 ANTH-MICHIGAN DEPT PUB HLTH | 280
+TD-UNKNOWN MANUFACTURER | 277
+SMALL-UNKNOWN MANUFACTURER | 273
+DTP-UNKNOWN MANUFACTURER | 268
+TTOX-UNKNOWN MANUFACTURER | 256
 TYP-BERNA BIOTECH, LTD. | 246
+HPVX-UNKNOWN MANUFACTURER | 240
 FLU(H1N1)-SANOFI PASTEUR | 232
+TYP-UNKNOWN MANUFACTURER | 232
+VARZOS-UNKNOWN MANUFACTURER | 217
 RAB-SANOFI PASTEUR | 209
 FLUX-SANOFI PASTEUR | 181
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 180
 DT-SANOFI PASTEUR | 173
 MEN-SANOFI PASTEUR | 162
 JEV1-INTERCELL AG | 119
+YF-UNKNOWN MANUFACTURER | 117
 PER-EMERGENT BIOSOLUTIONS | 111
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 103
 TD-MASS. PUB HLTH BIOL LAB | 102
 TTOX-SANOFI PASTEUR | 97
+6VAX-F-UNKNOWN MANUFACTURER | 84
+MMRV-UNKNOWN MANUFACTURER | 67
+OPV-UNKNOWN MANUFACTURER | 67
+RAB-UNKNOWN MANUFACTURER | 64
 HEPAB-SMITHKLINE BEECHAM | 61
 FLU(H1N1)-CSL LIMITED | 59
 DTP-SANOFI PASTEUR | 57
+DPP-UNKNOWN MANUFACTURER | 54
 HBHEPB-MERCK & CO. INC. | 53
+DTAPH-UNKNOWN MANUFACTURER | 53
+DT-UNKNOWN MANUFACTURER | 48
+PER-UNKNOWN MANUFACTURER | 46
 TD-AVENTIS PASTEUR | 45
+DTPHIB-UNKNOWN MANUFACTURER | 44
 PPV-PFIZER\WYETH | 43
+HEPAB-UNKNOWN MANUFACTURER | 40
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 40
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 37
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 36
 HIBV-PFIZER\WYETH | 33
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 31
 SMALL-PFIZER\WYETH | 30
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 27
+HBPV-UNKNOWN MANUFACTURER | 21
 JEV-SANOFI PASTEUR | 20
+RUB-UNKNOWN MANUFACTURER | 20
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 20
 DTAP-BAXTER HEALTHCARE CORP. | 20
+DTPPHIB-UNKNOWN MANUFACTURER | 19
 FLU3-PFIZER\WYETH | 19
+DTIPV-UNKNOWN MANUFACTURER | 19
 RUB-MERCK & CO. INC. | 18
 FLU3-EVANS VACCINES | 18
 FLUX-NOVARTIS VACCINES AND DIAGNOSTICS | 18
@@ -412,22 +507,30 @@ OPV-PFIZER\WYETH | 14
 DTPIPV-SANOFI PASTEUR | 13
 HEPA-SMITHKLINE BEECHAM | 11
 TTOX-PFIZER\WYETH | 11
+MM-UNKNOWN MANUFACTURER | 11
 DTAP-PFIZER\WYETH | 10
+MEA-UNKNOWN MANUFACTURER | 10
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 10
 FLUX-CSL LIMITED | 9
 FLU3-CONNAUGHT LABORATORIES | 9
 RV-PFIZER\WYETH | 9
+DTPIPV-UNKNOWN MANUFACTURER | 8
 FLU3-MEDEVA PHARMA, LTD. | 8
 DT-MASS. PUB HLTH BIOL LAB | 8
+DTOX-UNKNOWN MANUFACTURER | 8
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 8
 FLUX-PFIZER\WYETH | 8
 DTP-LEDERLE LABORATORIES | 8
+DTPIHI-UNKNOWN MANUFACTURER | 7
+MU-UNKNOWN MANUFACTURER | 6
 MU-MERCK & CO. INC. | 6
 TTOX-SCLAVO | 6
 TTOX-MASS. PUB HLTH BIOL LAB | 6
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 6
 BCG-ORGANON-TEKNIKA | 5
+CHOL-UNKNOWN MANUFACTURER | 5
 IPV-PASTEUR MERIEUX CONNAUGHT | 5
+JEVX-UNKNOWN MANUFACTURER | 5
 FLU3-AVENTIS PASTEUR | 5
 DTAP-SMITHKLINE BEECHAM | 4
 6VAX-F-SANOFI PASTEUR | 4
@@ -435,8 +538,10 @@ TYP-PFIZER\WYETH | 4
 H5N1-SANOFI PASTEUR | 4
 MUR-MERCK & CO. INC. | 4
 DTAPH-SANOFI PASTEUR | 3
+DTPHEP-UNKNOWN MANUFACTURER | 3
 IPV-PFIZER\WYETH | 3
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 3
+BCG-UNKNOWN MANUFACTURER | 2
 TD-GLAXOSMITHKLINE BIOLOGICALS | 2
 BCG-SANOFI PASTEUR | 2
 HBPV-PFIZER\WYETH | 1
