--- a/results/2012.md
+++ b/results/2012.md
@@ -83,6 +83,7 @@ FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1579
 PNC13-PFIZER\WYETH | 1321
 MNQ-SANOFI PASTEUR | 1121
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1055
+FLUX-UNKNOWN MANUFACTURER | 1047
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 967
 RV5-MERCK & CO. INC. | 897
 DTAPIPVHIB-SANOFI PASTEUR | 888
@@ -101,32 +102,63 @@ DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 425
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 355
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 330
 HIBV-MERCK & CO. INC. | 317
+DTAP-UNKNOWN MANUFACTURER | 296
+PPV-UNKNOWN MANUFACTURER | 294
 SMALL-SANOFI PASTEUR | 281
 TYP-SANOFI PASTEUR | 263
+MMR-UNKNOWN MANUFACTURER | 237
+TDAP-UNKNOWN MANUFACTURER | 216
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 213
+VARCEL-UNKNOWN MANUFACTURER | 194
 ANTH-EMERGENT BIOSOLUTIONS | 192
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 176
 YF-SANOFI PASTEUR | 172
+HEP-UNKNOWN MANUFACTURER | 156
+HEPA-UNKNOWN MANUFACTURER | 151
+UNK-UNKNOWN MANUFACTURER | 134
+HIBV-UNKNOWN MANUFACTURER | 128
+IPV-UNKNOWN MANUFACTURER | 119
+VARZOS-UNKNOWN MANUFACTURER | 111
+ANTH-UNKNOWN MANUFACTURER | 79
 TD-SANOFI PASTEUR | 72
+TD-UNKNOWN MANUFACTURER | 68
+MEN-UNKNOWN MANUFACTURER | 67
+RVX-UNKNOWN MANUFACTURER | 67
 MMRV-MERCK & CO. INC. | 66
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 55
 TYP-BERNA BIOTECH, LTD. | 54
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 53
+SMALL-UNKNOWN MANUFACTURER | 49
 RAB-SANOFI PASTEUR | 49
+TYP-UNKNOWN MANUFACTURER | 47
+HPVX-UNKNOWN MANUFACTURER | 43
+TTOX-UNKNOWN MANUFACTURER | 40
 TTOX-SANOFI PASTEUR | 40
+DTP-UNKNOWN MANUFACTURER | 39
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 39
 MEN-SANOFI PASTEUR | 35
 JEV1-INTERCELL AG | 30
 ADEN_4_7-TEVA PHARMACEUTICALS | 28
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 26
+MMRV-UNKNOWN MANUFACTURER | 21
 PER-EMERGENT BIOSOLUTIONS | 20
+DTAPH-UNKNOWN MANUFACTURER | 19
 DT-SANOFI PASTEUR | 16
+YF-UNKNOWN MANUFACTURER | 15
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 15
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 15
 HBHEPB-MERCK & CO. INC. | 14
 TD-MASS. PUB HLTH BIOL LAB | 13
+OPV-UNKNOWN MANUFACTURER | 13
 DTP-SANOFI PASTEUR | 13
 FLUX-SANOFI PASTEUR | 13
+HEPAB-UNKNOWN MANUFACTURER | 12
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 12
+DPP-UNKNOWN MANUFACTURER | 11
+6VAX-F-UNKNOWN MANUFACTURER | 11
 ANTH-MICHIGAN DEPT PUB HLTH | 10
+RAB-UNKNOWN MANUFACTURER | 8
+PER-UNKNOWN MANUFACTURER | 7
 SMALL-PFIZER\WYETH | 7
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 7
 HEPA-SMITHKLINE BEECHAM | 7
@@ -134,20 +166,28 @@ MEA-MERCK & CO. INC. | 6
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 6
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 6
 DTAPH-SANOFI PASTEUR | 5
+DT-UNKNOWN MANUFACTURER | 5
+DTPIPV-UNKNOWN MANUFACTURER | 5
 HEP-SANOFI PASTEUR | 5
 HIBV-CONNAUGHT LABORATORIES | 5
 FLU(H1N1)-CSL LIMITED | 5
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 4
 UNK-MERCK & CO. INC. | 4
+DTPHEP-UNKNOWN MANUFACTURER | 4
+BCG-UNKNOWN MANUFACTURER | 4
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 4
+MEA-UNKNOWN MANUFACTURER | 4
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 4
+MM-UNKNOWN MANUFACTURER | 4
 MM-MERCK & CO. INC. | 3
 FLU3-AVENTIS PASTEUR | 3
 IPV-PFIZER\WYETH | 3
 FLUX-NOVARTIS VACCINES AND DIAGNOSTICS | 3
 HEP-SMITHKLINE BEECHAM | 3
 HEPAB-SMITHKLINE BEECHAM | 3
+DTIPV-UNKNOWN MANUFACTURER | 3
 PPV-PFIZER\WYETH | 3
+MU-UNKNOWN MANUFACTURER | 2
 TTOX-MASS. PUB HLTH BIOL LAB | 2
 DTPIPV-SANOFI PASTEUR | 2
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 2
@@ -155,21 +195,28 @@ TD-GLAXOSMITHKLINE BIOLOGICALS | 2
 DT-MASS. PUB HLTH BIOL LAB | 2
 DTAP-PFIZER\WYETH | 2
 DTAP-SMITHKLINE BEECHAM | 2
+DTPPHIB-UNKNOWN MANUFACTURER | 2
 FLU(H1N1)-SANOFI PASTEUR | 2
+MNQ-UNKNOWN MANUFACTURER | 2
+DTPIHI-UNKNOWN MANUFACTURER | 2
 FLUX-CSL LIMITED | 2
 FLU3-MEDEVA PHARMA, LTD. | 2
 DTAP-BAXTER HEALTHCARE CORP. | 2
+RUB-UNKNOWN MANUFACTURER | 1
 MER-MERCK & CO. INC. | 1
 PLAGUE-GREER LABORATORIES, INC. | 1
 MUR-MERCK & CO. INC. | 1
+DTPHIB-UNKNOWN MANUFACTURER | 1
 TD-LEDERLE LABORATORIES | 1
 TYP-CONNAUGHT LABORATORIES | 1
 DTAP-CONNAUGHT LABORATORIES | 1
 IPV-CONNAUGHT LTD. | 1
 H5N1-SANOFI PASTEUR | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 HIBV-PFIZER\WYETH | 1
 TYP-PFIZER\WYETH | 1
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 1
+DTOX-UNKNOWN MANUFACTURER | 1
 DTP-PFIZER\WYETH | 1
 RUB-MERCK & CO. INC. | 1
 BCG-ORGANON-TEKNIKA | 1
@@ -215,7 +262,9 @@ Vax ID | Deaths
 PNC13-PFIZER\WYETH | 44
 RV5-MERCK & CO. INC. | 32
 DTAPIPVHIB-SANOFI PASTEUR | 28
+FLUX-UNKNOWN MANUFACTURER | 17
 FLU3-SANOFI PASTEUR | 15
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 15
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 15
 VARZOS-MERCK & CO. INC. | 11
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 11
@@ -241,14 +290,21 @@ FLUN3-MEDIMMUNE VACCINES, INC. | 2
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 2
 PPV-MERCK & CO. INC. | 2
 YF-SANOFI PASTEUR | 2
+HEP-UNKNOWN MANUFACTURER | 2
+DTP-UNKNOWN MANUFACTURER | 2
 MEN-SANOFI PASTEUR | 2
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
+6VAX-F-UNKNOWN MANUFACTURER | 1
 ADEN_4_7-TEVA PHARMACEUTICALS | 1
 HIBV-CONNAUGHT LABORATORIES | 1
+MEN-UNKNOWN MANUFACTURER | 1
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 1
 TYP-SANOFI PASTEUR | 1
+MMR-UNKNOWN MANUFACTURER | 1
 TD-SANOFI PASTEUR | 1
+DTAP-UNKNOWN MANUFACTURER | 1
+VARZOS-UNKNOWN MANUFACTURER | 1
 RAB-SANOFI PASTEUR | 1
 TYP-BERNA BIOTECH, LTD. | 1
 ---
@@ -334,6 +390,7 @@ HPV4-MERCK & CO. INC. | 8352
 TDAP-SANOFI PASTEUR | 7738
 MMR-MERCK & CO. INC. | 7088
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 6054
+FLUX-UNKNOWN MANUFACTURER | 5420
 PNC13-PFIZER\WYETH | 5070
 MNQ-SANOFI PASTEUR | 4414
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 4107
@@ -351,19 +408,40 @@ HEPA-MERCK & CO. INC. | 1852
 HEP-MERCK & CO. INC. | 1819
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1761
 HIBV-SANOFI PASTEUR | 1645
+PPV-UNKNOWN MANUFACTURER | 1601
 SMALL-SANOFI PASTEUR | 1488
 PNC-PFIZER\WYETH | 1483
+DTAP-UNKNOWN MANUFACTURER | 1384
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1316
+TDAP-UNKNOWN MANUFACTURER | 1145
 ANTH-EMERGENT BIOSOLUTIONS | 1124
 HIBV-MERCK & CO. INC. | 1115
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1082
 TYP-SANOFI PASTEUR | 1075
+MMR-UNKNOWN MANUFACTURER | 1037
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 926
 YF-SANOFI PASTEUR | 858
+VARCEL-UNKNOWN MANUFACTURER | 846
+HEPA-UNKNOWN MANUFACTURER | 723
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 623
+HEP-UNKNOWN MANUFACTURER | 619
+IPV-UNKNOWN MANUFACTURER | 613
+ANTH-UNKNOWN MANUFACTURER | 574
+HIBV-UNKNOWN MANUFACTURER | 552
+VARZOS-UNKNOWN MANUFACTURER | 488
+UNK-UNKNOWN MANUFACTURER | 478
+MEN-UNKNOWN MANUFACTURER | 365
+TD-UNKNOWN MANUFACTURER | 342
+RVX-UNKNOWN MANUFACTURER | 318
+TYP-UNKNOWN MANUFACTURER | 302
 TD-SANOFI PASTEUR | 299
+SMALL-UNKNOWN MANUFACTURER | 264
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 263
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 235
+TTOX-UNKNOWN MANUFACTURER | 227
 MMRV-MERCK & CO. INC. | 223
+HPVX-UNKNOWN MANUFACTURER | 223
+DTP-UNKNOWN MANUFACTURER | 216
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 211
 TYP-BERNA BIOTECH, LTD. | 181
 RAB-SANOFI PASTEUR | 177
@@ -371,36 +449,55 @@ MEN-SANOFI PASTEUR | 164
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 159
 TTOX-SANOFI PASTEUR | 154
 ADEN_4_7-TEVA PHARMACEUTICALS | 144
+6VAX-F-UNKNOWN MANUFACTURER | 125
 JEV1-INTERCELL AG | 122
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 109
 SMALL-PFIZER\WYETH | 107
+DTAPH-UNKNOWN MANUFACTURER | 94
 FLU(H1N1)-CSL LIMITED | 94
 DT-SANOFI PASTEUR | 91
+MMRV-UNKNOWN MANUFACTURER | 87
 PER-EMERGENT BIOSOLUTIONS | 81
+YF-UNKNOWN MANUFACTURER | 76
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 68
 FLUX-SANOFI PASTEUR | 67
+OPV-UNKNOWN MANUFACTURER | 65
 ANTH-MICHIGAN DEPT PUB HLTH | 63
 TD-MASS. PUB HLTH BIOL LAB | 58
 HBHEPB-MERCK & CO. INC. | 52
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 52
+DPP-UNKNOWN MANUFACTURER | 50
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 46
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 45
 DTP-SANOFI PASTEUR | 44
+HEPAB-UNKNOWN MANUFACTURER | 38
+MNQ-UNKNOWN MANUFACTURER | 38
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 34
+DT-UNKNOWN MANUFACTURER | 29
 DTAPH-SANOFI PASTEUR | 27
+PER-UNKNOWN MANUFACTURER | 25
+RAB-UNKNOWN MANUFACTURER | 25
 HIBV-CONNAUGHT LABORATORIES | 24
 HEPAB-SMITHKLINE BEECHAM | 24
+MM-UNKNOWN MANUFACTURER | 23
+DTPHEP-UNKNOWN MANUFACTURER | 22
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 22
+MEA-UNKNOWN MANUFACTURER | 22
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 21
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 20
 FLU3-MEDEVA PHARMA, LTD. | 20
+DTIPV-UNKNOWN MANUFACTURER | 19
 MEA-MERCK & CO. INC. | 17
+MU-UNKNOWN MANUFACTURER | 17
 FLU3-AVENTIS PASTEUR | 17
 HEPA-SMITHKLINE BEECHAM | 15
+BCG-UNKNOWN MANUFACTURER | 14
 DT-MASS. PUB HLTH BIOL LAB | 14
 FLU(H1N1)-SANOFI PASTEUR | 14
 HEP-SMITHKLINE BEECHAM | 13
 TD-LEDERLE LABORATORIES | 13
 DTAP-SMITHKLINE BEECHAM | 13
+DTPIPV-UNKNOWN MANUFACTURER | 12
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 11
 UNK-MERCK & CO. INC. | 10
 DTAP-PFIZER\WYETH | 10
@@ -408,6 +505,7 @@ MM-MERCK & CO. INC. | 9
 HEP-SANOFI PASTEUR | 9
 FLUX-NOVARTIS VACCINES AND DIAGNOSTICS | 9
 TYP-CONNAUGHT LABORATORIES | 9
+DTPIHI-UNKNOWN MANUFACTURER | 9
 PPV-PFIZER\WYETH | 8
 FLU3-CONNAUGHT LABORATORIES | 8
 TD-GLAXOSMITHKLINE BIOLOGICALS | 7
@@ -415,14 +513,19 @@ FLUX-CSL LIMITED | 7
 IPV-PFIZER\WYETH | 6
 DTPIPV-SANOFI PASTEUR | 6
 PLAGUE-GREER LABORATORIES, INC. | 6
+DTPPHIB-UNKNOWN MANUFACTURER | 6
 H5N1-SANOFI PASTEUR | 5
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 5
 RUB-MERCK & CO. INC. | 5
 MER-MERCK & CO. INC. | 4
 TTOX-MASS. PUB HLTH BIOL LAB | 4
 TYP-PFIZER\WYETH | 4
+DTOX-UNKNOWN MANUFACTURER | 4
 DTAP-BAXTER HEALTHCARE CORP. | 4
 DTP-PFIZER\WYETH | 4
+RUB-UNKNOWN MANUFACTURER | 3
+DTPHIB-UNKNOWN MANUFACTURER | 3
+HBPV-UNKNOWN MANUFACTURER | 3
 DTAP-CONNAUGHT LABORATORIES | 2
 IPV-CONNAUGHT LTD. | 2
 HIBV-PFIZER\WYETH | 2
