--- a/results/2013.md
+++ b/results/2013.md
@@ -82,6 +82,7 @@ VARCEL-MERCK & CO. INC. | 2533
 MMR-MERCK & CO. INC. | 1942
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1408
 PNC13-PFIZER\WYETH | 1285
+FLUX-UNKNOWN MANUFACTURER | 1280
 TDAP-SANOFI PASTEUR | 1255
 FLU3-CSL LIMITED | 1026
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 930
@@ -103,49 +104,87 @@ HIBV-MERCK & CO. INC. | 451
 FLUN4-MEDIMMUNE VACCINES, INC. | 402
 FLUN3-MEDIMMUNE VACCINES, INC. | 362
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 357
+PPV-UNKNOWN MANUFACTURER | 338
 DTAPIPVHIB-SANOFI PASTEUR | 334
 PNC-PFIZER\WYETH | 263
+DTAP-UNKNOWN MANUFACTURER | 254
+MMR-UNKNOWN MANUFACTURER | 226
 SMALL-SANOFI PASTEUR | 223
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 211
 ANTH-EMERGENT BIOSOLUTIONS | 203
+TDAP-UNKNOWN MANUFACTURER | 200
 TYP-SANOFI PASTEUR | 195
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 189
+VARCEL-UNKNOWN MANUFACTURER | 188
 TYP-BERNA BIOTECH, LTD. | 172
 FLU4-SANOFI PASTEUR | 172
 YF-SANOFI PASTEUR | 169
+HEP-UNKNOWN MANUFACTURER | 149
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 148
+HEPA-UNKNOWN MANUFACTURER | 147
+HIBV-UNKNOWN MANUFACTURER | 146
+UNK-UNKNOWN MANUFACTURER | 113
+VARZOS-UNKNOWN MANUFACTURER | 110
+IPV-UNKNOWN MANUFACTURER | 104
+RVX-UNKNOWN MANUFACTURER | 88
 TD-SANOFI PASTEUR | 84
+ANTH-UNKNOWN MANUFACTURER | 73
+MEN-UNKNOWN MANUFACTURER | 71
+TD-UNKNOWN MANUFACTURER | 70
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 61
+HPVX-UNKNOWN MANUFACTURER | 59
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 58
+TYP-UNKNOWN MANUFACTURER | 49
 TTOX-SANOFI PASTEUR | 44
+DTP-UNKNOWN MANUFACTURER | 37
 RAB-SANOFI PASTEUR | 37
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 37
 ADEN_4_7-TEVA PHARMACEUTICALS | 36
+MMRV-UNKNOWN MANUFACTURER | 33
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 30
+TTOX-UNKNOWN MANUFACTURER | 28
 HBHEPB-MERCK & CO. INC. | 28
+SMALL-UNKNOWN MANUFACTURER | 26
 JEV1-INTERCELL AG | 25
 MEN-SANOFI PASTEUR | 24
+6VAX-F-UNKNOWN MANUFACTURER | 21
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 21
 TD-MASS. PUB HLTH BIOL LAB | 20
+YF-UNKNOWN MANUFACTURER | 18
 FLUX-SANOFI PASTEUR | 17
+OPV-UNKNOWN MANUFACTURER | 16
 DTP-SANOFI PASTEUR | 12
+RAB-UNKNOWN MANUFACTURER | 12
 FLUR3-PROTEIN SCIENCES CORPORATION | 11
 DT-SANOFI PASTEUR | 9
+BCG-UNKNOWN MANUFACTURER | 9
+DPP-UNKNOWN MANUFACTURER | 9
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 8
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 8
 PER-EMERGENT BIOSOLUTIONS | 8
+DTPIPV-UNKNOWN MANUFACTURER | 8
+DTAPIPV-UNKNOWN MANUFACTURER | 8
+HEPAB-UNKNOWN MANUFACTURER | 7
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 7
+DTPIHI-UNKNOWN MANUFACTURER | 6
 HEPA-SMITHKLINE BEECHAM | 6
 HEP-SANOFI PASTEUR | 6
+DTAPH-UNKNOWN MANUFACTURER | 6
 DTAP-SMITHKLINE BEECHAM | 5
 SMALL-PFIZER\WYETH | 5
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 5
+PER-UNKNOWN MANUFACTURER | 5
 MM-MERCK & CO. INC. | 4
 FLU(H1N1)-SANOFI PASTEUR | 4
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 4
 BCG-ORGANON-TEKNIKA | 4
+MNQ-UNKNOWN MANUFACTURER | 4
 HIBV-CONNAUGHT LABORATORIES | 4
 FLU3-MEDEVA PHARMA, LTD. | 3
 FLU3-AVENTIS PASTEUR | 3
+DTPPHIB-UNKNOWN MANUFACTURER | 3
 DTAP-PFIZER\WYETH | 3
+JEVX-UNKNOWN MANUFACTURER | 3
 DTPIPV-SANOFI PASTEUR | 3
 PPV-PFIZER\WYETH | 3
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 2
@@ -153,7 +192,9 @@ PNC10-GLAXOSMITHKLINE BIOLOGICALS | 2
 IPV-PASTEUR MERIEUX CONNAUGHT | 2
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 2
 MUR-MERCK & CO. INC. | 2
+DTPHIB-UNKNOWN MANUFACTURER | 2
 HIBV-PFIZER\WYETH | 2
+DTOX-UNKNOWN MANUFACTURER | 2
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 2
 MEA-MERCK & CO. INC. | 2
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 2
@@ -161,12 +202,17 @@ DTAP-CONNAUGHT LABORATORIES | 2
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 2
 HEPAB-SMITHKLINE BEECHAM | 1
 FLU3-PFIZER\WYETH | 1
+MU-UNKNOWN MANUFACTURER | 1
+RUB-UNKNOWN MANUFACTURER | 1
 DTP-PFIZER\WYETH | 1
 DTAPH-SANOFI PASTEUR | 1
+MENHIB-UNKNOWN MANUFACTURER | 1
 TD-GLAXOSMITHKLINE BIOLOGICALS | 1
 BCG-SANOFI PASTEUR | 1
 HEP-SMITHKLINE BEECHAM | 1
 HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 1
+DT-UNKNOWN MANUFACTURER | 1
+MM-UNKNOWN MANUFACTURER | 1
 IPV-PFIZER\WYETH | 1
 DTAP-BAXTER HEALTHCARE CORP. | 1
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 1
@@ -221,6 +267,7 @@ RV5-MERCK & CO. INC. | 18
 HIBV-SANOFI PASTEUR | 17
 FLU3-SANOFI PASTEUR | 16
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 16
+FLUX-UNKNOWN MANUFACTURER | 13
 VARZOS-MERCK & CO. INC. | 13
 HEP-MERCK & CO. INC. | 9
 HIBV-MERCK & CO. INC. | 7
@@ -241,15 +288,20 @@ FLU4-SANOFI PASTEUR | 3
 TDAP-SANOFI PASTEUR | 2
 MMR-MERCK & CO. INC. | 2
 MMRV-MERCK & CO. INC. | 2
+TDAP-UNKNOWN MANUFACTURER | 2
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 2
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 1
+MEN-UNKNOWN MANUFACTURER | 1
 HEPA-MERCK & CO. INC. | 1
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 YF-SANOFI PASTEUR | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
+DPP-UNKNOWN MANUFACTURER | 1
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1
 BCG-SANOFI PASTEUR | 1
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 1
 MEN-SANOFI PASTEUR | 1
+TTOX-UNKNOWN MANUFACTURER | 1
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1
 JEV1-INTERCELL AG | 1
 TD-SANOFI PASTEUR | 1
@@ -337,6 +389,7 @@ PPV-MERCK & CO. INC. | 10337
 HPV4-MERCK & CO. INC. | 10094
 VARCEL-MERCK & CO. INC. | 7800
 MMR-MERCK & CO. INC. | 6129
+FLUX-UNKNOWN MANUFACTURER | 6095
 TDAP-SANOFI PASTEUR | 5182
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 5098
 PNC13-PFIZER\WYETH | 4666
@@ -353,6 +406,7 @@ HIBV-SANOFI PASTEUR | 2063
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 2030
 IPV-SANOFI PASTEUR | 1969
 HEPA-MERCK & CO. INC. | 1962
+PPV-UNKNOWN MANUFACTURER | 1873
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 1677
 HIBV-MERCK & CO. INC. | 1614
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1612
@@ -361,51 +415,89 @@ FLUN4-MEDIMMUNE VACCINES, INC. | 1427
 DTAPIPVHIB-SANOFI PASTEUR | 1401
 ANTH-EMERGENT BIOSOLUTIONS | 1351
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1283
+DTAP-UNKNOWN MANUFACTURER | 1149
 SMALL-SANOFI PASTEUR | 1087
 FLUN3-MEDIMMUNE VACCINES, INC. | 1070
+MMR-UNKNOWN MANUFACTURER | 961
 TYP-SANOFI PASTEUR | 949
+TDAP-UNKNOWN MANUFACTURER | 932
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 834
 PNC-PFIZER\WYETH | 816
+VARCEL-UNKNOWN MANUFACTURER | 787
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 748
+HIBV-UNKNOWN MANUFACTURER | 701
 YF-SANOFI PASTEUR | 688
 FLU4-SANOFI PASTEUR | 652
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 616
+HEPA-UNKNOWN MANUFACTURER | 601
+ANTH-UNKNOWN MANUFACTURER | 569
+HEP-UNKNOWN MANUFACTURER | 546
+VARZOS-UNKNOWN MANUFACTURER | 497
 TYP-BERNA BIOTECH, LTD. | 494
+UNK-UNKNOWN MANUFACTURER | 462
+IPV-UNKNOWN MANUFACTURER | 436
+RVX-UNKNOWN MANUFACTURER | 416
+HPVX-UNKNOWN MANUFACTURER | 360
+TD-UNKNOWN MANUFACTURER | 352
+MEN-UNKNOWN MANUFACTURER | 340
 TD-SANOFI PASTEUR | 323
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 280
+TYP-UNKNOWN MANUFACTURER | 240
 ADEN_4_7-TEVA PHARMACEUTICALS | 236
+SMALL-UNKNOWN MANUFACTURER | 234
+DTP-UNKNOWN MANUFACTURER | 225
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 198
+MMRV-UNKNOWN MANUFACTURER | 190
 TTOX-SANOFI PASTEUR | 190
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 170
+TTOX-UNKNOWN MANUFACTURER | 167
 RAB-SANOFI PASTEUR | 157
+6VAX-F-UNKNOWN MANUFACTURER | 125
 MEN-SANOFI PASTEUR | 124
 FLUX-SANOFI PASTEUR | 104
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 103
 HBHEPB-MERCK & CO. INC. | 95
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 87
+YF-UNKNOWN MANUFACTURER | 85
 SMALL-PFIZER\WYETH | 81
+OPV-UNKNOWN MANUFACTURER | 80
+RAB-UNKNOWN MANUFACTURER | 79
 JEV1-INTERCELL AG | 78
 TD-MASS. PUB HLTH BIOL LAB | 64
+HEPAB-UNKNOWN MANUFACTURER | 46
 DTP-SANOFI PASTEUR | 43
+DTAPIPV-UNKNOWN MANUFACTURER | 42
 PER-EMERGENT BIOSOLUTIONS | 40
 HEP-SANOFI PASTEUR | 39
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 38
 FLUR3-PROTEIN SCIENCES CORPORATION | 37
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 36
+DPP-UNKNOWN MANUFACTURER | 35
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 32
 DT-SANOFI PASTEUR | 32
+BCG-UNKNOWN MANUFACTURER | 29
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 28
 FLU3-MEDEVA PHARMA, LTD. | 27
 HIBV-CONNAUGHT LABORATORIES | 27
+DTPIPV-UNKNOWN MANUFACTURER | 24
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 21
 TD-GLAXOSMITHKLINE BIOLOGICALS | 21
+DTPIHI-UNKNOWN MANUFACTURER | 20
 DTAP-SMITHKLINE BEECHAM | 20
 DTAP-PFIZER\WYETH | 20
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 20
 HEP-SMITHKLINE BEECHAM | 20
+DTAPH-UNKNOWN MANUFACTURER | 19
 PPV-PFIZER\WYETH | 19
 HEPA-SMITHKLINE BEECHAM | 18
 DTPIPV-SANOFI PASTEUR | 16
+DTPPHIB-UNKNOWN MANUFACTURER | 15
+JEVX-UNKNOWN MANUFACTURER | 15
 FLU(H1N1)-SANOFI PASTEUR | 14
+DTOX-UNKNOWN MANUFACTURER | 14
 FLU3-AVENTIS PASTEUR | 13
+PER-UNKNOWN MANUFACTURER | 13
+MNQ-UNKNOWN MANUFACTURER | 13
 MM-MERCK & CO. INC. | 12
 IPV-PASTEUR MERIEUX CONNAUGHT | 12
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 12
@@ -418,12 +510,18 @@ DTP-PFIZER\WYETH | 7
 FLUX-PFIZER\WYETH | 7
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 6
 MEA-MERCK & CO. INC. | 6
+DT-UNKNOWN MANUFACTURER | 6
 6VAX-F-SANOFI PASTEUR | 5
 HEPAB-SMITHKLINE BEECHAM | 5
 FLU3-PFIZER\WYETH | 5
+DTPHIB-UNKNOWN MANUFACTURER | 5
 HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 5
 DTAP-BAXTER HEALTHCARE CORP. | 5
 TTOX-MASS. PUB HLTH BIOL LAB | 5
+MENHIB-UNKNOWN MANUFACTURER | 4
+MM-UNKNOWN MANUFACTURER | 4
+MU-UNKNOWN MANUFACTURER | 3
+RUB-UNKNOWN MANUFACTURER | 3
 HIBV-PFIZER\WYETH | 3
 IPV-PFIZER\WYETH | 3
 RV-PFIZER\WYETH | 3
