--- a/results/2014.md
+++ b/results/2014.md
@@ -87,6 +87,7 @@ VARCEL-MERCK & CO. INC. | 3305
 MMR-MERCK & CO. INC. | 2240
 PNC13-PFIZER\WYETH | 1713
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1672
+FLUX-UNKNOWN MANUFACTURER | 1264
 RV5-MERCK & CO. INC. | 1263
 MMRV-MERCK & CO. INC. | 1263
 TDAP-SANOFI PASTEUR | 1176
@@ -110,59 +111,103 @@ HEP-GLAXOSMITHKLINE BIOLOGICALS | 479
 DTAP-SANOFI PASTEUR | 449
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 406
 DTAPIPVHIB-SANOFI PASTEUR | 370
+PPV-UNKNOWN MANUFACTURER | 326
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 264
+DTAP-UNKNOWN MANUFACTURER | 260
 TYP-SANOFI PASTEUR | 208
+MMR-UNKNOWN MANUFACTURER | 205
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 205
+TDAP-UNKNOWN MANUFACTURER | 202
 ANTH-EMERGENT BIOSOLUTIONS | 189
+VARCEL-UNKNOWN MANUFACTURER | 170
 YF-SANOFI PASTEUR | 151
+HEPA-UNKNOWN MANUFACTURER | 137
+HIBV-UNKNOWN MANUFACTURER | 128
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 124
 SMALL-SANOFI PASTEUR | 123
 TYP-BERNA BIOTECH, LTD. | 120
+HEP-UNKNOWN MANUFACTURER | 118
+IPV-UNKNOWN MANUFACTURER | 102
+VARZOS-UNKNOWN MANUFACTURER | 101
+UNK-UNKNOWN MANUFACTURER | 88
 PNC-PFIZER\WYETH | 87
+RVX-UNKNOWN MANUFACTURER | 81
+MEN-UNKNOWN MANUFACTURER | 80
 TD-SANOFI PASTEUR | 78
 FLUN3-MEDIMMUNE VACCINES, INC. | 71
+HPVX-UNKNOWN MANUFACTURER | 49
+ANTH-UNKNOWN MANUFACTURER | 46
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 46
+TYP-UNKNOWN MANUFACTURER | 44
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 39
+TD-UNKNOWN MANUFACTURER | 39
+MMRV-UNKNOWN MANUFACTURER | 35
 HBHEPB-MERCK & CO. INC. | 33
 MEN-SANOFI PASTEUR | 28
+TTOX-UNKNOWN MANUFACTURER | 27
+DTP-UNKNOWN MANUFACTURER | 27
 FLUR3-PROTEIN SCIENCES CORPORATION | 23
 RAB-SANOFI PASTEUR | 21
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 20
 JEV1-INTERCELL AG | 20
+YF-UNKNOWN MANUFACTURER | 19
+SMALL-UNKNOWN MANUFACTURER | 18
 ADEN_4_7-TEVA PHARMACEUTICALS | 16
 FLUX-SANOFI PASTEUR | 14
 TD-MASS. PUB HLTH BIOL LAB | 13
+DTAPIPV-UNKNOWN MANUFACTURER | 13
+RAB-UNKNOWN MANUFACTURER | 13
 TTOX-SANOFI PASTEUR | 12
+DPP-UNKNOWN MANUFACTURER | 11
+HEPAB-UNKNOWN MANUFACTURER | 10
 PER-EMERGENT BIOSOLUTIONS | 10
+6VAX-F-UNKNOWN MANUFACTURER | 10
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 10
 DT-SANOFI PASTEUR | 9
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 8
+DTAPH-UNKNOWN MANUFACTURER | 8
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 8
 DTP-SANOFI PASTEUR | 7
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 6
 MEA-MERCK & CO. INC. | 5
+OPV-UNKNOWN MANUFACTURER | 5
+MENHIB-UNKNOWN MANUFACTURER | 5
 HEPA-SMITHKLINE BEECHAM | 5
+JEVX-UNKNOWN MANUFACTURER | 4
 RUB-MERCK & CO. INC. | 4
+DTPHIB-UNKNOWN MANUFACTURER | 4
+DTPIHI-UNKNOWN MANUFACTURER | 4
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 4
 FLU(H1N1)-SANOFI PASTEUR | 4
+DTPIPV-UNKNOWN MANUFACTURER | 4
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 4
 HEP-SANOFI PASTEUR | 3
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 3
+DTPPHIB-UNKNOWN MANUFACTURER | 3
 DTPIPV-SANOFI PASTEUR | 3
 DT-MASS. PUB HLTH BIOL LAB | 3
 DTAP-BAXTER HEALTHCARE CORP. | 3
 DTAPH-SANOFI PASTEUR | 3
 FLU3-PFIZER\WYETH | 3
+DT-UNKNOWN MANUFACTURER | 2
+MNQ-UNKNOWN MANUFACTURER | 2
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 2
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 2
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 MU-MERCK & CO. INC. | 2
+DTIPV-UNKNOWN MANUFACTURER | 2
 TD-GLAXOSMITHKLINE BIOLOGICALS | 2
+DTPHEP-UNKNOWN MANUFACTURER | 2
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 2
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 2
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 2
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 2
 HEP-SMITHKLINE BEECHAM | 2
 SMALL-PFIZER\WYETH | 2
+BCG-UNKNOWN MANUFACTURER | 2
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 2
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 2
+MEA-UNKNOWN MANUFACTURER | 2
 FLU3-AVENTIS PASTEUR | 1
 DTAP-PFIZER\WYETH | 1
 6VAX-F-SANOFI PASTEUR | 1
@@ -171,10 +216,12 @@ TTOX-MEDEVA PHARMA, LTD. | 1
 DTAP-NORTH AMERICAN VACCINES | 1
 HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 1
 DTAP-SMITHKLINE BEECHAM | 1
+DTOX-UNKNOWN MANUFACTURER | 1
 RAB-CONNAUGHT LTD. | 1
 DTPHIB-SANOFI PASTEUR | 1
 MM-MERCK & CO. INC. | 1
 H5N1-SANOFI PASTEUR | 1
+MM-UNKNOWN MANUFACTURER | 1
 FLUX-CSL LIMITED | 1
 IPV-PFIZER\WYETH | 1
 RUB-SANOFI PASTEUR | 1
@@ -184,6 +231,7 @@ FLU4-SEQIRUS, INC. | 1
 TYP-CONNAUGHT LABORATORIES | 1
 TTOX-MASS. PUB HLTH BIOL LAB | 1
 JEV-SANOFI PASTEUR | 1
+CHOL-UNKNOWN MANUFACTURER | 1
 PPV-PFIZER\WYETH | 1
 MENB-PFIZER\WYETH | 1
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
@@ -234,6 +282,7 @@ RV5-MERCK & CO. INC. | 13
 HIBV-SANOFI PASTEUR | 11
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 9
 HIBV-MERCK & CO. INC. | 8
+FLUX-UNKNOWN MANUFACTURER | 7
 VARZOS-MERCK & CO. INC. | 6
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 5
 DTAPIPVHIB-SANOFI PASTEUR | 5
@@ -242,22 +291,35 @@ VARCEL-MERCK & CO. INC. | 4
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 4
 TDAP-SANOFI PASTEUR | 4
 HEP-MERCK & CO. INC. | 3
+DTAP-UNKNOWN MANUFACTURER | 3
 FLU3-CSL LIMITED | 3
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 2
 DTAP-SANOFI PASTEUR | 2
+HEP-UNKNOWN MANUFACTURER | 2
+BCG-UNKNOWN MANUFACTURER | 2
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 MMR-MERCK & CO. INC. | 2
 FLU4-SANOFI PASTEUR | 2
+VARCEL-UNKNOWN MANUFACTURER | 1
+HEPA-UNKNOWN MANUFACTURER | 1
+YF-UNKNOWN MANUFACTURER | 1
 SMALL-SANOFI PASTEUR | 1
 DTAP-SMITHKLINE BEECHAM | 1
 HEPA-SMITHKLINE BEECHAM | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
+DTP-UNKNOWN MANUFACTURER | 1
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1
 MNQ-SANOFI PASTEUR | 1
 TYP-SANOFI PASTEUR | 1
+MEN-UNKNOWN MANUFACTURER | 1
 TYP-CONNAUGHT LABORATORIES | 1
 YF-SANOFI PASTEUR | 1
+UNK-UNKNOWN MANUFACTURER | 1
+OPV-UNKNOWN MANUFACTURER | 1
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 1
+HIBV-UNKNOWN MANUFACTURER | 1
+PPV-UNKNOWN MANUFACTURER | 1
+VARZOS-UNKNOWN MANUFACTURER | 1
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 ---
 # Total Symptoms
@@ -347,6 +409,7 @@ PPV-MERCK & CO. INC. | 12132
 HPV4-MERCK & CO. INC. | 10509
 VARCEL-MERCK & CO. INC. | 9011
 MMR-MERCK & CO. INC. | 6651
+FLUX-UNKNOWN MANUFACTURER | 6203
 PNC13-PFIZER\WYETH | 6190
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 5764
 TDAP-SANOFI PASTEUR | 5049
@@ -367,68 +430,113 @@ HIBV-SANOFI PASTEUR | 2137
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1978
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1919
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 1800
+PPV-UNKNOWN MANUFACTURER | 1744
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1729
 IPV-SANOFI PASTEUR | 1657
 DTAP-SANOFI PASTEUR | 1609
 DTAPIPVHIB-SANOFI PASTEUR | 1414
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1372
+DTAP-UNKNOWN MANUFACTURER | 1199
+TDAP-UNKNOWN MANUFACTURER | 1121
 ANTH-EMERGENT BIOSOLUTIONS | 1027
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 935
+MMR-UNKNOWN MANUFACTURER | 849
 TYP-SANOFI PASTEUR | 814
+HEP-UNKNOWN MANUFACTURER | 784
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 776
+VARCEL-UNKNOWN MANUFACTURER | 701
+HEPA-UNKNOWN MANUFACTURER | 632
+HIBV-UNKNOWN MANUFACTURER | 600
 YF-SANOFI PASTEUR | 578
 SMALL-SANOFI PASTEUR | 528
+MEN-UNKNOWN MANUFACTURER | 474
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 470
+IPV-UNKNOWN MANUFACTURER | 457
+VARZOS-UNKNOWN MANUFACTURER | 440
+UNK-UNKNOWN MANUFACTURER | 403
 TYP-BERNA BIOTECH, LTD. | 374
 PNC-PFIZER\WYETH | 354
 TD-SANOFI PASTEUR | 312
+RVX-UNKNOWN MANUFACTURER | 310
+HPVX-UNKNOWN MANUFACTURER | 228
+TYP-UNKNOWN MANUFACTURER | 225
+DTP-UNKNOWN MANUFACTURER | 217
 FLUN3-MEDIMMUNE VACCINES, INC. | 215
+TD-UNKNOWN MANUFACTURER | 198
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 190
+ANTH-UNKNOWN MANUFACTURER | 189
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 164
 ADEN_4_7-TEVA PHARMACEUTICALS | 152
+MMRV-UNKNOWN MANUFACTURER | 150
+TTOX-UNKNOWN MANUFACTURER | 142
 MEN-SANOFI PASTEUR | 138
+BCG-UNKNOWN MANUFACTURER | 114
 FLUR3-PROTEIN SCIENCES CORPORATION | 101
+RAB-UNKNOWN MANUFACTURER | 100
 HBHEPB-MERCK & CO. INC. | 94
+SMALL-UNKNOWN MANUFACTURER | 92
+YF-UNKNOWN MANUFACTURER | 87
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 86
 TD-MASS. PUB HLTH BIOL LAB | 79
 RAB-SANOFI PASTEUR | 73
+OPV-UNKNOWN MANUFACTURER | 73
 PER-EMERGENT BIOSOLUTIONS | 69
+DTAPIPV-UNKNOWN MANUFACTURER | 58
 FLUX-SANOFI PASTEUR | 56
 JEV1-INTERCELL AG | 55
+6VAX-F-UNKNOWN MANUFACTURER | 53
+DPP-UNKNOWN MANUFACTURER | 44
+HEPAB-UNKNOWN MANUFACTURER | 43
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 40
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 39
 FLU(H1N1)-SANOFI PASTEUR | 39
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 33
 TTOX-SANOFI PASTEUR | 33
 DT-SANOFI PASTEUR | 32
 HEPA-SMITHKLINE BEECHAM | 31
+DTAPH-UNKNOWN MANUFACTURER | 27
+DTPHIB-UNKNOWN MANUFACTURER | 26
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 25
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 23
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 23
 DTP-SANOFI PASTEUR | 23
 HEP-SMITHKLINE BEECHAM | 22
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 21
 MEA-MERCK & CO. INC. | 20
+DTPIPV-UNKNOWN MANUFACTURER | 19
+DTPPHIB-UNKNOWN MANUFACTURER | 18
 DTAP-BAXTER HEALTHCARE CORP. | 18
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 18
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 16
 YF-CONNAUGHT LABORATORIES | 16
+JEVX-UNKNOWN MANUFACTURER | 15
+DTPIHI-UNKNOWN MANUFACTURER | 15
+MENHIB-UNKNOWN MANUFACTURER | 15
+DTIPV-UNKNOWN MANUFACTURER | 15
 SMALL-PFIZER\WYETH | 15
 DTPIPV-SANOFI PASTEUR | 14
 FLU3-PFIZER\WYETH | 14
+DT-UNKNOWN MANUFACTURER | 13
 H5N1-SANOFI PASTEUR | 13
 TYP-CONNAUGHT LABORATORIES | 13
 RUB-MERCK & CO. INC. | 12
+DTPHEP-UNKNOWN MANUFACTURER | 12
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 11
 DT-MASS. PUB HLTH BIOL LAB | 10
+MNQ-UNKNOWN MANUFACTURER | 9
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 9
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 9
 HEP-SANOFI PASTEUR | 8
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 8
 DTAPH-SANOFI PASTEUR | 8
+MEA-UNKNOWN MANUFACTURER | 8
 MU-MERCK & CO. INC. | 7
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 7
 DTAP-PFIZER\WYETH | 6
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 6
 TD-GLAXOSMITHKLINE BIOLOGICALS | 6
 HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 6
+DTOX-UNKNOWN MANUFACTURER | 6
 DTPHIB-SANOFI PASTEUR | 6
 TYP-PFIZER\WYETH | 6
 JEV-SANOFI PASTEUR | 6
@@ -437,6 +545,7 @@ DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 5
 IPV-CONNAUGHT LTD. | 5
 MM-MERCK & CO. INC. | 4
 RUB-SANOFI PASTEUR | 4
+CHOL-UNKNOWN MANUFACTURER | 4
 TTOX-MEDEVA PHARMA, LTD. | 3
 RAB-CONNAUGHT LTD. | 3
 IPV-PFIZER\WYETH | 3
@@ -445,6 +554,7 @@ PPV-PFIZER\WYETH | 3
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 3
 TTOX-SCLAVO | 2
 DTAP-SMITHKLINE BEECHAM | 2
+MM-UNKNOWN MANUFACTURER | 2
 FLUX-CSL LIMITED | 2
 FLU4-SEQIRUS, INC. | 2
 MENB-PFIZER\WYETH | 2
