--- a/results/2015.md
+++ b/results/2015.md
@@ -95,6 +95,7 @@ TDAP-SANOFI PASTEUR | 1610
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1512
 HEP-MERCK & CO. INC. | 1465
 HEPA-MERCK & CO. INC. | 1342
+FLUX-UNKNOWN MANUFACTURER | 1247
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1048
 HIBV-MERCK & CO. INC. | 1040
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1013
@@ -114,48 +115,90 @@ DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 522
 HIBV-SANOFI PASTEUR | 512
 DTAP-SANOFI PASTEUR | 495
 IPV-SANOFI PASTEUR | 406
+PPV-UNKNOWN MANUFACTURER | 404
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 389
+MMR-UNKNOWN MANUFACTURER | 281
+DTAP-UNKNOWN MANUFACTURER | 275
+TDAP-UNKNOWN MANUFACTURER | 257
 MENB-PFIZER\WYETH | 253
+VARCEL-UNKNOWN MANUFACTURER | 207
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 195
 TYP-SANOFI PASTEUR | 186
+HEP-UNKNOWN MANUFACTURER | 181
 ANTH-EMERGENT BIOSOLUTIONS | 175
 YF-SANOFI PASTEUR | 172
 PNC-PFIZER\WYETH | 170
+HEPA-UNKNOWN MANUFACTURER | 149
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 146
+UNK-UNKNOWN MANUFACTURER | 136
+HIBV-UNKNOWN MANUFACTURER | 128
+MEN-UNKNOWN MANUFACTURER | 122
+IPV-UNKNOWN MANUFACTURER | 115
 TD-SANOFI PASTEUR | 103
+VARZOS-UNKNOWN MANUFACTURER | 96
+RVX-UNKNOWN MANUFACTURER | 83
+HPVX-UNKNOWN MANUFACTURER | 82
 FLUN3-MEDIMMUNE VACCINES, INC. | 77
+TTOX-UNKNOWN MANUFACTURER | 75
 TYP-BERNA BIOTECH, LTD. | 72
 SMALL-SANOFI PASTEUR | 69
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 62
 RAB-SANOFI PASTEUR | 59
 HBHEPB-MERCK & CO. INC. | 55
+DTAPIPV-UNKNOWN MANUFACTURER | 54
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 52
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 51
+TD-UNKNOWN MANUFACTURER | 50
 JEV1-INTERCELL AG | 50
 FLUR3-PROTEIN SCIENCES CORPORATION | 49
+MMRV-UNKNOWN MANUFACTURER | 40
 MEN-SANOFI PASTEUR | 36
+DTP-UNKNOWN MANUFACTURER | 29
+TYP-UNKNOWN MANUFACTURER | 26
+ANTH-UNKNOWN MANUFACTURER | 24
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 21
+RAB-UNKNOWN MANUFACTURER | 21
 TD-MASS. PUB HLTH BIOL LAB | 17
+YF-UNKNOWN MANUFACTURER | 15
 TTOX-SANOFI PASTEUR | 15
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 14
+6VAX-F-UNKNOWN MANUFACTURER | 14
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 13
 DTP-SANOFI PASTEUR | 13
+DTAPH-UNKNOWN MANUFACTURER | 12
+HEPAB-UNKNOWN MANUFACTURER | 11
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 10
 ADEN_4_7-TEVA PHARMACEUTICALS | 9
+OPV-UNKNOWN MANUFACTURER | 9
+SMALL-UNKNOWN MANUFACTURER | 9
+DPP-UNKNOWN MANUFACTURER | 9
+DTOX-UNKNOWN MANUFACTURER | 8
+BCG-UNKNOWN MANUFACTURER | 7
 DT-SANOFI PASTEUR | 7
+JEVX-UNKNOWN MANUFACTURER | 6
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 6
+DT-UNKNOWN MANUFACTURER | 5
+DTPHEP-UNKNOWN MANUFACTURER | 5
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 5
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 5
 FLUX-SANOFI PASTEUR | 5
 RUB-MERCK & CO. INC. | 4
+DTPIPV-UNKNOWN MANUFACTURER | 4
+DTPIHI-UNKNOWN MANUFACTURER | 4
 PER-EMERGENT BIOSOLUTIONS | 4
 DTAPH-SANOFI PASTEUR | 3
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 3
 FLU3-AVENTIS PASTEUR | 3
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 3
+MEA-UNKNOWN MANUFACTURER | 3
 MEA-MERCK & CO. INC. | 3
+DTPHIB-UNKNOWN MANUFACTURER | 3
 FLU3-CONNAUGHT LABORATORIES | 2
 HEP-SANOFI PASTEUR | 2
 HEPA-SMITHKLINE BEECHAM | 2
 DTAP-PFIZER\WYETH | 2
 HIBV-PFIZER\WYETH | 2
+PER-UNKNOWN MANUFACTURER | 2
 MM-MERCK & CO. INC. | 2
 IPV-PFIZER\WYETH | 2
 PPV-PFIZER\WYETH | 2
@@ -164,24 +207,30 @@ DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 TDAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 2
 JEV-SANOFI PASTEUR | 2
 TTOX-MASS. PUB HLTH BIOL LAB | 2
+DTPPHIB-UNKNOWN MANUFACTURER | 2
 FLUC4-SEQIRUS, INC. | 2
+MNQ-UNKNOWN MANUFACTURER | 2
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+DTIPV-UNKNOWN MANUFACTURER | 1
 6VAX-F-SANOFI PASTEUR | 1
 MUR-MERCK & CO. INC. | 1
 TTOX-SCLAVO | 1
 HEP-SMITHKLINE BEECHAM | 1
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 1
 TTOX-BERNA BIOTECH, LTD. | 1
+RUB-UNKNOWN MANUFACTURER | 1
 CHOL-PFIZER\WYETH | 1
 DT-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU3-PARKDALE PHARMACEUTICALS | 1
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 1
+MENHIB-UNKNOWN MANUFACTURER | 1
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 1
 TD-GLAXOSMITHKLINE BIOLOGICALS | 1
 DTPHIB-SANOFI PASTEUR | 1
 IPV-CONNAUGHT LTD. | 1
 FLU4-SEQIRUS, INC. | 1
 MER-MERCK & CO. INC. | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 FLU3-PFIZER\WYETH | 1
 SMALL-PFIZER\WYETH | 1
 ANTH-MICHIGAN DEPT PUB HLTH | 1
@@ -236,17 +285,23 @@ HIBV-MERCK & CO. INC. | 10
 MMR-MERCK & CO. INC. | 9
 VARCEL-MERCK & CO. INC. | 8
 HIBV-SANOFI PASTEUR | 8
+FLUX-UNKNOWN MANUFACTURER | 8
 HEP-MERCK & CO. INC. | 7
 VARZOS-MERCK & CO. INC. | 6
+PPV-UNKNOWN MANUFACTURER | 6
 FLU4-SANOFI PASTEUR | 5
 FLUN4-MEDIMMUNE VACCINES, INC. | 5
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 5
+MEN-UNKNOWN MANUFACTURER | 5
 FLUN3-MEDIMMUNE VACCINES, INC. | 4
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 4
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 4
+MMR-UNKNOWN MANUFACTURER | 4
 HEPA-MERCK & CO. INC. | 3
 PPV-MERCK & CO. INC. | 3
+HEP-UNKNOWN MANUFACTURER | 3
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 3
+HIBV-UNKNOWN MANUFACTURER | 2
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 MNQ-SANOFI PASTEUR | 2
 MMRV-MERCK & CO. INC. | 2
@@ -254,7 +309,17 @@ HPV9-MERCK & CO. INC. | 2
 PNC-PFIZER\WYETH | 1
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 DTAP-SANOFI PASTEUR | 1
+DTP-UNKNOWN MANUFACTURER | 1
+DTAP-UNKNOWN MANUFACTURER | 1
+HEPAB-UNKNOWN MANUFACTURER | 1
+DTPHEP-UNKNOWN MANUFACTURER | 1
+OPV-UNKNOWN MANUFACTURER | 1
+UNK-UNKNOWN MANUFACTURER | 1
+BCG-UNKNOWN MANUFACTURER | 1
+RVX-UNKNOWN MANUFACTURER | 1
+TDAP-UNKNOWN MANUFACTURER | 1
 FLU3-CONNAUGHT LABORATORIES | 1
+VARCEL-UNKNOWN MANUFACTURER | 1
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1
@@ -352,6 +417,7 @@ VARCEL-MERCK & CO. INC. | 10112
 PPV-MERCK & CO. INC. | 9684
 MMR-MERCK & CO. INC. | 7883
 TDAP-SANOFI PASTEUR | 5849
+FLUX-UNKNOWN MANUFACTURER | 5548
 RV5-MERCK & CO. INC. | 5189
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 4928
 MMRV-MERCK & CO. INC. | 4441
@@ -370,6 +436,7 @@ MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 2329
 DTAPIPVHIB-SANOFI PASTEUR | 2129
 FLUN4-MEDIMMUNE VACCINES, INC. | 2001
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 1984
+PPV-UNKNOWN MANUFACTURER | 1926
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1827
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1790
 DTAP-SANOFI PASTEUR | 1691
@@ -377,59 +444,104 @@ HIBV-SANOFI PASTEUR | 1595
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 1512
 IPV-SANOFI PASTEUR | 1388
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1280
+TDAP-UNKNOWN MANUFACTURER | 1269
+MMR-UNKNOWN MANUFACTURER | 1263
+DTAP-UNKNOWN MANUFACTURER | 1196
 TYP-SANOFI PASTEUR | 941
+VARCEL-UNKNOWN MANUFACTURER | 903
 MENB-PFIZER\WYETH | 900
+HEP-UNKNOWN MANUFACTURER | 880
 ANTH-EMERGENT BIOSOLUTIONS | 836
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 703
 YF-SANOFI PASTEUR | 700
+HEPA-UNKNOWN MANUFACTURER | 680
 FLUN3-MEDIMMUNE VACCINES, INC. | 657
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 608
+HIBV-UNKNOWN MANUFACTURER | 607
+UNK-UNKNOWN MANUFACTURER | 580
 PNC-PFIZER\WYETH | 547
+MEN-UNKNOWN MANUFACTURER | 523
+IPV-UNKNOWN MANUFACTURER | 484
+HPVX-UNKNOWN MANUFACTURER | 465
 TD-SANOFI PASTEUR | 424
+VARZOS-UNKNOWN MANUFACTURER | 402
 SMALL-SANOFI PASTEUR | 367
+TD-UNKNOWN MANUFACTURER | 348
+RVX-UNKNOWN MANUFACTURER | 332
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 302
 TYP-BERNA BIOTECH, LTD. | 273
+TTOX-UNKNOWN MANUFACTURER | 267
 RAB-SANOFI PASTEUR | 259
 JEV1-INTERCELL AG | 231
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 207
 FLUR3-PROTEIN SCIENCES CORPORATION | 193
+TYP-UNKNOWN MANUFACTURER | 170
+MMRV-UNKNOWN MANUFACTURER | 166
+DTP-UNKNOWN MANUFACTURER | 154
 MEN-SANOFI PASTEUR | 153
+DTAPIPV-UNKNOWN MANUFACTURER | 146
 ADEN_4_7-TEVA PHARMACEUTICALS | 132
+ANTH-UNKNOWN MANUFACTURER | 129
 HBHEPB-MERCK & CO. INC. | 126
+YF-UNKNOWN MANUFACTURER | 106
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 103
+RAB-UNKNOWN MANUFACTURER | 97
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 94
+HEPAB-UNKNOWN MANUFACTURER | 82
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 75
 TD-MASS. PUB HLTH BIOL LAB | 71
+OPV-UNKNOWN MANUFACTURER | 68
+DPP-UNKNOWN MANUFACTURER | 68
+DTAPH-UNKNOWN MANUFACTURER | 60
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 60
+SMALL-UNKNOWN MANUFACTURER | 60
 TTOX-SANOFI PASTEUR | 54
+6VAX-F-UNKNOWN MANUFACTURER | 51
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 48
 DTP-SANOFI PASTEUR | 46
+BCG-UNKNOWN MANUFACTURER | 44
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 30
+JEVX-UNKNOWN MANUFACTURER | 29
+DTOX-UNKNOWN MANUFACTURER | 28
+DTPHEP-UNKNOWN MANUFACTURER | 25
 RUB-MERCK & CO. INC. | 20
 DT-SANOFI PASTEUR | 18
 FLU3-CONNAUGHT LABORATORIES | 17
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 17
+DTPIHI-UNKNOWN MANUFACTURER | 17
 FLUX-SANOFI PASTEUR | 16
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 15
 PER-EMERGENT BIOSOLUTIONS | 15
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 14
+DTPPHIB-UNKNOWN MANUFACTURER | 14
+DTPIPV-UNKNOWN MANUFACTURER | 13
 PPV-PFIZER\WYETH | 13
 DPP-NOVARTIS VACCINES AND DIAGNOSTICS | 13
+MEA-UNKNOWN MANUFACTURER | 12
 IPV-PFIZER\WYETH | 12
+RUB-UNKNOWN MANUFACTURER | 12
 ANTH-MICHIGAN DEPT PUB HLTH | 12
+DT-UNKNOWN MANUFACTURER | 10
 DTAPH-SANOFI PASTEUR | 10
 MM-MERCK & CO. INC. | 10
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 10
 JEV-SANOFI PASTEUR | 10
+MNQ-UNKNOWN MANUFACTURER | 10
 DTAP-PFIZER\WYETH | 9
+DTPHIB-UNKNOWN MANUFACTURER | 9
 TDAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 9
 FLU4-SEQIRUS, INC. | 9
 FLUC4-SEQIRUS, INC. | 9
 SMALL-PFIZER\WYETH | 9
 FLU3-AVENTIS PASTEUR | 8
 HEP-SANOFI PASTEUR | 7
+MENHIB-UNKNOWN MANUFACTURER | 7
 HEPA-SMITHKLINE BEECHAM | 6
 HIBV-PFIZER\WYETH | 6
 HEP-SMITHKLINE BEECHAM | 6
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 6
 FLU3-PARKDALE PHARMACEUTICALS | 6
+PER-UNKNOWN MANUFACTURER | 5
 MUR-MERCK & CO. INC. | 4
 TTOX-MASS. PUB HLTH BIOL LAB | 4
 HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 4
@@ -441,6 +553,7 @@ IPV-CONNAUGHT LTD. | 3
 6VAX-F-SANOFI PASTEUR | 2
 TTOX-BERNA BIOTECH, LTD. | 2
 FLU3-PFIZER\WYETH | 2
+DTIPV-UNKNOWN MANUFACTURER | 1
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 1
 CHOL-PFIZER\WYETH | 1
 DT-GLAXOSMITHKLINE BIOLOGICALS | 1
@@ -448,4 +561,5 @@ FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 1
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 1
 DTPHIB-SANOFI PASTEUR | 1
 MER-MERCK & CO. INC. | 1
+HBPV-UNKNOWN MANUFACTURER | 1
 ---
