--- a/results/2016.md
+++ b/results/2016.md
@@ -98,6 +98,7 @@ FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1882
 HEPA-MERCK & CO. INC. | 1502
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1456
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1341
+FLUX-UNKNOWN MANUFACTURER | 1330
 TDAP-SANOFI PASTEUR | 1248
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1153
 MNQ-SANOFI PASTEUR | 1127
@@ -114,36 +115,70 @@ FLUN4-MEDIMMUNE VACCINES, INC. | 455
 DTAPIPVHIB-SANOFI PASTEUR | 450
 IPV-SANOFI PASTEUR | 427
 DTAP-SANOFI PASTEUR | 420
+PPV-UNKNOWN MANUFACTURER | 401
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 330
+TDAP-UNKNOWN MANUFACTURER | 287
+DTAP-UNKNOWN MANUFACTURER | 268
+HPVX-UNKNOWN MANUFACTURER | 257
+MMR-UNKNOWN MANUFACTURER | 249
 FLUC4-SEQIRUS, INC. | 234
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 207
+VARCEL-UNKNOWN MANUFACTURER | 190
+HEP-UNKNOWN MANUFACTURER | 175
+HEPA-UNKNOWN MANUFACTURER | 168
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 163
 ANTH-EMERGENT BIOSOLUTIONS | 160
+UNK-UNKNOWN MANUFACTURER | 158
 TYP-SANOFI PASTEUR | 156
+IPV-UNKNOWN MANUFACTURER | 152
+HIBV-UNKNOWN MANUFACTURER | 146
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 142
 TD-SANOFI PASTEUR | 129
 PNC-PFIZER\WYETH | 123
+MEN-UNKNOWN MANUFACTURER | 117
 YF-SANOFI PASTEUR | 108
+RVX-UNKNOWN MANUFACTURER | 99
+VARZOS-UNKNOWN MANUFACTURER | 97
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 95
 FLU4-SEQIRUS, INC. | 89
+TTOX-UNKNOWN MANUFACTURER | 79
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 79
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 66
 MEN-SANOFI PASTEUR | 66
+TD-UNKNOWN MANUFACTURER | 60
 TYP-BERNA BIOTECH, LTD. | 58
 SMALL-SANOFI PASTEUR | 56
+MMRV-UNKNOWN MANUFACTURER | 55
 FLUN3-MEDIMMUNE VACCINES, INC. | 39
+DTP-UNKNOWN MANUFACTURER | 38
 FLUR3-PROTEIN SCIENCES CORPORATION | 36
 RAB-SANOFI PASTEUR | 33
 JEV1-INTERCELL AG | 31
+ANTH-UNKNOWN MANUFACTURER | 30
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 29
 HBHEPB-MERCK & CO. INC. | 27
+TYP-UNKNOWN MANUFACTURER | 26
+DTAPIPV-UNKNOWN MANUFACTURER | 26
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 23
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 20
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 19
 ADEN_4_7-TEVA PHARMACEUTICALS | 17
+RAB-UNKNOWN MANUFACTURER | 17
+HEPAB-UNKNOWN MANUFACTURER | 14
 PER-EMERGENT BIOSOLUTIONS | 14
+6VAX-F-UNKNOWN MANUFACTURER | 14
+DTPIHI-UNKNOWN MANUFACTURER | 12
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 12
+DPP-UNKNOWN MANUFACTURER | 12
+SMALL-UNKNOWN MANUFACTURER | 12
+DTAPH-UNKNOWN MANUFACTURER | 11
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 10
 TYP-BERNA BIOTECH, LTD | 10
 FLUX-SANOFI PASTEUR | 10
+YF-UNKNOWN MANUFACTURER | 9
+MNQ-UNKNOWN MANUFACTURER | 9
 TD-MASS. PUB HLTH BIOL LAB | 8
+JEVX-UNKNOWN MANUFACTURER | 8
 JEV-SANOFI PASTEUR | 7
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 7
 TTOX-SANOFI PASTEUR | 7
@@ -152,9 +187,12 @@ MMR-GLAXOSMITHKLINE BIOLOGICALS | 6
 DTP-SANOFI PASTEUR | 5
 MEA-MERCK & CO. INC. | 5
 RUB-MERCK & CO. INC. | 5
+DTOX-UNKNOWN MANUFACTURER | 5
 DTPIPV-SANOFI PASTEUR | 5
+OPV-UNKNOWN MANUFACTURER | 5
 DT-SANOFI PASTEUR | 4
 ANTH-MICHIGAN DEPT PUB HLTH | 4
+MENHIB-UNKNOWN MANUFACTURER | 4
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 4
 FLU(H1N1)-SANOFI PASTEUR | 4
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 4
@@ -163,11 +201,19 @@ HEP-SANOFI PASTEUR | 3
 DTAP-PFIZER\WYETH | 3
 TDAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 3
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 3
+DT-UNKNOWN MANUFACTURER | 3
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 3
+DTPHIB-UNKNOWN MANUFACTURER | 3
 BCG-SANOFI PASTEUR | 2
 MU-MERCK & CO. INC. | 2
+RUB-UNKNOWN MANUFACTURER | 2
+MEA-UNKNOWN MANUFACTURER | 2
+CHOL-UNKNOWN MANUFACTURER | 2
 DTAP-BAXTER HEALTHCARE CORP. | 2
+DTPIPV-UNKNOWN MANUFACTURER | 2
+DTPPHIB-UNKNOWN MANUFACTURER | 2
 DT-MASS. PUB HLTH BIOL LAB | 2
+DTIPV-UNKNOWN MANUFACTURER | 2
 DTAP-CONNAUGHT LABORATORIES | 1
 IPV-PASTEUR MERIEUX INST. | 1
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 1
@@ -181,6 +227,7 @@ DTAPIPV-SANOFI PASTEUR | 1
 FLUX-PFIZER\WYETH | 1
 FLU3-AVENTIS PASTEUR | 1
 DT-GLAXOSMITHKLINE BIOLOGICALS | 1
+SSEV-UNKNOWN MANUFACTURER | 1
 HIBV-PFIZER\WYETH | 1
 TTOX-MEDEVA PHARMA, LTD. | 1
 FLU3-CONNAUGHT LABORATORIES | 1
@@ -191,6 +238,7 @@ DT-PFIZER\WYETH | 1
 RUB-SANOFI PASTEUR | 1
 RAB-EMERGENT BIOSOLUTIONS | 1
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 1
+DTPHEP-UNKNOWN MANUFACTURER | 1
 DTPHIB-SANOFI PASTEUR | 1
 ---
 # Total Deaths
@@ -236,6 +284,8 @@ RV5-MERCK & CO. INC. | 17
 FLU3-SANOFI PASTEUR | 15
 HIBV-MERCK & CO. INC. | 15
 FLU4-SANOFI PASTEUR | 13
+HPVX-UNKNOWN MANUFACTURER | 13
+FLUX-UNKNOWN MANUFACTURER | 11
 HIBV-SANOFI PASTEUR | 10
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 10
 DTAPIPVHIB-SANOFI PASTEUR | 9
@@ -248,14 +298,20 @@ HEP-MERCK & CO. INC. | 5
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 4
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 4
 MMRV-MERCK & CO. INC. | 3
+DTAP-UNKNOWN MANUFACTURER | 3
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 3
 HPV9-MERCK & CO. INC. | 3
+MEN-UNKNOWN MANUFACTURER | 3
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 2
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 TD-SANOFI PASTEUR | 2
+TDAP-UNKNOWN MANUFACTURER | 1
 MNQ-SANOFI PASTEUR | 1
 DTAP-SANOFI PASTEUR | 1
 IPV-SANOFI PASTEUR | 1
+MMRV-UNKNOWN MANUFACTURER | 1
+DTP-UNKNOWN MANUFACTURER | 1
+MMR-UNKNOWN MANUFACTURER | 1
 SMALL-SANOFI PASTEUR | 1
 FLUN3-MEDIMMUNE VACCINES, INC. | 1
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
@@ -263,6 +319,7 @@ HEPA-MERCK & CO. INC. | 1
 FLUN4-MEDIMMUNE VACCINES, INC. | 1
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+HEP-UNKNOWN MANUFACTURER | 1
 FLU3-CSL LIMITED | 1
 ---
 # Total Symptoms
@@ -360,6 +417,7 @@ FLU4-GLAXOSMITHKLINE BIOLOGICALS | 6962
 MMR-MERCK & CO. INC. | 6601
 HPV4-MERCK & CO. INC. | 6198
 RV5-MERCK & CO. INC. | 5533
+FLUX-UNKNOWN MANUFACTURER | 5510
 TDAP-SANOFI PASTEUR | 4960
 MMRV-MERCK & CO. INC. | 4733
 MNQ-SANOFI PASTEUR | 4477
@@ -376,55 +434,93 @@ HEP-GLAXOSMITHKLINE BIOLOGICALS | 2039
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 2039
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 2010
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1982
+PPV-UNKNOWN MANUFACTURER | 1775
 HIBV-SANOFI PASTEUR | 1601
 DTAPIPVHIB-SANOFI PASTEUR | 1530
 IPV-SANOFI PASTEUR | 1497
 DTAP-SANOFI PASTEUR | 1455
+TDAP-UNKNOWN MANUFACTURER | 1383
+DTAP-UNKNOWN MANUFACTURER | 1221
+MMR-UNKNOWN MANUFACTURER | 1188
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1067
 FLUN4-MEDIMMUNE VACCINES, INC. | 1055
 ANTH-EMERGENT BIOSOLUTIONS | 933
+VARCEL-UNKNOWN MANUFACTURER | 914
+HPVX-UNKNOWN MANUFACTURER | 910
+HEP-UNKNOWN MANUFACTURER | 891
+HEPA-UNKNOWN MANUFACTURER | 806
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 800
 FLUC4-SEQIRUS, INC. | 769
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 673
+IPV-UNKNOWN MANUFACTURER | 673
+HIBV-UNKNOWN MANUFACTURER | 666
 TYP-SANOFI PASTEUR | 666
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 598
+UNK-UNKNOWN MANUFACTURER | 571
 TD-SANOFI PASTEUR | 522
+MEN-UNKNOWN MANUFACTURER | 522
+VARZOS-UNKNOWN MANUFACTURER | 459
+RVX-UNKNOWN MANUFACTURER | 456
 YF-SANOFI PASTEUR | 421
 PNC-PFIZER\WYETH | 419
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 383
 SMALL-SANOFI PASTEUR | 352
 MEN-SANOFI PASTEUR | 323
 FLU4-SEQIRUS, INC. | 311
+TD-UNKNOWN MANUFACTURER | 265
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 259
 TYP-BERNA BIOTECH, LTD. | 236
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 230
+MMRV-UNKNOWN MANUFACTURER | 221
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 212
 RAB-SANOFI PASTEUR | 212
+TTOX-UNKNOWN MANUFACTURER | 187
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 169
 JEV1-INTERCELL AG | 151
 FLUR3-PROTEIN SCIENCES CORPORATION | 145
+ANTH-UNKNOWN MANUFACTURER | 137
 FLUN3-MEDIMMUNE VACCINES, INC. | 132
+DTP-UNKNOWN MANUFACTURER | 132
 ADEN_4_7-TEVA PHARMACEUTICALS | 128
+TYP-UNKNOWN MANUFACTURER | 118
+DTAPIPV-UNKNOWN MANUFACTURER | 106
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 98
 HBHEPB-MERCK & CO. INC. | 92
+HEPAB-UNKNOWN MANUFACTURER | 83
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 77
+RAB-UNKNOWN MANUFACTURER | 73
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 66
 PER-EMERGENT BIOSOLUTIONS | 55
+DPP-UNKNOWN MANUFACTURER | 54
+SMALL-UNKNOWN MANUFACTURER | 54
+DTPIHI-UNKNOWN MANUFACTURER | 53
+6VAX-F-UNKNOWN MANUFACTURER | 51
 JEV-SANOFI PASTEUR | 43
+DTAPH-UNKNOWN MANUFACTURER | 42
 FLUX-SANOFI PASTEUR | 41
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 40
 ANTH-MICHIGAN DEPT PUB HLTH | 36
 FLU(H1N1)-SANOFI PASTEUR | 36
+DTOX-UNKNOWN MANUFACTURER | 35
 TD-MASS. PUB HLTH BIOL LAB | 34
+YF-UNKNOWN MANUFACTURER | 34
+MNQ-UNKNOWN MANUFACTURER | 34
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 33
 PPV-PFIZER\WYETH | 33
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 32
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 28
 TYP-BERNA BIOTECH, LTD | 27
+JEVX-UNKNOWN MANUFACTURER | 26
 TTOX-SANOFI PASTEUR | 24
+OPV-UNKNOWN MANUFACTURER | 23
 DTP-SANOFI PASTEUR | 22
+MENHIB-UNKNOWN MANUFACTURER | 21
 DT-SANOFI PASTEUR | 17
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 17
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 16
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 16
 DTPIPV-SANOFI PASTEUR | 16
+RUB-UNKNOWN MANUFACTURER | 12
 DTAP-CONNAUGHT LABORATORIES | 12
 IPV-PASTEUR MERIEUX INST. | 12
 DTAP-PFIZER\WYETH | 12
@@ -433,14 +529,22 @@ FLU3-PFIZER\WYETH | 11
 TDAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 11
 DTAP-BAXTER HEALTHCARE CORP. | 10
 FLU3-AVENTIS PASTEUR | 9
+SSEV-UNKNOWN MANUFACTURER | 9
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 9
+DTPHEP-UNKNOWN MANUFACTURER | 9
 MEA-MERCK & CO. INC. | 8
 RUB-MERCK & CO. INC. | 8
+DTPIPV-UNKNOWN MANUFACTURER | 8
+DTIPV-UNKNOWN MANUFACTURER | 8
+DT-UNKNOWN MANUFACTURER | 7
 FLUX-PFIZER\WYETH | 7
 FLU3-CONNAUGHT LABORATORIES | 7
+CHOL-UNKNOWN MANUFACTURER | 6
 HIBV-PFIZER\WYETH | 6
 FLU3-MEDEVA PHARMA, LTD. | 6
+MEA-UNKNOWN MANUFACTURER | 5
 HEP-SANOFI PASTEUR | 5
+DTPHIB-UNKNOWN MANUFACTURER | 5
 BCG-SANOFI PASTEUR | 4
 MUR-MERCK & CO. INC. | 4
 DT-MASS. PUB HLTH BIOL LAB | 4
@@ -448,6 +552,7 @@ HIBV-CONNAUGHT LABORATORIES | 4
 DTPHEP-GLAXOSMITHKLINE BIOLOGICALS | 4
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 3
 TD-GLAXOSMITHKLINE BIOLOGICALS | 3
+DTPPHIB-UNKNOWN MANUFACTURER | 3
 TYP-PFIZER\WYETH | 3
 MU-MERCK & CO. INC. | 2
 DTAPIPV-SANOFI PASTEUR | 2
