--- a/results/2017.md
+++ b/results/2017.md
@@ -104,6 +104,7 @@ HEP-MERCK & CO. INC. | 914
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 780
 FLUC4-SEQIRUS, INC. | 728
 HPV4-MERCK & CO. INC. | 700
+FLUX-UNKNOWN MANUFACTURER | 650
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 635
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 633
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 596
@@ -118,55 +119,98 @@ DTAP-SANOFI PASTEUR | 422
 FLU4-SEQIRUS, INC. | 393
 IPV-SANOFI PASTEUR | 392
 HIBV-SANOFI PASTEUR | 391
+UNK-UNKNOWN MANUFACTURER | 290
+PPV-UNKNOWN MANUFACTURER | 250
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 228
+HPVX-UNKNOWN MANUFACTURER | 199
 TYP-SANOFI PASTEUR | 181
 ANTH-EMERGENT BIOSOLUTIONS | 178
+DTAP-UNKNOWN MANUFACTURER | 174
+TDAP-UNKNOWN MANUFACTURER | 163
 YF-SANOFI PASTEUR | 144
+MMR-UNKNOWN MANUFACTURER | 142
+HEP-UNKNOWN MANUFACTURER | 137
 DTAPIPV-SANOFI PASTEUR | 135
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 129
+HIBV-UNKNOWN MANUFACTURER | 115
+VARCEL-UNKNOWN MANUFACTURER | 108
 SMALL-SANOFI PASTEUR | 99
 TD-SANOFI PASTEUR | 96
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 95
+HEPA-UNKNOWN MANUFACTURER | 93
+IPV-UNKNOWN MANUFACTURER | 90
 PNC-PFIZER\WYETH | 74
 TYP-BERNA BIOTECH, LTD. | 70
+MEN-UNKNOWN MANUFACTURER | 68
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 63
+TTOX-UNKNOWN MANUFACTURER | 59
+RVX-UNKNOWN MANUFACTURER | 57
 MEN-SANOFI PASTEUR | 52
 FLUR3-PROTEIN SCIENCES CORPORATION | 49
 RAB-SANOFI PASTEUR | 42
 FLUR4-PROTEIN SCIENCES CORPORATION | 40
 JEV1-INTERCELL AG | 39
+VARZOS-UNKNOWN MANUFACTURER | 34
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 32
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 29
 TD-MASS. PUB HLTH BIOL LAB | 29
+MMRV-UNKNOWN MANUFACTURER | 28
+TD-UNKNOWN MANUFACTURER | 25
+TYP-UNKNOWN MANUFACTURER | 23
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 23
 FLUN4-MEDIMMUNE VACCINES, INC. | 22
+DTP-UNKNOWN MANUFACTURER | 21
+ANTH-UNKNOWN MANUFACTURER | 20
+DTAPIPV-UNKNOWN MANUFACTURER | 18
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 13
 TTOX-SANOFI PASTEUR | 13
 FLUN3-MEDIMMUNE VACCINES, INC. | 12
+MNQ-UNKNOWN MANUFACTURER | 12
+RAB-UNKNOWN MANUFACTURER | 12
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 11
 FLUX-SANOFI PASTEUR | 11
+SMALL-UNKNOWN MANUFACTURER | 11
 HBHEPB-MERCK & CO. INC. | 10
+DTAPH-UNKNOWN MANUFACTURER | 9
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 9
+6VAX-F-UNKNOWN MANUFACTURER | 8
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 8
 CHOL-PAXVAX | 8
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 8
 PPV-PFIZER\WYETH | 6
 DTP-SANOFI PASTEUR | 6
+HEPAB-UNKNOWN MANUFACTURER | 6
+YF-UNKNOWN MANUFACTURER | 5
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 5
+OPV-UNKNOWN MANUFACTURER | 5
 JEV-SANOFI PASTEUR | 5
+DPP-UNKNOWN MANUFACTURER | 4
+DTOX-UNKNOWN MANUFACTURER | 4
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 4
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 4
 MEA-MERCK & CO. INC. | 4
 FLU(H1N1)-SANOFI PASTEUR | 4
 ADEN_4_7-TEVA PHARMACEUTICALS | 4
 DT-SANOFI PASTEUR | 4
+DTPIHI-UNKNOWN MANUFACTURER | 3
+JEVX-UNKNOWN MANUFACTURER | 3
 PER-EMERGENT BIOSOLUTIONS | 3
+DTPIPV-UNKNOWN MANUFACTURER | 3
+MEA-UNKNOWN MANUFACTURER | 3
 ANTH-MICHIGAN DEPT PUB HLTH | 3
 TDAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 3
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 3
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 3
 FLUX-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 2
+DTPHIB-UNKNOWN MANUFACTURER | 2
+DT-UNKNOWN MANUFACTURER | 2
+MU-UNKNOWN MANUFACTURER | 2
+RUB-UNKNOWN MANUFACTURER | 2
 6VAX-F-SANOFI PASTEUR | 2
 DTPIPV-SANOFI PASTEUR | 2
 HBPV-PFIZER\WYETH | 2
+BCG-UNKNOWN MANUFACTURER | 2
 SMALL-PFIZER\WYETH | 2
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 2
 UNK-MERCK & CO. INC. | 2
@@ -177,13 +221,19 @@ HEPA-SMITHKLINE BEECHAM | 1
 DTAPH-SANOFI PASTEUR | 1
 TD-SCLAVO | 1
 TYP-PFIZER\WYETH | 1
+MUR-UNKNOWN MANUFACTURER | 1
 TD-GLAXOSMITHKLINE BIOLOGICALS | 1
 RUB-MERCK & CO. INC. | 1
+DTPHEP-UNKNOWN MANUFACTURER | 1
+DTIPV-UNKNOWN MANUFACTURER | 1
+PLAGUE-UNKNOWN MANUFACTURER | 1
 FLU3-MEDEVA PHARMA, LTD. | 1
+HBHEPB-UNKNOWN MANUFACTURER | 1
 TTOX-MASS. PUB HLTH BIOL LAB | 1
 DTP-PFIZER\WYETH | 1
 IPV-PFIZER\WYETH | 1
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 1
+PER-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -237,7 +287,9 @@ HEP-GLAXOSMITHKLINE BIOLOGICALS | 9
 VARZOS-MERCK & CO. INC. | 9
 HEP-MERCK & CO. INC. | 8
 HPV4-MERCK & CO. INC. | 8
+HPVX-UNKNOWN MANUFACTURER | 7
 PPV-MERCK & CO. INC. | 7
+FLUX-UNKNOWN MANUFACTURER | 7
 FLU4-SANOFI PASTEUR | 6
 DTAP-SANOFI PASTEUR | 4
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 3
@@ -254,11 +306,23 @@ DTAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 PNC-PFIZER\WYETH | 2
 HPV9-MERCK & CO. INC. | 2
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 2
+HEPA-UNKNOWN MANUFACTURER | 1
+TYP-UNKNOWN MANUFACTURER | 1
+YF-UNKNOWN MANUFACTURER | 1
+HEP-UNKNOWN MANUFACTURER | 1
+TTOX-UNKNOWN MANUFACTURER | 1
 FLU4-SEQIRUS, INC. | 1
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 1
+HIBV-UNKNOWN MANUFACTURER | 1
+RVX-UNKNOWN MANUFACTURER | 1
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+DTAPH-UNKNOWN MANUFACTURER | 1
 TYP-SANOFI PASTEUR | 1
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+DTPHIB-UNKNOWN MANUFACTURER | 1
+OPV-UNKNOWN MANUFACTURER | 1
+VARZOS-UNKNOWN MANUFACTURER | 1
 MMRV-MERCK & CO. INC. | 1
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU3-CSL LIMITED | 1
@@ -364,6 +428,7 @@ TDAP-GLAXOSMITHKLINE BIOLOGICALS | 4034
 MNQ-SANOFI PASTEUR | 3849
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 3442
 HEPA-MERCK & CO. INC. | 3083
+FLUX-UNKNOWN MANUFACTURER | 2876
 HPV4-MERCK & CO. INC. | 2596
 FLUC4-SEQIRUS, INC. | 2575
 HIBV-MERCK & CO. INC. | 2462
@@ -383,52 +448,92 @@ DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1549
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 1523
 HIBV-SANOFI PASTEUR | 1462
 IPV-SANOFI PASTEUR | 1304
+UNK-UNKNOWN MANUFACTURER | 1176
+PPV-UNKNOWN MANUFACTURER | 1108
 TYP-SANOFI PASTEUR | 966
 ANTH-EMERGENT BIOSOLUTIONS | 919
+DTAP-UNKNOWN MANUFACTURER | 841
+TDAP-UNKNOWN MANUFACTURER | 820
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 800
+MMR-UNKNOWN MANUFACTURER | 682
+HEP-UNKNOWN MANUFACTURER | 649
 YF-SANOFI PASTEUR | 644
+VARCEL-UNKNOWN MANUFACTURER | 575
 SMALL-SANOFI PASTEUR | 558
+HIBV-UNKNOWN MANUFACTURER | 550
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 500
 DTAPIPV-SANOFI PASTEUR | 481
+HPVX-UNKNOWN MANUFACTURER | 480
 TD-SANOFI PASTEUR | 439
+IPV-UNKNOWN MANUFACTURER | 424
 TYP-BERNA BIOTECH, LTD. | 416
+HEPA-UNKNOWN MANUFACTURER | 384
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 305
+MEN-UNKNOWN MANUFACTURER | 282
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 264
 RAB-SANOFI PASTEUR | 252
 FLUR3-PROTEIN SCIENCES CORPORATION | 236
 PNC-PFIZER\WYETH | 235
 JEV1-INTERCELL AG | 225
 MEN-SANOFI PASTEUR | 213
+RVX-UNKNOWN MANUFACTURER | 208
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 184
+TTOX-UNKNOWN MANUFACTURER | 180
 FLUR4-PROTEIN SCIENCES CORPORATION | 171
+MMRV-UNKNOWN MANUFACTURER | 144
+TYP-UNKNOWN MANUFACTURER | 132
 TD-MASS. PUB HLTH BIOL LAB | 128
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 110
+ANTH-UNKNOWN MANUFACTURER | 110
+VARZOS-UNKNOWN MANUFACTURER | 102
+DTAPIPV-UNKNOWN MANUFACTURER | 93
 FLUN3-MEDIMMUNE VACCINES, INC. | 92
+TD-UNKNOWN MANUFACTURER | 87
+DTP-UNKNOWN MANUFACTURER | 84
 FLUN4-MEDIMMUNE VACCINES, INC. | 75
+SMALL-UNKNOWN MANUFACTURER | 74
 FLUX-SANOFI PASTEUR | 67
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 64
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 64
 FLU(H1N1)-SANOFI PASTEUR | 63
+HEPAB-UNKNOWN MANUFACTURER | 62
 ADEN_4_7-TEVA PHARMACEUTICALS | 60
+RAB-UNKNOWN MANUFACTURER | 58
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 55
 TTOX-SANOFI PASTEUR | 52
+DTAPH-UNKNOWN MANUFACTURER | 51
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 49
+MNQ-UNKNOWN MANUFACTURER | 44
+YF-UNKNOWN MANUFACTURER | 39
 HBHEPB-MERCK & CO. INC. | 38
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 38
+6VAX-F-UNKNOWN MANUFACTURER | 36
 SMALL-PFIZER\WYETH | 31
+OPV-UNKNOWN MANUFACTURER | 30
 ANTH-MICHIGAN DEPT PUB HLTH | 26
 DT-SANOFI PASTEUR | 26
 CHOL-PAXVAX | 25
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 24
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 22
+JEVX-UNKNOWN MANUFACTURER | 20
+DPP-UNKNOWN MANUFACTURER | 19
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 19
 JEV-SANOFI PASTEUR | 19
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 18
 PPV-PFIZER\WYETH | 17
+DTOX-UNKNOWN MANUFACTURER | 17
 PER-EMERGENT BIOSOLUTIONS | 17
 LYME-GLAXOSMITHKLINE BIOLOGICALS | 17
 DTP-SANOFI PASTEUR | 15
 FLU(H1N1)-NOVARTIS VACCINES AND DIAGNOSTICS | 14
 HBPV-PFIZER\WYETH | 13
+DTPIHI-UNKNOWN MANUFACTURER | 11
+DTPHIB-UNKNOWN MANUFACTURER | 11
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 11
 MEA-MERCK & CO. INC. | 9
+DTPIPV-UNKNOWN MANUFACTURER | 9
+MEA-UNKNOWN MANUFACTURER | 9
+DT-UNKNOWN MANUFACTURER | 8
 TD-GLAXOSMITHKLINE BIOLOGICALS | 8
 DTAPIPVHIB-GLAXOSMITHKLINE BIOLOGICALS | 8
 HIBV-PFIZER\WYETH | 7
@@ -436,17 +541,26 @@ HEPA-SMITHKLINE BEECHAM | 7
 UNK-MERCK & CO. INC. | 7
 6VAX-F-SANOFI PASTEUR | 6
 TDAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 5
+DTPHEP-UNKNOWN MANUFACTURER | 5
+DTIPV-UNKNOWN MANUFACTURER | 5
 FLUX-NOVARTIS VACCINES AND DIAGNOSTICS | 4
+MU-UNKNOWN MANUFACTURER | 4
+MUR-UNKNOWN MANUFACTURER | 4
+HBHEPB-UNKNOWN MANUFACTURER | 4
 TTOX-MASS. PUB HLTH BIOL LAB | 4
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 4
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 3
 HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 3
 TD-SCLAVO | 3
+BCG-UNKNOWN MANUFACTURER | 3
 FLU3-MEDEVA PHARMA, LTD. | 3
 DTAPH-SANOFI PASTEUR | 2
+RUB-UNKNOWN MANUFACTURER | 2
 DTPIPV-SANOFI PASTEUR | 2
 TYP-PFIZER\WYETH | 2
 RUB-MERCK & CO. INC. | 2
+PLAGUE-UNKNOWN MANUFACTURER | 1
 DTP-PFIZER\WYETH | 1
 IPV-PFIZER\WYETH | 1
+PER-UNKNOWN MANUFACTURER | 1
 ---
