--- a/results/2018.md
+++ b/results/2018.md
@@ -92,6 +92,7 @@ FLU4-SEQIRUS, INC. | 960
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 850
 HEPA-MERCK & CO. INC. | 832
 DTAPIPVHIB-SANOFI PASTEUR | 768
+FLUX-UNKNOWN MANUFACTURER | 744
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 667
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 642
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 612
@@ -102,6 +103,7 @@ MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 444
 HIBV-SANOFI PASTEUR | 426
 DTAP-SANOFI PASTEUR | 414
 IPV-SANOFI PASTEUR | 388
+UNK-UNKNOWN MANUFACTURER | 352
 FLU3-CSL LIMITED | 352
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 349
 HEP-MERCK & CO. INC. | 315
@@ -112,47 +114,86 @@ RV1-GLAXOSMITHKLINE BIOLOGICALS | 248
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 208
 TYP-SANOFI PASTEUR | 189
 ANTH-EMERGENT BIOSOLUTIONS | 179
+PPV-UNKNOWN MANUFACTURER | 171
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 158
 SMALL-SANOFI PASTEUR | 136
+TDAP-UNKNOWN MANUFACTURER | 134
+HEP-UNKNOWN MANUFACTURER | 125
 TD-SANOFI PASTEUR | 108
+DTAP-UNKNOWN MANUFACTURER | 100
+HPVX-UNKNOWN MANUFACTURER | 96
+HEPA-UNKNOWN MANUFACTURER | 93
+RVX-UNKNOWN MANUFACTURER | 87
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 84
 YF-SANOFI PASTEUR | 81
 RAB-SANOFI PASTEUR | 80
+MMR-UNKNOWN MANUFACTURER | 76
+MEN-UNKNOWN MANUFACTURER | 73
+VARCEL-UNKNOWN MANUFACTURER | 69
 TYP-BERNA BIOTECH, LTD. | 60
+HIBV-UNKNOWN MANUFACTURER | 57
+VARZOS-UNKNOWN MANUFACTURER | 54
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 51
 PNC-PFIZER\WYETH | 48
+IPV-UNKNOWN MANUFACTURER | 43
+TTOX-UNKNOWN MANUFACTURER | 39
+TD-UNKNOWN MANUFACTURER | 37
 JEV1-INTERCELL AG | 36
 TD-MASS. PUB HLTH BIOL LAB | 28
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 24
 FLUN4-MEDIMMUNE VACCINES, INC. | 24
+DTP-UNKNOWN MANUFACTURER | 21
 DT-SANOFI PASTEUR | 19
 ADEN_4_7-TEVA PHARMACEUTICALS | 16
 FLUR3-PROTEIN SCIENCES CORPORATION | 16
 CHOL-PAXVAX | 15
+DTAPIPV-UNKNOWN MANUFACTURER | 15
+MNQ-UNKNOWN MANUFACTURER | 13
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 13
+RAB-UNKNOWN MANUFACTURER | 12
+TYP-UNKNOWN MANUFACTURER | 11
 MEN-SANOFI PASTEUR | 9
 FLUX-SANOFI PASTEUR | 9
 ANTH-MICHIGAN DEPT PUB HLTH | 8
+MMRV-UNKNOWN MANUFACTURER | 7
+ANTH-UNKNOWN MANUFACTURER | 6
 FLUN3-MEDIMMUNE VACCINES, INC. | 6
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 6
+OPV-UNKNOWN MANUFACTURER | 5
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 4
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 3
 TTOX-SANOFI PASTEUR | 3
+BCG-UNKNOWN MANUFACTURER | 3
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 3
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 3
+PER-UNKNOWN MANUFACTURER | 3
+DT-UNKNOWN MANUFACTURER | 3
 JEV-SANOFI PASTEUR | 3
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 2
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 DTP-SANOFI PASTEUR | 2
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 2
+SMALL-UNKNOWN MANUFACTURER | 2
+DTAPH-UNKNOWN MANUFACTURER | 2
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 2
 PPV-PFIZER\WYETH | 2
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 2
 HEP-SANOFI PASTEUR | 1
+6VAX-F-UNKNOWN MANUFACTURER | 1
+CEE-UNKNOWN MANUFACTURER | 1
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 1
+YF-UNKNOWN MANUFACTURER | 1
 HEPA-SMITHKLINE BEECHAM | 1
+HEPAB-UNKNOWN MANUFACTURER | 1
 RAB-PASTEUR MERIEUX INST. | 1
+MEA-UNKNOWN MANUFACTURER | 1
+DTOX-UNKNOWN MANUFACTURER | 1
+RUB-UNKNOWN MANUFACTURER | 1
 BCG-ORGANON-TEKNIKA | 1
 FLUX-PFIZER\WYETH | 1
 FLU(H1N1)-SANOFI PASTEUR | 1
 IPV-CONNAUGHT LTD. | 1
+JEVX-UNKNOWN MANUFACTURER | 1
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 1
 ---
 # Total Deaths
@@ -203,11 +244,14 @@ RV1-GLAXOSMITHKLINE BIOLOGICALS | 11
 DTAPIPVHIB-SANOFI PASTEUR | 11
 HPV9-MERCK & CO. INC. | 9
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 8
+FLUX-UNKNOWN MANUFACTURER | 8
 PPV-MERCK & CO. INC. | 8
 FLU4-SANOFI PASTEUR | 7
 HIBV-SANOFI PASTEUR | 5
 FLU3-SANOFI PASTEUR | 5
+HPVX-UNKNOWN MANUFACTURER | 4
 TDAP-SANOFI PASTEUR | 3
+MEN-UNKNOWN MANUFACTURER | 3
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 3
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 3
 HEPA-MERCK & CO. INC. | 3
@@ -215,17 +259,24 @@ DTAP-SANOFI PASTEUR | 3
 FLUC4-SEQIRUS, INC. | 3
 VARCEL-MERCK & CO. INC. | 3
 FLU4-SEQIRUS, INC. | 3
+DTP-UNKNOWN MANUFACTURER | 3
+PPV-UNKNOWN MANUFACTURER | 2
 HEP-MERCK & CO. INC. | 2
 IPV-SANOFI PASTEUR | 2
 MMR-MERCK & CO. INC. | 2
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 2
+IPV-UNKNOWN MANUFACTURER | 1
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 MNQ-SANOFI PASTEUR | 1
 FLU3-CSL LIMITED | 1
 PNC-PFIZER\WYETH | 1
 MMRV-MERCK & CO. INC. | 1
+TDAP-UNKNOWN MANUFACTURER | 1
+HIBV-UNKNOWN MANUFACTURER | 1
+DTAP-UNKNOWN MANUFACTURER | 1
+UNK-UNKNOWN MANUFACTURER | 1
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 1
 ---
 # Total Symptoms
@@ -315,6 +366,7 @@ TDAP-SANOFI PASTEUR | 4696
 MMRV-MERCK & CO. INC. | 4563
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 4288
 MNQ-SANOFI PASTEUR | 3988
+FLUX-UNKNOWN MANUFACTURER | 3883
 FLU4-SEQIRUS, INC. | 3858
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 3824
 FLUC4-SEQIRUS, INC. | 3514
@@ -330,6 +382,7 @@ HIBV-MERCK & CO. INC. | 2052
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1928
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1890
 DTAP-SANOFI PASTEUR | 1603
+UNK-UNKNOWN MANUFACTURER | 1524
 HIBV-SANOFI PASTEUR | 1389
 IPV-SANOFI PASTEUR | 1329
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1323
@@ -340,48 +393,87 @@ HEP-MERCK & CO. INC. | 983
 FLUR4-PROTEIN SCIENCES CORPORATION | 946
 ANTH-EMERGENT BIOSOLUTIONS | 939
 SMALL-SANOFI PASTEUR | 938
+PPV-UNKNOWN MANUFACTURER | 889
 DTAPIPV-SANOFI PASTEUR | 847
 TYP-SANOFI PASTEUR | 845
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 694
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 667
+TDAP-UNKNOWN MANUFACTURER | 579
 YF-SANOFI PASTEUR | 483
 TD-SANOFI PASTEUR | 455
+HEP-UNKNOWN MANUFACTURER | 423
+DTAP-UNKNOWN MANUFACTURER | 382
+MEN-UNKNOWN MANUFACTURER | 349
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 306
 TYP-BERNA BIOTECH, LTD. | 302
+HIBV-UNKNOWN MANUFACTURER | 301
+HEPA-UNKNOWN MANUFACTURER | 290
+HPVX-UNKNOWN MANUFACTURER | 281
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 272
 RAB-SANOFI PASTEUR | 234
+VARZOS-UNKNOWN MANUFACTURER | 207
+RVX-UNKNOWN MANUFACTURER | 189
+VARCEL-UNKNOWN MANUFACTURER | 189
 PNC-PFIZER\WYETH | 182
+MMR-UNKNOWN MANUFACTURER | 174
+TTOX-UNKNOWN MANUFACTURER | 172
+TD-UNKNOWN MANUFACTURER | 153
 JEV1-INTERCELL AG | 152
 TD-MASS. PUB HLTH BIOL LAB | 147
+IPV-UNKNOWN MANUFACTURER | 131
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 120
+DTP-UNKNOWN MANUFACTURER | 99
+DTAPIPV-UNKNOWN MANUFACTURER | 90
 FLUN4-MEDIMMUNE VACCINES, INC. | 84
 FLUR3-PROTEIN SCIENCES CORPORATION | 79
 ADEN_4_7-TEVA PHARMACEUTICALS | 76
 DT-SANOFI PASTEUR | 74
+MNQ-UNKNOWN MANUFACTURER | 70
 ANTH-MICHIGAN DEPT PUB HLTH | 66
 FLUN3-MEDIMMUNE VACCINES, INC. | 59
 FLUX-SANOFI PASTEUR | 49
 CHOL-PAXVAX | 48
+ANTH-UNKNOWN MANUFACTURER | 47
+TYP-UNKNOWN MANUFACTURER | 42
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 41
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 41
 MEN-SANOFI PASTEUR | 37
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 36
+RAB-UNKNOWN MANUFACTURER | 35
+DT-UNKNOWN MANUFACTURER | 33
+OPV-UNKNOWN MANUFACTURER | 30
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 26
 JEV-SANOFI PASTEUR | 25
+MMRV-UNKNOWN MANUFACTURER | 23
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 20
+PER-UNKNOWN MANUFACTURER | 19
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 15
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 12
+HEPAB-UNKNOWN MANUFACTURER | 12
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 11
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 11
+BCG-UNKNOWN MANUFACTURER | 10
 HEPA-SMITHKLINE BEECHAM | 10
 FLU(H1N1)-SANOFI PASTEUR | 8
 HEP-SANOFI PASTEUR | 7
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 7
 PPV-PFIZER\WYETH | 7
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 6
+SMALL-UNKNOWN MANUFACTURER | 6
 BCG-ORGANON-TEKNIKA | 6
 TTOX-SANOFI PASTEUR | 5
+DTAPH-UNKNOWN MANUFACTURER | 5
+MEA-UNKNOWN MANUFACTURER | 5
+DTOX-UNKNOWN MANUFACTURER | 5
 DTP-SANOFI PASTEUR | 4
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 4
 FLUX-PFIZER\WYETH | 4
+CEE-UNKNOWN MANUFACTURER | 3
+YF-UNKNOWN MANUFACTURER | 3
 RAB-PASTEUR MERIEUX INST. | 2
 IPV-CONNAUGHT LTD. | 2
 FLUN(H1N1)-MEDIMMUNE VACCINES, INC. | 2
+6VAX-F-UNKNOWN MANUFACTURER | 1
+RUB-UNKNOWN MANUFACTURER | 1
+JEVX-UNKNOWN MANUFACTURER | 1
 ---
