--- a/results/2019.md
+++ b/results/2019.md
@@ -78,6 +78,7 @@ FLU3-SANOFI PASTEUR | 2176
 FLU4-SANOFI PASTEUR | 1988
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1896
 VARZOS-MERCK & CO. INC. | 1692
+UNK-UNKNOWN MANUFACTURER | 1685
 MMRV-MERCK & CO. INC. | 1662
 FLUC4-SEQIRUS, INC. | 1338
 TDAP-SANOFI PASTEUR | 1136
@@ -91,6 +92,7 @@ DTAPIPVHIB-SANOFI PASTEUR | 792
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 694
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 665
 DTAP-SANOFI PASTEUR | 626
+FLUX-UNKNOWN MANUFACTURER | 613
 HIBV-MERCK & CO. INC. | 608
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 601
 FLUR4-PROTEIN SCIENCES CORPORATION | 555
@@ -110,43 +112,80 @@ FLU3-CSL LIMITED | 155
 ANTH-EMERGENT BIOSOLUTIONS | 150
 TD-SANOFI PASTEUR | 149
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 147
+HEP-UNKNOWN MANUFACTURER | 142
+PPV-UNKNOWN MANUFACTURER | 124
+TDAP-UNKNOWN MANUFACTURER | 122
 SMALL-SANOFI PASTEUR | 112
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 107
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 101
 RAB-SANOFI PASTEUR | 100
+HEPA-UNKNOWN MANUFACTURER | 83
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 83
 YF-SANOFI PASTEUR | 76
 TYP-BERNA BIOTECH, LTD. | 66
+VARZOS-UNKNOWN MANUFACTURER | 62
+DTAP-UNKNOWN MANUFACTURER | 60
+RVX-UNKNOWN MANUFACTURER | 58
+HPVX-UNKNOWN MANUFACTURER | 55
+MEN-UNKNOWN MANUFACTURER | 53
+MMR-UNKNOWN MANUFACTURER | 52
 JEV1-INTERCELL AG | 49
+HIBV-UNKNOWN MANUFACTURER | 46
 FLUN4-MEDIMMUNE VACCINES, INC. | 46
+TTOX-UNKNOWN MANUFACTURER | 43
+VARCEL-UNKNOWN MANUFACTURER | 39
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 37
+IPV-UNKNOWN MANUFACTURER | 35
 TD-MASS. PUB HLTH BIOL LAB | 35
 PNC-PFIZER\WYETH | 34
+TD-UNKNOWN MANUFACTURER | 27
 CHOL-PAXVAX | 19
 DT-SANOFI PASTEUR | 16
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 13
 FLUN3-MEDIMMUNE VACCINES, INC. | 11
+DT-UNKNOWN MANUFACTURER | 10
+DTP-UNKNOWN MANUFACTURER | 10
+DTAPIPV-UNKNOWN MANUFACTURER | 9
+RAB-UNKNOWN MANUFACTURER | 9
 FLUR3-PROTEIN SCIENCES CORPORATION | 8
 ADEN_4_7-TEVA PHARMACEUTICALS | 8
+MNQ-UNKNOWN MANUFACTURER | 8
+TYP-UNKNOWN MANUFACTURER | 8
+6VAX-F-UNKNOWN MANUFACTURER | 7
+MMRV-UNKNOWN MANUFACTURER | 6
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 6
 DTP-SANOFI PASTEUR | 4
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 4
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 4
 HIBV-PFIZER\WYETH | 3
 FLUX-SANOFI PASTEUR | 3
+SMALL-UNKNOWN MANUFACTURER | 3
+BCG-UNKNOWN MANUFACTURER | 3
 DTAP-PFIZER\WYETH | 3
 TD-PFIZER\WYETH | 2
+DTOX-UNKNOWN MANUFACTURER | 2
+ANTH-UNKNOWN MANUFACTURER | 2
+MEA-UNKNOWN MANUFACTURER | 2
+OPV-UNKNOWN MANUFACTURER | 2
 RV-PFIZER\WYETH | 2
+DTPIPV-UNKNOWN MANUFACTURER | 1
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 1
 HBHEPB-MERCK & CO. INC. | 1
 JEV-SANOFI PASTEUR | 1
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 1
 HEPA-SMITHKLINE BEECHAM | 1
+TBE-UNKNOWN MANUFACTURER | 1
 ANTH-MICHIGAN DEPT PUB HLTH | 1
+HEPAB-UNKNOWN MANUFACTURER | 1
 TYP-CONNAUGHT LABORATORIES | 1
 FLU3-AVENTIS PASTEUR | 1
 PER-EMERGENT BIOSOLUTIONS | 1
+PER-UNKNOWN MANUFACTURER | 1
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
+ADEN-UNKNOWN MANUFACTURER | 1
 OPV-PFIZER\WYETH | 1
+YF-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -191,7 +230,9 @@ FLUN3 | 1
 Vax ID | Deaths
 --- | ---
 PNC13-PFIZER\WYETH | 26
+FLUX-UNKNOWN MANUFACTURER | 25
 HPV4-MERCK & CO. INC. | 19
+UNK-UNKNOWN MANUFACTURER | 19
 RV5-MERCK & CO. INC. | 18
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 16
 VARZOS-MERCK & CO. INC. | 16
@@ -203,9 +244,12 @@ MMR-MERCK & CO. INC. | 6
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 6
 PPV-MERCK & CO. INC. | 5
 HEP-MERCK & CO. INC. | 5
+HEP-UNKNOWN MANUFACTURER | 4
 HIBV-MERCK & CO. INC. | 4
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 4
+PPV-UNKNOWN MANUFACTURER | 4
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 4
+RVX-UNKNOWN MANUFACTURER | 4
 FLU3-SANOFI PASTEUR | 3
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 3
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 3
@@ -213,16 +257,25 @@ FLU4-SEQIRUS, INC. | 3
 HIBV-SANOFI PASTEUR | 3
 FLU4-SANOFI PASTEUR | 2
 VARCEL-MERCK & CO. INC. | 2
+RAB-UNKNOWN MANUFACTURER | 2
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 2
+6VAX-F-UNKNOWN MANUFACTURER | 2
 DTAP-SANOFI PASTEUR | 2
 FLUC4-SEQIRUS, INC. | 2
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
+TDAP-UNKNOWN MANUFACTURER | 2
 FLUR4-PROTEIN SCIENCES CORPORATION | 2
 HEPA-MERCK & CO. INC. | 1
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1
+HPVX-UNKNOWN MANUFACTURER | 1
+MMRV-UNKNOWN MANUFACTURER | 1
 IPV-SANOFI PASTEUR | 1
+MEN-UNKNOWN MANUFACTURER | 1
+HEPA-UNKNOWN MANUFACTURER | 1
+VARCEL-UNKNOWN MANUFACTURER | 1
+TTOX-UNKNOWN MANUFACTURER | 1
 FLU3-AVENTIS PASTEUR | 1
 PNC-PFIZER\WYETH | 1
 FLUN3-MEDIMMUNE VACCINES, INC. | 1
@@ -307,6 +360,7 @@ FLU4-GLAXOSMITHKLINE BIOLOGICALS | 7860
 HPV9-MERCK & CO. INC. | 7778
 VARCEL-MERCK & CO. INC. | 7235
 FLU4-SANOFI PASTEUR | 7121
+UNK-UNKNOWN MANUFACTURER | 7093
 MMRV-MERCK & CO. INC. | 4666
 FLUC4-SEQIRUS, INC. | 4492
 TDAP-SANOFI PASTEUR | 4347
@@ -316,6 +370,7 @@ HEPA-GLAXOSMITHKLINE BIOLOGICALS | 3619
 FLU4-SEQIRUS, INC. | 3617
 VARZOS-MERCK & CO. INC. | 3356
 RV5-MERCK & CO. INC. | 3317
+FLUX-UNKNOWN MANUFACTURER | 2971
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 2777
 HEPA-MERCK & CO. INC. | 2773
 DTAPIPVHIB-SANOFI PASTEUR | 2619
@@ -336,45 +391,82 @@ HEP-MERCK & CO. INC. | 953
 HPV4-MERCK & CO. INC. | 953
 DTAPIPV-SANOFI PASTEUR | 936
 ANTH-EMERGENT BIOSOLUTIONS | 853
+PPV-UNKNOWN MANUFACTURER | 840
 SMALL-SANOFI PASTEUR | 773
 TYP-SANOFI PASTEUR | 735
 FLU3-CSL LIMITED | 686
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 628
 TD-SANOFI PASTEUR | 549
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 506
+HEP-UNKNOWN MANUFACTURER | 476
+TDAP-UNKNOWN MANUFACTURER | 432
 YF-SANOFI PASTEUR | 388
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 382
+HEPA-UNKNOWN MANUFACTURER | 360
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 360
 TYP-BERNA BIOTECH, LTD. | 356
+HIBV-UNKNOWN MANUFACTURER | 319
 RAB-SANOFI PASTEUR | 313
 JEV1-INTERCELL AG | 289
+MEN-UNKNOWN MANUFACTURER | 261
+DTAP-UNKNOWN MANUFACTURER | 234
+VARZOS-UNKNOWN MANUFACTURER | 213
 FLUN4-MEDIMMUNE VACCINES, INC. | 175
+RVX-UNKNOWN MANUFACTURER | 173
+TD-UNKNOWN MANUFACTURER | 167
+IPV-UNKNOWN MANUFACTURER | 154
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 153
+MMR-UNKNOWN MANUFACTURER | 135
+VARCEL-UNKNOWN MANUFACTURER | 133
+HPVX-UNKNOWN MANUFACTURER | 128
+TTOX-UNKNOWN MANUFACTURER | 125
 TD-MASS. PUB HLTH BIOL LAB | 125
 PNC-PFIZER\WYETH | 108
+MNQ-UNKNOWN MANUFACTURER | 104
 DT-SANOFI PASTEUR | 85
 CHOL-PAXVAX | 75
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 40
 FLUN3-MEDIMMUNE VACCINES, INC. | 37
+RAB-UNKNOWN MANUFACTURER | 35
+DTAPIPV-UNKNOWN MANUFACTURER | 32
+TYP-UNKNOWN MANUFACTURER | 29
+DTP-UNKNOWN MANUFACTURER | 28
 ADEN_4_7-TEVA PHARMACEUTICALS | 27
 TD-PFIZER\WYETH | 26
 DTP-SANOFI PASTEUR | 23
+DT-UNKNOWN MANUFACTURER | 23
 ANTH-MICHIGAN DEPT PUB HLTH | 22
+SMALL-UNKNOWN MANUFACTURER | 20
+MMRV-UNKNOWN MANUFACTURER | 16
 FLUR3-PROTEIN SCIENCES CORPORATION | 15
+DTOX-UNKNOWN MANUFACTURER | 13
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 12
+ANTH-UNKNOWN MANUFACTURER | 12
 PER-EMERGENT BIOSOLUTIONS | 11
+6VAX-F-UNKNOWN MANUFACTURER | 10
 TYP-CONNAUGHT LABORATORIES | 10
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 10
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 9
 HIBV-PFIZER\WYETH | 8
+DTPIPV-UNKNOWN MANUFACTURER | 8
+DTAPHEPBIP-UNKNOWN MANUFACTURER | 8
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 8
 FLUX-SANOFI PASTEUR | 7
 HEPA-SMITHKLINE BEECHAM | 7
+YF-UNKNOWN MANUFACTURER | 7
+BCG-UNKNOWN MANUFACTURER | 6
+MEA-UNKNOWN MANUFACTURER | 6
 DTAP-PFIZER\WYETH | 6
 JEV-SANOFI PASTEUR | 4
+OPV-UNKNOWN MANUFACTURER | 4
 RV-PFIZER\WYETH | 4
 HBHEPB-MERCK & CO. INC. | 3
+TBE-UNKNOWN MANUFACTURER | 3
+HEPAB-UNKNOWN MANUFACTURER | 2
 FLU3-AVENTIS PASTEUR | 2
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 2
+ADEN-UNKNOWN MANUFACTURER | 2
 OPV-PFIZER\WYETH | 2
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+PER-UNKNOWN MANUFACTURER | 1
 ---
