--- a/results/2020.md
+++ b/results/2020.md
@@ -69,9 +69,11 @@ COVID19-PFIZER\BIONTECH | 7727
 FLU4-SANOFI PASTEUR | 3667
 COVID19-MODERNA | 3132
 PPV-MERCK & CO. INC. | 2440
+FLUX-UNKNOWN MANUFACTURER | 2024
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1732
 VARCEL-MERCK & CO. INC. | 1518
 PNC13-PFIZER\WYETH | 1512
+UNK-UNKNOWN MANUFACTURER | 1499
 HPV9-MERCK & CO. INC. | 1455
 VARZOS-MERCK & CO. INC. | 1103
 FLUC4-SEQIRUS, INC. | 1071
@@ -106,38 +108,68 @@ HPV4-MERCK & CO. INC. | 193
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 186
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 172
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 134
+VARZOS-UNKNOWN MANUFACTURER | 130
+PPV-UNKNOWN MANUFACTURER | 116
 ANTH-EMERGENT BIOSOLUTIONS | 92
 TD-SANOFI PASTEUR | 83
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 80
+TDAP-UNKNOWN MANUFACTURER | 80
+MEN-UNKNOWN MANUFACTURER | 64
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 64
 RAB-SANOFI PASTEUR | 62
 PNC-PFIZER\WYETH | 56
 TYP-SANOFI PASTEUR | 52
 FLUN4-MEDIMMUNE VACCINES, INC. | 47
+HEP-UNKNOWN MANUFACTURER | 45
 JEV1-INTERCELL AG | 44
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 41
+DTAP-UNKNOWN MANUFACTURER | 34
 FLU3-CSL LIMITED | 31
 YF-SANOFI PASTEUR | 27
 SMALL-SANOFI PASTEUR | 27
+MMR-UNKNOWN MANUFACTURER | 24
+HEPA-UNKNOWN MANUFACTURER | 24
+TTOX-UNKNOWN MANUFACTURER | 24
+IPV-UNKNOWN MANUFACTURER | 22
+COVID19-UNKNOWN MANUFACTURER | 21
 FLUN3-MEDIMMUNE VACCINES, INC. | 20
+VARCEL-UNKNOWN MANUFACTURER | 18
+TD-UNKNOWN MANUFACTURER | 18
 CHOL-PAXVAX | 18
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 18
 TD-MASS. PUB HLTH BIOL LAB | 17
+HIBV-UNKNOWN MANUFACTURER | 13
+HPVX-UNKNOWN MANUFACTURER | 11
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 9
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 8
+DTP-UNKNOWN MANUFACTURER | 7
 DT-SANOFI PASTEUR | 7
+DT-UNKNOWN MANUFACTURER | 6
 FLUR3-PROTEIN SCIENCES CORPORATION | 6
+RAB-UNKNOWN MANUFACTURER | 5
+RVX-UNKNOWN MANUFACTURER | 5
+DTAPIPV-UNKNOWN MANUFACTURER | 4
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 4
 ADEN_4_7-TEVA PHARMACEUTICALS | 3
+SMALL-UNKNOWN MANUFACTURER | 3
 FLUX-SANOFI PASTEUR | 2
+MNQ-UNKNOWN MANUFACTURER | 2
+TYP-UNKNOWN MANUFACTURER | 2
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 2
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 2
+BCG-UNKNOWN MANUFACTURER | 2
 TTOX-SANOFI PASTEUR | 2
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU3-MEDEVA PHARMA, LTD. | 1
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 1
+YF-UNKNOWN MANUFACTURER | 1
 DTP-SANOFI PASTEUR | 1
+JEVX-UNKNOWN MANUFACTURER | 1
 BCG-SANOFI PASTEUR | 1
+DTOX-UNKNOWN MANUFACTURER | 1
 HBHEPB-MERCK & CO. INC. | 1
+MMRV-UNKNOWN MANUFACTURER | 1
+RUB-UNKNOWN MANUFACTURER | 1
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
 DF-SANOFI PASTEUR | 1
 ---
@@ -178,6 +210,7 @@ HPV9 | 1
 ---
 Vax ID | Deaths
 --- | ---
+FLUX-UNKNOWN MANUFACTURER | 47
 PNC13-PFIZER\WYETH | 29
 RV5-MERCK & CO. INC. | 17
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 16
@@ -187,7 +220,9 @@ FLU4-SANOFI PASTEUR | 11
 COVID19-PFIZER\BIONTECH | 11
 HIBV-MERCK & CO. INC. | 9
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 9
+UNK-UNKNOWN MANUFACTURER | 6
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 6
+MEN-UNKNOWN MANUFACTURER | 6
 MMR-MERCK & CO. INC. | 5
 VARZOS-MERCK & CO. INC. | 5
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 5
@@ -203,12 +238,18 @@ MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 2
 TDAP-SANOFI PASTEUR | 2
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 2
+PPV-UNKNOWN MANUFACTURER | 2
 FLUC4-SEQIRUS, INC. | 1
 PPV-MERCK & CO. INC. | 1
+HEPA-UNKNOWN MANUFACTURER | 1
 HEPA-MERCK & CO. INC. | 1
+HPVX-UNKNOWN MANUFACTURER | 1
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1
+TDAP-UNKNOWN MANUFACTURER | 1
 MNQ-SANOFI PASTEUR | 1
+VARZOS-UNKNOWN MANUFACTURER | 1
 FLUR4-PROTEIN SCIENCES CORPORATION | 1
+RVX-UNKNOWN MANUFACTURER | 1
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU4-SEQIRUS, INC. | 1
 FLUA4-SEQIRUS, INC. | 1
@@ -285,10 +326,12 @@ COVID19-PFIZER\BIONTECH | 31766
 COVID19-MODERNA | 13828
 FLU4-SANOFI PASTEUR | 13133
 PPV-MERCK & CO. INC. | 9868
+UNK-UNKNOWN MANUFACTURER | 6322
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 5910
 PNC13-PFIZER\WYETH | 5714
 HPV9-MERCK & CO. INC. | 4646
 VARCEL-MERCK & CO. INC. | 4572
+FLUX-UNKNOWN MANUFACTURER | 4571
 FLU4-SEQIRUS, INC. | 4121
 FLUC4-SEQIRUS, INC. | 4076
 MMR-MERCK & CO. INC. | 3875
@@ -323,6 +366,10 @@ RV1-GLAXOSMITHKLINE BIOLOGICALS | 610
 DTAPIPV-SANOFI PASTEUR | 609
 HPV4-MERCK & CO. INC. | 566
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 477
+VARZOS-UNKNOWN MANUFACTURER | 436
+PPV-UNKNOWN MANUFACTURER | 381
+TDAP-UNKNOWN MANUFACTURER | 342
+MEN-UNKNOWN MANUFACTURER | 292
 JEV1-INTERCELL AG | 275
 RAB-SANOFI PASTEUR | 274
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 273
@@ -330,30 +377,56 @@ TYP-SANOFI PASTEUR | 260
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 241
 TD-SANOFI PASTEUR | 238
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 201
+HEP-UNKNOWN MANUFACTURER | 194
 YF-SANOFI PASTEUR | 192
+DTAP-UNKNOWN MANUFACTURER | 184
 SMALL-SANOFI PASTEUR | 183
 FLUN4-MEDIMMUNE VACCINES, INC. | 180
 PNC-PFIZER\WYETH | 170
+IPV-UNKNOWN MANUFACTURER | 147
+HEPA-UNKNOWN MANUFACTURER | 138
 FLU3-CSL LIMITED | 136
+TTOX-UNKNOWN MANUFACTURER | 128
+MMR-UNKNOWN MANUFACTURER | 117
+HIBV-UNKNOWN MANUFACTURER | 104
+TD-UNKNOWN MANUFACTURER | 102
+COVID19-UNKNOWN MANUFACTURER | 96
 TD-MASS. PUB HLTH BIOL LAB | 88
+VARCEL-UNKNOWN MANUFACTURER | 85
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 64
+HPVX-UNKNOWN MANUFACTURER | 41
+RVX-UNKNOWN MANUFACTURER | 37
 FLUN3-MEDIMMUNE VACCINES, INC. | 36
 FLUR3-PROTEIN SCIENCES CORPORATION | 35
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 34
+DTP-UNKNOWN MANUFACTURER | 31
 CHOL-PAXVAX | 31
 ADEN_4_7-TEVA PHARMACEUTICALS | 28
 DT-SANOFI PASTEUR | 28
+SMALL-UNKNOWN MANUFACTURER | 27
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 25
 BCG-SANOFI PASTEUR | 21
+DTOX-UNKNOWN MANUFACTURER | 21
+DT-UNKNOWN MANUFACTURER | 19
+RAB-UNKNOWN MANUFACTURER | 14
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 13
+DTAPIPV-UNKNOWN MANUFACTURER | 11
+TYP-UNKNOWN MANUFACTURER | 10
+MNQ-UNKNOWN MANUFACTURER | 7
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 7
 FLUX-SANOFI PASTEUR | 6
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 5
 FLU3-MEDEVA PHARMA, LTD. | 4
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 4
 HBHEPB-MERCK & CO. INC. | 4
+YF-UNKNOWN MANUFACTURER | 3
+BCG-UNKNOWN MANUFACTURER | 3
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 3
 DF-SANOFI PASTEUR | 3
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 2
 DTP-SANOFI PASTEUR | 2
+MMRV-UNKNOWN MANUFACTURER | 2
+RUB-UNKNOWN MANUFACTURER | 2
 TTOX-SANOFI PASTEUR | 2
+JEVX-UNKNOWN MANUFACTURER | 1
 ---
