--- a/results/2021.md
+++ b/results/2021.md
@@ -50,8 +50,11 @@ Vax ID | Vaccinations
 COVID19-MODERNA | 45515
 COVID19-PFIZER\BIONTECH | 38376
 COVID19-JANSSEN | 25158
+UNK-UNKNOWN MANUFACTURER | 201
+COVID19-UNKNOWN MANUFACTURER | 150
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 63
 VARZOS-MERCK & CO. INC. | 57
+FLUX-UNKNOWN MANUFACTURER | 49
 FLU4-SANOFI PASTEUR | 29
 PPV-MERCK & CO. INC. | 24
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 13
@@ -60,16 +63,22 @@ PNC13-PFIZER\WYETH | 11
 FLUR4-PROTEIN SCIENCES CORPORATION | 9
 HPV9-MERCK & CO. INC. | 8
 MNQ-SANOFI PASTEUR | 7
+VARZOS-UNKNOWN MANUFACTURER | 6
 FLU3-SANOFI PASTEUR | 6
 FLU4-SEQIRUS, INC. | 5
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 5
 FLUA4-SEQIRUS, INC. | 5
+PPV-UNKNOWN MANUFACTURER | 5
 FLUC4-SEQIRUS, INC. | 4
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 4
 TDAP-SANOFI PASTEUR | 4
 VARCEL-MERCK & CO. INC. | 4
 DTAPIPVHIB-SANOFI PASTEUR | 4
+HEP-UNKNOWN MANUFACTURER | 3
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 2
+DTAP-UNKNOWN MANUFACTURER | 2
+DT-UNKNOWN MANUFACTURER | 2
+TTOX-UNKNOWN MANUFACTURER | 2
 HPV4-MERCK & CO. INC. | 2
 HEPA-MERCK & CO. INC. | 2
 DTAP-SANOFI PASTEUR | 2
@@ -82,10 +91,15 @@ RV5-MERCK & CO. INC. | 2
 MENB-PFIZER\WYETH | 2
 HIBV-SANOFI PASTEUR | 1
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 1
+CHOL-UNKNOWN MANUFACTURER | 1
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+TDAP-UNKNOWN MANUFACTURER | 1
 ANTH-EMERGENT BIOSOLUTIONS | 1
 TYP-SANOFI PASTEUR | 1
+TD-UNKNOWN MANUFACTURER | 1
+HPVX-UNKNOWN MANUFACTURER | 1
+DTP-UNKNOWN MANUFACTURER | 1
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 1
 ADEN_4_7-TEVA PHARMACEUTICALS | 1
 HIBV-MERCK & CO. INC. | 1
@@ -94,6 +108,7 @@ MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 FLUN4-MEDIMMUNE VACCINES, INC. | 1
 PNC-PFIZER\WYETH | 1
 TYP-BERNA BIOTECH, LTD. | 1
+OPV-UNKNOWN MANUFACTURER | 1
 YF-SANOFI PASTEUR | 1
 ---
 # Total Deaths
@@ -120,7 +135,10 @@ Vax ID | Deaths
 COVID19-MODERNA | 1759
 COVID19-PFIZER\BIONTECH | 1590
 COVID19-JANSSEN | 223
+UNK-UNKNOWN MANUFACTURER | 29
+COVID19-UNKNOWN MANUFACTURER | 19
 FLU4-SANOFI PASTEUR | 8
+FLUX-UNKNOWN MANUFACTURER | 7
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 5
 PPV-MERCK & CO. INC. | 4
 VARZOS-MERCK & CO. INC. | 3
@@ -134,6 +152,7 @@ DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 HIBV-MERCK & CO. INC. | 1
 PNC13-PFIZER\WYETH | 1
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+PPV-UNKNOWN MANUFACTURER | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
@@ -187,11 +206,15 @@ Vax ID | Symptoms
 COVID19-MODERNA | 203281
 COVID19-PFIZER\BIONTECH | 176530
 COVID19-JANSSEN | 121278
+UNK-UNKNOWN MANUFACTURER | 981
+COVID19-UNKNOWN MANUFACTURER | 768
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 322
+FLUX-UNKNOWN MANUFACTURER | 216
 FLU4-SANOFI PASTEUR | 178
 VARZOS-MERCK & CO. INC. | 157
 PPV-MERCK & CO. INC. | 144
 MMR-MERCK & CO. INC. | 77
+HEP-UNKNOWN MANUFACTURER | 69
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 65
 PNC13-PFIZER\WYETH | 52
 FLUR4-PROTEIN SCIENCES CORPORATION | 46
@@ -199,7 +222,9 @@ VARCEL-MERCK & CO. INC. | 39
 FLUA4-SEQIRUS, INC. | 37
 HPV9-MERCK & CO. INC. | 35
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 30
+VARZOS-UNKNOWN MANUFACTURER | 27
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 27
+HPVX-UNKNOWN MANUFACTURER | 27
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 26
 MNQ-SANOFI PASTEUR | 25
 TDAP-SANOFI PASTEUR | 25
@@ -212,11 +237,16 @@ FLUC4-SEQIRUS, INC. | 15
 HIBV-SANOFI PASTEUR | 13
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 13
 HEPA-MERCK & CO. INC. | 13
+DT-UNKNOWN MANUFACTURER | 12
+OPV-UNKNOWN MANUFACTURER | 10
 YF-SANOFI PASTEUR | 10
 DTAPIPVHIB-SANOFI PASTEUR | 9
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 8
+TDAP-UNKNOWN MANUFACTURER | 8
+PPV-UNKNOWN MANUFACTURER | 8
 HEP-MERCK & CO. INC. | 7
 RV5-MERCK & CO. INC. | 7
+TTOX-UNKNOWN MANUFACTURER | 6
 DTAP-SANOFI PASTEUR | 6
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 6
 FLUN4-MEDIMMUNE VACCINES, INC. | 6
@@ -224,12 +254,16 @@ MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 5
 IPV-SANOFI PASTEUR | 5
 ANTH-EMERGENT BIOSOLUTIONS | 4
 TYP-SANOFI PASTEUR | 4
+TD-UNKNOWN MANUFACTURER | 3
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 3
 HIBV-MERCK & CO. INC. | 3
 TYP-BERNA BIOTECH, LTD. | 3
+DTAP-UNKNOWN MANUFACTURER | 2
+CHOL-UNKNOWN MANUFACTURER | 2
 ADEN_4_7-TEVA PHARMACEUTICALS | 2
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 PNC-PFIZER\WYETH | 2
+DTP-UNKNOWN MANUFACTURER | 1
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 1
 ---
