--- a/results/1994.md
+++ b/results/1994.md
@@ -55,44 +55,67 @@ RAB-PASTEUR MERIEUX INST. | 167
 HIBV-MERCK & CO. INC. | 156
 PPV-MERCK & CO. INC. | 143
 DTP-MICHIGAN DEPT PUB HLTH | 136
+DTP-UNKNOWN MANUFACTURER | 134
 TD-PFIZER\WYETH | 112
+FLUX-UNKNOWN MANUFACTURER | 110
 DTAP-PFIZER\WYETH | 98
 TYP-PFIZER\WYETH | 96
+OPV-UNKNOWN MANUFACTURER | 90
 DTP-MASS. PUB HLTH BIOL LAB | 84
 DT-CONNAUGHT LABORATORIES | 66
 TYP-BERNA BIOTECH, LTD. | 66
 DT-LEDERLE LABORATORIES | 61
+HIBV-UNKNOWN MANUFACTURER | 59
+HEP-UNKNOWN MANUFACTURER | 53
+MMR-UNKNOWN MANUFACTURER | 42
 RUB-MERCK & CO. INC. | 40
 YF-CONNAUGHT LABORATORIES | 39
 IPV-CONNAUGHT LTD. | 37
 MEA-MERCK & CO. INC. | 35
 TTOX-PFIZER\WYETH | 27
 IPV-PASTEUR MERIEUX INST. | 25
+TD-UNKNOWN MANUFACTURER | 23
 MEN-CONNAUGHT LABORATORIES | 22
 JEV-CONNAUGHT LABORATORIES | 21
 DT-PFIZER\WYETH | 19
+TTOX-UNKNOWN MANUFACTURER | 19
+DT-UNKNOWN MANUFACTURER | 19
 FLU3-MEDEVA PHARMA, LTD. | 18
 TTOX-BERNA BIOTECH, LTD. | 17
 TTOX-CONNAUGHT LABORATORIES | 16
+UNK-UNKNOWN MANUFACTURER | 13
+PPV-UNKNOWN MANUFACTURER | 13
 TD-MASS. PUB HLTH BIOL LAB | 12
+TYP-UNKNOWN MANUFACTURER | 11
 TTOX-LEDERLE LABORATORIES | 11
 MER-MERCK & CO. INC. | 10
 CHOL-PFIZER\WYETH | 9
 TD-MICHIGAN DEPT PUB HLTH | 7
 DT-MASS. PUB HLTH BIOL LAB | 6
 DT-MICHIGAN DEPT PUB HLTH | 6
+YF-UNKNOWN MANUFACTURER | 5
 RAB-MICHIGAN DEPT PUB HLTH | 5
+RAB-UNKNOWN MANUFACTURER | 4
+DTAP-UNKNOWN MANUFACTURER | 3
+MEN-UNKNOWN MANUFACTURER | 2
 FLU3-LEDERLE LABORATORIES | 2
 MU-MERCK & CO. INC. | 2
 HBPV-PFIZER\WYETH | 2
+IPV-UNKNOWN MANUFACTURER | 1
+CHOL-UNKNOWN MANUFACTURER | 1
 TTOX-MICHIGAN DEPT PUB HLTH | 1
+ADEN-UNKNOWN MANUFACTURER | 1
 PLAGUE-MILES LABORATORIES | 1
 TTOX-SCLAVO | 1
 TTOX-MASS. PUB HLTH BIOL LAB | 1
+PER-UNKNOWN MANUFACTURER | 1
 DTP-PFIZER\WYETH | 1
 MUR-MERCK & CO. INC. | 1
+HBPV-UNKNOWN MANUFACTURER | 1
+RUB-UNKNOWN MANUFACTURER | 1
 RAB-CONNAUGHT LTD. | 1
 HIBV-LEDERLE PRAXSIS | 1
+DTPHIB-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
@@ -122,6 +145,8 @@ DTPHIB-PFIZER\WYETH | 52
 DTP-CONNAUGHT LABORATORIES | 48
 DTP-LEDERLE LABORATORIES | 30
 HEP-SMITHKLINE BEECHAM | 22
+DTP-UNKNOWN MANUFACTURER | 18
+OPV-UNKNOWN MANUFACTURER | 11
 MMR-MERCK & CO. INC. | 10
 HIBV-MERCK & CO. INC. | 9
 HIBV-CONNAUGHT LABORATORIES | 9
@@ -132,15 +157,20 @@ DTP-MICHIGAN DEPT PUB HLTH | 5
 DTP-MASS. PUB HLTH BIOL LAB | 4
 PPV-PFIZER\WYETH | 4
 FLU3-PFIZER\WYETH | 4
+HEP-UNKNOWN MANUFACTURER | 4
 IPV-CONNAUGHT LTD. | 3
 DTAP-CONNAUGHT LABORATORIES | 2
+HIBV-UNKNOWN MANUFACTURER | 2
+TD-UNKNOWN MANUFACTURER | 1
 TD-CONNAUGHT LABORATORIES | 1
 IPV-PASTEUR MERIEUX INST. | 1
+PER-UNKNOWN MANUFACTURER | 1
 PPV-MERCK & CO. INC. | 1
 TD-LEDERLE LABORATORIES | 1
 RAB-PASTEUR MERIEUX INST. | 1
 MU-MERCK & CO. INC. | 1
 FLU3-MEDEVA PHARMA, LTD. | 1
+MMR-UNKNOWN MANUFACTURER | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
@@ -199,19 +229,28 @@ RAB-PASTEUR MERIEUX INST. | 539
 PPV-MERCK & CO. INC. | 530
 HIBV-MERCK & CO. INC. | 529
 DTP-MICHIGAN DEPT PUB HLTH | 467
+FLUX-UNKNOWN MANUFACTURER | 440
+DTP-UNKNOWN MANUFACTURER | 425
 TYP-PFIZER\WYETH | 406
 TD-PFIZER\WYETH | 393
+OPV-UNKNOWN MANUFACTURER | 324
 DTAP-PFIZER\WYETH | 292
 DTP-MASS. PUB HLTH BIOL LAB | 249
+HIBV-UNKNOWN MANUFACTURER | 217
 TYP-BERNA BIOTECH, LTD. | 216
 DT-CONNAUGHT LABORATORIES | 212
 DT-LEDERLE LABORATORIES | 209
+HEP-UNKNOWN MANUFACTURER | 192
+MMR-UNKNOWN MANUFACTURER | 170
 YF-CONNAUGHT LABORATORIES | 137
 RUB-MERCK & CO. INC. | 131
 IPV-CONNAUGHT LTD. | 108
+TD-UNKNOWN MANUFACTURER | 104
 MEA-MERCK & CO. INC. | 100
 IPV-PASTEUR MERIEUX INST. | 81
 TTOX-PFIZER\WYETH | 78
+TTOX-UNKNOWN MANUFACTURER | 78
+DT-UNKNOWN MANUFACTURER | 77
 MEN-CONNAUGHT LABORATORIES | 71
 FLU3-MEDEVA PHARMA, LTD. | 62
 DT-PFIZER\WYETH | 58
@@ -219,6 +258,9 @@ JEV-CONNAUGHT LABORATORIES | 57
 TTOX-BERNA BIOTECH, LTD. | 53
 TTOX-CONNAUGHT LABORATORIES | 51
 TD-MASS. PUB HLTH BIOL LAB | 49
+TYP-UNKNOWN MANUFACTURER | 47
+UNK-UNKNOWN MANUFACTURER | 43
+PPV-UNKNOWN MANUFACTURER | 43
 MER-MERCK & CO. INC. | 42
 TD-MICHIGAN DEPT PUB HLTH | 36
 CHOL-PFIZER\WYETH | 30
@@ -226,9 +268,18 @@ TTOX-LEDERLE LABORATORIES | 28
 DT-MASS. PUB HLTH BIOL LAB | 26
 DT-MICHIGAN DEPT PUB HLTH | 17
 RAB-MICHIGAN DEPT PUB HLTH | 17
+YF-UNKNOWN MANUFACTURER | 12
+RAB-UNKNOWN MANUFACTURER | 12
 PLAGUE-MILES LABORATORIES | 8
+HBPV-UNKNOWN MANUFACTURER | 8
+RUB-UNKNOWN MANUFACTURER | 8
 HBPV-PFIZER\WYETH | 8
+DTAP-UNKNOWN MANUFACTURER | 7
 MU-MERCK & CO. INC. | 7
+CHOL-UNKNOWN MANUFACTURER | 5
+MEN-UNKNOWN MANUFACTURER | 5
+IPV-UNKNOWN MANUFACTURER | 4
+ADEN-UNKNOWN MANUFACTURER | 4
 RAB-CONNAUGHT LTD. | 4
 FLU3-LEDERLE LABORATORIES | 3
 TTOX-MASS. PUB HLTH BIOL LAB | 3
@@ -236,5 +287,7 @@ MUR-MERCK & CO. INC. | 3
 TTOX-MICHIGAN DEPT PUB HLTH | 2
 TTOX-SCLAVO | 2
 HIBV-LEDERLE PRAXSIS | 2
+PER-UNKNOWN MANUFACTURER | 1
 DTP-PFIZER\WYETH | 1
+DTPHIB-UNKNOWN MANUFACTURER | 1
 ---
